--- a/_posts/2013-4-11-5-47000.md
+++ b/_posts/2013-4-11-5-47000.md
@@ -1,94 +1,95 @@
 ---
 layout: post
-title: 第四百七十节 婴儿们
+title: "Section 470: The Infants"
 category: 5
 path: 2013-4-11-5-47000.md
 tag: [normal]
 ---
 
-　　现在因为公费医疗，跟五道口搞得这么僵，又闹出这么大一个明显的责任事故状况，卫生部恐怕要“黄泥掉裤裆”了。
+Now, with the public healthcare system and the strained relationship with Wudaokou, and with such a major and obvious case of medical malpractice, the Ministry of Health was probably in deep trouble.
 
-　　看来得对这批即将到期的药品做一个全面的检查，看看有没有过期货混在里面。但是药品采购多样，来得渠道也比较多，不排除有不同批次药品混装的可能性。
+It seemed a comprehensive inspection of this batch of expiring drugs was necessary to see if any expired products were mixed in. However, the drug procurement was diverse, and the channels were numerous, so the possibility of different batches of drugs being mixed together could not be ruled out.
 
-　　他抽了半支雪茄，重新刷手。抢救还没结束呢。不过他决定要先检查下那支盐酸利多卡因的保质期。
+He smoked half a cigar and scrubbed his hands again. The rescue was not over yet. But he decided to first check the expiration date of that vial of lidocaine hydrochloride.
 
-　　艾贝贝从手术室出来之后，重新消毒换衣服，又进了产房，有四个产妇已经顺利分娩，包括骨盘窄小她认为可能会难产的产妇。这会儿她们都已经被推了出去。有一个因为羊水迟迟不破，做了人工破水，正在呼疼，艾贝贝亲自指导接生，很快接生出了一个健康的女婴，称了下，足足四公斤——破了本月的记录。
+After Ai Beibei came out of the operating room, she disinfected and changed her clothes again, and then went back to the delivery room. Four of the expectant mothers had already given birth smoothly, including the one with a narrow pelvis whom she thought might have a difficult delivery. They had all been wheeled out by now. One of them had her water broken artificially because it was not breaking on its own, and she was crying out in pain. Ai Beibei personally supervised the delivery and soon delivered a healthy baby girl, who weighed a full four kilograms—a record for the month.
 
-　　看来元老家庭的孩子营养就是好。艾贝贝想，产科接生的归化民职工的子女，超过3.5公斤的就是很不错的了。普遍在2.5公斤到3公斤之间。按照旧时空的标准，足月2500克的孩子是偏轻的，而这里甚至还有足月低于2.5公斤发育不良的孩子。
+It seemed that the children of the elder families were well-nourished. Ai Beibei thought that the children of the naturalized workers delivered by the obstetrics department were considered very good if they were over 3.5 kilograms. They were generally between 2.5 and 3 kilograms. According to the standards of the old world, a full-term baby of 2500 grams was on the light side, and here there were even full-term babies with developmental delays who weighed less than 2.5 kilograms.
 
-　　母亲和孩子营养不良的情况即使在收入稳定的归化民职工中还大量存在，更不用说更广大的普通百姓了——因为营养不良造成流产和死胎的现象普遍存在。看起来，改善人民生活是个任重道远的事情。
+Malnutrition among mothers and children was still widespread even among naturalized workers with stable incomes, not to mention the broader population—miscarriages and stillbirths due to malnutrition were common. It seemed that improving the people's livelihood was a long and arduous task.
 
-　　她仔细检查了一番，发觉没什么问题之后，签发了出生证和脚环标签，然后亲手将这个不可重复使用的标签被圈在婴儿的脚腕上——事关元老的血脉问题，不能马虎大意。
+She carefully examined the baby and, after finding no problems, issued a birth certificate and an ankle tag. She then personally attached the non-reusable tag to the baby's ankle—this was a matter of the elder's bloodline and could not be taken lightly.
 
-　　做完这一切。她换了衣服洗了手，往产科的住院部走去。
+After doing all this, she changed her clothes, washed her hands, and walked to the obstetrics inpatient department.
 
-　　产科的住院部和总医院的住院部是分开的。里面光线充足。高级病房在走廊一端，有独立的楼梯和出入门：专门接待女元老和元老的眷属们。分为单人房和双人间两种，除了办公厅统一派出的服务人员之外，不用家属陪护——就目前受过专业训练的护士紧缺情况来说不可能奢侈到全部使用护士陪护。现在探视时间还没有到，因而里面很安静。只是偶而有婴儿的哇哇哭声。
+The obstetrics inpatient department was separate from the main hospital's inpatient department. It was well-lit. The high-class wards were at one end of the corridor, with a separate staircase and entrance: exclusively for female elders and the families of elders. They were divided into single and double rooms. In addition to the service personnel sent by the General Office, no family members were needed to accompany them—given the current shortage of professionally trained nurses, it was impossible to afford the luxury of using nurses for all accompaniment. It was not yet visiting hours, so it was very quiet inside, with only the occasional cry of a baby.
 
-　　艾贝贝看到走廊里已经来了两个办公厅的办事人员，虽然戴着口罩，她还是认出一个正是办公厅的秘书[Li Yuanyuan][y007]，她手里拿着一个文件夹子：她们是来做元老子女登记的。
+Ai Beibei saw two staff members from the General Office in the corridor. Although they were wearing masks, she recognized one of them as the General Office's secretary, [Li Yuanyuan][y007]. She was holding a folder: they were here to register the children of the elders.
 
-　　按照办公厅的规定：每个元老子女出生之后24小时之内就要进行登记注册。艾贝贝知道这种登记十分的精密繁琐。不但有体重身高发色瞳孔色之类，还要拓取掌纹和脚纹存档。不用说昨天出生的几个孩子的小手小脚现在肯定是乌漆吗黑的，办公厅的女服务员多半正给他们擦洗呢。
+According to the regulations of the General Office, every child of an elder had to be registered within 24 hours of birth. Ai Beibei knew that this registration was extremely precise and cumbersome. Not only did it include weight, height, hair color, and pupil color, but it also required taking palm prints and footprints for the archives. Needless to say, the little hands and feet of the babies born yesterday were definitely black with ink, and the female service staff from the General Office were probably busy cleaning them.
 
-　　“怎么样？都登记好了吗？”
+"How is it? All registered?"
 
-　　“好了。”[Li Yuanyuan][y007]笑嘻嘻的说道，“小朋友真可爱！好想一个个都捏捏。”
+"All done," [Li Yuanyuan][y007] said with a grin. "The little ones are so cute! I just want to pinch each and every one of them."
 
-　　“这么可爱你自己赶快生一个。”艾贝贝笑着说。
+"If they're so cute, you should hurry up and have one yourself," Ai Beibei said with a smile.
 
-　　“我要生啊。你也可以再生几个嘛。”[Li Yuanyuan][y007]当仁不让，“给朵朵生个弟弟妹妹多好！”
+"I want to. You can have a few more too," [Li Yuanyuan][y007] said, not to be outdone. "It would be great to have a little brother or sister for Duoduo!"
 
-　　艾贝贝笑了笑。她实在没勇气在这么简陋的医疗条件下再生育几个孩子。作为一个旧时空的医学工作者，她知道即使在元老院的光辉下，他们欠缺的现代医学链条还是太多了。
+Ai Beibei smiled. She really didn't have the courage to have several more children in such primitive medical conditions. As a medical worker from the old world, she knew that even under the glorious light of the Senate, they were still missing too many links in the modern medical chain.
 
-　　即使那些被勉强补上的，也充满了瑕疵。
+Even those that had been勉强补上 were full of flaws.
 
-　　艾贝贝看了查房记录，又巡视了一遍病房。要护士们督促产妇们下床活动活动——她对中国传统的坐月子模式是嗤之以鼻的，要求除了剖宫产和做侧切术的产妇可以卧床休息之外，其他顺产妇每天都要起床活动。而且必须洗澡。
+Ai Beibei looked at the ward round records and then inspected the wards again. She urged the nurses to encourage the new mothers to get out of bed and move around—she was scornful of the traditional Chinese practice of "sitting the month" and required that all mothers who had a natural delivery get up and move around every day, except for those who had a cesarean section or an episiotomy. And they had to take a bath.
 
-　　接着她来到了婴儿室。婴儿室的走廊是用各种色调粉刷装饰起来的。这部分建筑在建造的时候就反映了要求宽敞、要求光线充足的新风尚。艾贝贝走近婴儿室，和往常一样，听见婴儿的啼哭声，有的用大嗓门放声嚎叫。有的用假嗓子哇哇地叫几声，时断时续。她走到这里总要停住脚步，向那有三面厚玻璃隔墙的婴儿室里张望张望，这已经成为习惯了。和往常一样，小床几乎都满了。产科的生意是一向如此兴旺的。她向那排得整整齐齐的小床看了一下。
+Next, she went to the nursery. The corridor of the nursery was decorated with various shades of paint. This part of the building reflected the new trend of spaciousness and ample light when it was built. As Ai Beibei approached the nursery, she heard the cries of babies, as usual. Some were wailing at the top of their lungs, while others were crying in a feigned, intermittent manner. She always stopped here to look into the nursery, which was separated by three thick glass walls. It had become a habit. As usual, the small beds were almost all full. The obstetrics department was always so busy. She glanced at the neatly arranged rows of small beds.
 
-　　小床上挂着蓝色标签的是男孩，挂着红色标签的是女孩，元老的孩子们并不单独标记——婴儿室里除了专门的护士和大夫之外，任何人都不许进去。
+Blue tags hung on the beds of the boys, and red tags on the beds of the girls. The children of the elders were not marked separately—no one was allowed into the nursery except for the dedicated nurses and doctors.
 
-　　一个女护士推着一辆藤编的手推车从走廊里经过，上面密密麻麻的排满了襁褓中的婴儿，一个个都在挥手蹬腿的哇哇哭着——这是刚刚从浴室里洗澡回来的孩子。
+A nurse pushed a wicker cart past in the corridor, filled with swaddled babies, all waving their arms and kicking their legs and crying—these were the babies who had just come back from their bath in the bathroom.
 
-　　“艾大夫好。”
+"Hello, Dr. Ai."
 
-　　“你好。”艾贝贝礼貌的回应着，仔细的观察了下每个孩子的神态。他们一个个都很健康，脸蛋红扑扑的，虽然体量偏小，但是看上去活力十足。
+"Hello," Ai Beibei responded politely, carefully observing the expression of each child. They were all very healthy, with rosy cheeks. Although they were on the small side, they looked full of vitality.
 
-　　在大婴儿室对面，还有一个小一点的婴儿室。那里边是安静的，是一个一个单独装在婴儿保温箱里的早产和不足份量的婴儿。
+Across from the large nursery, there was a smaller one. It was quiet in there, with premature and underweight babies in individual incubators.
 
-　　少于二十八周和体重太轻的孩子在目前的医疗条件下是很难救活的，他们带来的保温箱可以让二十八周以上的早产儿能够保住性命。
+Babies born before twenty-eight weeks and those who were too light were difficult to save with the current medical conditions. The incubators they had brought with them could save the lives of premature babies born after twenty-eight weeks.
 
-　　凡是进入早产婴儿室的人，对他们都一样要求：都要穿上消毒外衣，戴上口罩。婴儿室内部有空气调节、湿度控制。家属探视只能站在大玻璃板的外边往里看。
+Anyone entering the premature nursery was required to do the same: wear a sterile gown and a mask. The nursery had air conditioning and humidity control. Family members could only look in from outside the large glass panel.
 
-　　艾贝贝推门走了进去，里面还有一重玻璃将护士站和婴儿室隔离开。艾贝贝冲着值班护士点点头，隔着玻璃看了看她的最新病人：正是刚才时院长冒险剖宫产手术取出孩子，虽然他已经有了三十七周，已经可以算是足月了，但是为了慎重起见还是先放在保温箱里看看再说。
+Ai Beibei pushed the door open and went in. There was another layer of glass separating the nurses' station from the nursery. Ai Beibei nodded to the nurse on duty and looked at her newest patient through the glass: it was the child that Dean Shi had just delivered by a risky cesarean section. Although he was already thirty-seven weeks old and could be considered full-term, they decided to put him in an incubator for observation just to be safe.
 
-　　“新来的小家伙怎么样？”
+"How's the new little guy?"
 
-　　“哭得很有力，已经给他喂过葡萄糖水了。”护士说，“要用人工喂养吗？”
+"He's crying very loudly. We've already given him some glucose water," the nurse said. "Should we use artificial feeding?"
 
-　　“对，人工喂养。”艾贝贝说，“他应该是没什么问题，观察二天，没问题再转到普通婴儿室去。”
+"Yes, artificial feeding," Ai Beibei said. "He should be fine. Observe him for two days, and if there are no problems, transfer him to the regular nursery."
 
-　　她随后和往常一样，很有次序地写下医嘱。
+She then wrote down the doctor's orders in an orderly manner, as usual.
 
-　　走出去的时候，有个护士带着一个穿着消毒隔离衣的人从走廊里过来，从他笨拙的样子和畏畏缩缩的神态她知道这一定是个归化民。从他粗壮的手脚，宽厚的肩膀来看，应该是重体力工人。
+As she was leaving, a nurse came down the corridor with a person wearing a sterile isolation gown. From his clumsy movements and timid demeanor, she knew he must be a naturalized citizen. From his sturdy hands and feet and broad shoulders, he was probably a heavy manual laborer.
 
-　　那个护士带着他走到大玻璃窗外，然后里面的护士指了指那一排保温箱中的一个，好让他们往里看。
+The nurse led him to the large glass window, and then the nurse inside pointed to one of the incubators in the row, so they could look inside.
 
-　　“这个男孩子就是你的儿子。”
+"This little boy is your son."
 
-　　男人瞪大了眼睛看着这个睡在玻璃箱子里的小婴儿，似乎难以置信这个皱巴巴，红通通，像个小老头一样的婴儿和自己有什么关系。
+The man stared wide-eyed at the tiny baby sleeping in the glass box, as if he couldn't believe that this wrinkled, reddish, little old man-like baby had anything to do with him.
 
-　　“他……为啥睡在玻璃箱子里？”陆寿永结结巴巴的问，别看他摆弄铁锤和钳子十分灵巧，指挥班组劳动更是如使指臂，但是现在站在这个一进来就让他感觉干净的手脚没处放地方，顿时觉得话都不会说了。
+"He... why is he sleeping in a glass box?" Lu Shouyong stammered. Don't be fooled by how nimble he was with a hammer and tongs, or how he commanded his work team like an extension of his own limbs. But now, standing in this place that made him feel like he had nowhere to put his clean hands and feet, he suddenly felt like he couldn't even speak properly.
 
-　　陆寿永刚刚下班，一下班就接到了他老婆难产的消息，陆寿永顿时慌了手脚，不但他慌了手脚，连带他爹陆有天都慌了神：临高这地方别的都不稀罕，唯独最缺女人，特别是能娶来当媳妇的年轻女人那更是少之又少。要不是陆寿永是造船厂的技术骨干，他爹又是铁工车间的领班工匠，陆寿永是很难娶到这么一个合适称心老婆的：虽然年龄大些，但是好歹是大姑娘，又在服装厂里做工，收入也不错。
+Lu Shouyong had just gotten off work when he received the news that his wife was having a difficult labor. Lu Shouyong was instantly flustered. Not only was he flustered, but his father, Lu Youtian, was also in a panic. In Lingao, nothing was rare except for women, especially young women who could be married as wives. If it weren't for the fact that Lu Shouyong was a key technical worker at the shipyard and his father was the foreman of the ironworking workshop, it would have been very difficult for Lu Shouyong to marry such a suitable and satisfactory wife. Although she was a bit older, she was at least a maiden, worked in the clothing factory, and had a good income.
 
-　　古代社会的难产，往往是一尸两命的结果。对普通百姓来说不啻于一场灾难。
+In ancient society, a difficult labor often resulted in the death of both mother and child. For ordinary people, it was nothing short of a disaster.
 
-　　“不要紧，他是破腹产取出来的，为了以防万一才放进去的，”护士说，“很壮实的男孩子。”
+"It's alright, he was delivered by cesarean section. We put him in here just in case," the nurse said. "He's a very strong little boy."
 
-　　“什么？破腹产！！！”陆寿永的脸都白了——他可不是文盲，大概知道这三个字怎么写，活生生的把肚子剖开把孩子取出来，那老婆还能活吗？“我老婆……她……怎么样……”他着急的舌头都打结了——没了娘的孩子，他一个大男怎么人养得活？
+"What? Cesarean section!!!" Lu Shouyong's face turned pale—he was not illiterate and roughly knew how to write those three words. To cut open a living person's stomach and take out the child, could his wife still be alive? "My wife... she... how is she..." He was so anxious that his tongue was tied—a child without a mother, how could a big man like him raise him?
 
-　　“你不要着急，”护士安慰他，“元老大夫们正在帮她治病呢，你老婆这次是九死一生，不过有元老大夫在，你就放心吧！”
+"Don't worry," the nurse comforted him. "The elder doctors are helping her. Your wife has had a narrow escape this time, but with the elder doctors here, you can rest assured!"
 
-　　艾贝贝回到手术室，元老医生们轮流当班，调整着病人的体内环境，继续头部冰帽重点降温，维持肛温33-31℃之间，间断使用利尿药，定时血生化检查，维护水电解质量酸碱平衡，并进行各种针对性诊治。经历如此坚持不松懈的抢救，历经十余小时不离开手术台的奋战，抽搐逐步停止，并开始滴第一滴尿，并尿量逐渐增多。
+Ai Beibei returned to the operating room. The elder doctors were taking turns on duty, adjusting the patient's internal environment, continuing to cool her head with an ice cap, maintaining her rectal temperature between 33-31°C, intermittently using diuretics, regularly checking her blood chemistry, maintaining her water-electrolyte and acid-base balance, and carrying out various targeted treatments. After such persistent and unremitting rescue efforts, and after more than ten hours of fighting without leaving the operating table, the convulsions gradually stopped, and she began to drip the first drop of urine, and the urine output gradually increased.
 
-　　大家欣喜若狂。继后，病人意识渐渐恢复，自动睁眼，并达到不能耐受气管插管而示意要求拔管的地步。拔管后，病人已能初步听懂指令，脑复苏取得满意效果，病人生命获救。
+Everyone was ecstatic. Subsequently, the patient's consciousness gradually recovered, she opened her eyes automatically, and reached the point where she could not tolerate the tracheal intubation and signaled to have it removed. After the tube was removed, the patient was able to understand simple commands, the brain resuscitation was satisfactory, and the patient's life was saved.
+
 [y007]: /characters/y007 "Li Yuanyuan"
