--- a/_posts/2013-4-12-5-47100.md
+++ b/_posts/2013-4-12-5-47100.md
@@ -1,65 +1,65 @@
 ---
 layout: post
-title: 第四百七十一节 选择性的治疗
+title: "Section 471: Selective Treatment"
 category: 5
 path: 2013-4-12-5-47100.md
 tag: [normal]
 ---
 
-　　虽然预后不详，但是时袅仁还是代表卫生部，将病人苏醒的消息告诉了守候在门外表情复杂的陆寿永。
+Although the prognosis was uncertain, Shi Niaoren, on behalf of the Ministry of Health, still informed the anxiously waiting Lu Shouyong of the news that the patient had regained consciousness.
 
-　　听说自己老婆已经转危为安，陆寿永终于松了一口气——有钱人家升官发财死老婆是喜事，对平民小户来说可是灾难性打击，为了娶这个老婆加上买房子，他和他爹在造船厂几年的积蓄都花光了
+Upon hearing that his wife was out of danger, Lu Shouyong finally breathed a sigh of relief. For the wealthy, the death of a wife after a promotion and fortune was a joyous occasion, but for a humble family, it was a catastrophic blow. To marry this wife and buy a house, he and his father had spent all their savings from several years at the shipyard.
 
-　　对着“首长”的救命之恩感激涕零之余，不免心中还是忐忑，毕竟老婆要“住院一个月”，这孩子怎么照顾就成了很大的问题，毕竟还牵扯到哺乳的问题。
+Overwhelmed with gratitude for the "chief's" life-saving grace, he couldn't help but feel uneasy. After all, his wife had to be "hospitalized for a month," and how to take care of the child became a major problem, especially since it also involved breastfeeding.
 
-　　幸好艾贝贝对这方面的也有考虑，表示可以让孩子继续住在婴儿室里，由护士进行人工喂养，直到孩子的母亲病愈出院为止。
+Fortunately, Ai Beibei had also considered this and said that the child could continue to stay in the nursery and be artificially fed by the nurses until the mother recovered and was discharged from the hospital.
 
-　　“你先去办下手续，再回去一趟，把母亲和孩子的衣服和物品再带些过来。还有你的医疗证——现在你孩子要住院，得夫妻两个人的证。”
+"First, go and complete the procedures, then go back and bring some more clothes and items for the mother and child. And your medical certificate—now that your child is hospitalized, you need both of your certificates."
 
-　　“是，是，我这就去取！谢谢首长的大恩大德！”陆寿永感激的不知道说啥好，顾不得“违礼”，顿时跪下来就要磕头。
+"Yes, yes, I'll go get them right away! Thank you, chief, for your great kindness!" Lu Shouyong was so grateful he didn't know what to say. Disregarding the "breach of etiquette," he immediately knelt down to kowtow.
 
-　　艾贝贝好不容易才摆脱了情绪大起大落，最后又惊又喜到有点半疯癫的陆寿永的“感激”，回到自己的办公室里。
+Ai Beibei finally managed to escape the emotional rollercoaster of Lu Shouyong, who was now half-crazed with a mixture of shock and joy, and returned to her office.
 
-　　她浑身酸痛，但是今天的事情还没完，她还是儿科主任——这职务让她压力沉重，儿科学她虽在大学学习过，却从未在儿科上过一天班，论到儿科经验不如在医学各个科室都打过转的护士张子怡丰富。
+She was sore all over, but her work for the day was not yet finished. She was also the director of the pediatrics department—a position that weighed heavily on her. Although she had studied pediatrics in university, she had never worked a single day in the field. In terms of pediatric experience, she was not as rich as the nurse Zhang Ziyi, who had rotated through various medical departments.
 
-　　而且艾贝贝的心肠软。见不得孩子遭罪。“第三门诊部”的儿科除了要治疗元老和归化民的子女之外，还要负责检疫营地里的儿童，特别是大量收容来的孤儿的治疗保健工作。这些孩子大都长期处于营养不良的状态。免疫抵抗力极差，很容易因为一些很小的疾病就宣告不治。
+Moreover, Ai Beibei had a soft heart. She couldn't bear to see children suffer. The pediatrics department of the "Third Outpatient Clinic" not only had to treat the children of the elders and naturalized citizens, but also had to be responsible for the treatment and healthcare of the children in the quarantine camps, especially the large number of orphans who had been taken in. Most of these children were in a state of long-term malnutrition, with extremely poor immune resistance, and could easily die from some very minor illnesses.
 
-　　一般的内外科疾病，以目前元老院的医疗卫生水平大多能够进行一定程度的治疗，有的虽无法治愈，起码也能起到一定的缓解作用。在妇幼保健上也有质的飞跃，特别是一批疫苗的制备，更是给许多幼儿期致命的流行性传染病提供了有效的防治手段。临高本地的幼儿天花感染率。在他们大力推广牛痘接种之后一下就跌到了不足千分之二的水平。大幅度降低了死亡率。
+With the current medical and health standards of the Senate, most general internal and surgical diseases could be treated to a certain extent. Some could not be cured, but at least some relief could be provided. There had also been a qualitative leap in maternal and child healthcare, especially the preparation of a batch of vaccines, which provided effective prevention and treatment for many fatal epidemic infectious diseases in early childhood. The smallpox infection rate among local children in Lingao had dropped to less than two per thousand after their vigorous promotion of cowpox vaccination, significantly reducing the mortality rate.
 
-　　但是儿科的治疗不同于成人，特别是新生儿和幼儿，器官功能发育不全。用药需要十分谨慎，而且目前卫生部的制造厂制造的药品和疫苗，限于技术水平，纯度都有问题。很多时候只能死马当活马医：总之。儿科的死亡率是很高的。这让她在感情上一直很难接受。
+However, the treatment of children was different from that of adults, especially newborns and young children, whose organ functions were not fully developed. Medication needed to be used with great caution. Moreover, the drugs and vaccines produced by the Ministry of Health's manufacturing plant had purity problems due to technical limitations. Many times, they could only treat a dead horse as a living one. In short, the mortality rate in pediatrics was very high, which she had always found difficult to accept emotionally.
 
-　　这几天儿科就有个归化民的孩子，有严重的呼吸道感染，用制造厂制造的抗生素治疗多日无效，艾贝贝知道如果不能给他使用旧时空带来的消炎药的话恐怕他是活不下去了。虽然现在许多消炎药已经不再是“一级管控物资”，但是具体到给归化民使用的时候还是需要时院长批准才行。艾贝贝摇了摇头，她之所以不愿意再生个孩子，就是觉得这样的区别待遇的选择实在太现实也太残酷了。
+In the past few days, there was a child of a naturalized citizen in the pediatrics department who had a severe respiratory infection. Treatment with the antibiotics produced by the manufacturing plant had been ineffective for many days. Ai Beibei knew that if she couldn't use the anti-inflammatory drugs brought from the old world, he probably wouldn't survive. Although many anti-inflammatory drugs were no longer "level-one controlled substances," their use on naturalized citizens still required the approval of Dean Shi. Ai Beibei shook her head. The reason she was reluctant to have another child was that she found the choice of such differential treatment too realistic and too cruel.
 
-　　不管怎么样，今天先拍个片子看看吧——拍片的权力她还是有得。看片子的严重程度再考虑是否申请用药。
+In any case, she would take a film today first—she still had the authority to order a film. She would consider whether to apply for the use of drugs based on the severity of the film.
 
-　　第二天清晨。终于睡了一个囫囵觉的时袅仁草草吃过早饭，就跑去查看了陆寿永老婆的的情况。虽然她思维有些迟钝。卧床不能下地，但记忆基本没有受到影响，能够回答时袅仁和家人的问话，还主动要求看孩子，时袅仁关照从婴儿室把孩子送来，让她抱了抱新生的儿子。
+The next morning, after finally getting a full night's sleep, Shi Niaoren hastily ate breakfast and went to check on Lu Shouyong's wife. Although her thinking was a bit slow and she was bedridden, her memory was basically unaffected. She could answer the questions of Shi Niaoren and her family, and even took the initiative to ask to see the child. Shi Niaoren arranged for the child to be brought from the nursery and let her hold her newborn son.
 
-　　总护士长张子怡亲自为她插管后的创口换药后，时院长又把中医药科主任刘三叫到病房，为她扎了据称有醒脑安神作用的针灸，同时叮嘱下刘三，要为病人开些能够营养神经的药物和补品，这才离开病房，回到医院一侧阔别已久的卫生部办公室。
+After the head nurse, Zhang Ziyi, personally changed the dressing for her intubation wound, Dean Shi called Liu San, the director of the traditional Chinese medicine department, to the ward to give her acupuncture, which was said to have the effect of clearing the mind and calming the nerves. At the same time, he instructed Liu San to prescribe some drugs and supplements that could nourish the nerves. Only then did he leave the ward and return to his long-abandoned office in the Ministry of Health on the side of the hospital.
 
-　　时袅仁自从当了部长兼院长，行政事务就如同雪崩一般的堆到他的头上——而且雪崩的规模一个月大过一个月。这几天因为医务繁忙，连着做了几台手术，又去会诊加上课，文牍便堆积起来。此时部长的巨大办公桌上，各类文件已堆积如山。
+Ever since Shi Niaoren became the minister and dean, administrative affairs had piled up on him like an avalanche—and the scale of the avalanche was getting bigger every month. In the past few days, due to his busy medical work, he had performed several operations in a row, attended consultations, and taught classes, so the paperwork had piled up. At this time, the minister's huge desk was piled high with all kinds of documents.
 
-　　文件经过时袅仁直属的卫生部秘书和总医院秘书整理过，分门别类倒是堆放的井井有条，但是时袅仁知道自己光是把这些文件全部签字盖章就够他得腱鞘炎的，更别说看一遍了。
+The documents had been sorted by Shi Niaoren's personal secretary at the Ministry of Health and the secretary of the general hospital. They were neatly stacked in categories, but Shi Niaoren knew that just signing and stamping all these documents would be enough to give him tenosynovitis, let alone reading them all.
 
-　　但是不看又不行，天知道邓铂鋆科长又在里面塞了什么私货，此人干这类暗渡陈仓事情最为拿手，时袅仁不得不对此多加警惕。
+But he had to read them. Who knew what kind of private goods Director Deng Bofang had stuffed inside? This person was the most adept at such clandestine maneuvers, and Shi Niaoren had to be extra vigilant.
 
-　　时部长在办公桌前坐了一会，痛苦的抬起了头，要去取第一份文件却见张子怡推门进来。
+Minister Shi sat at his desk for a while, then raised his head in agony. He was about to reach for the first document when Zhang Ziyi pushed the door open and came in.
 
-　　张子怡手持一张X光平片，递给时袅仁：“时院长，这有张片子，艾大夫想请你看看。”。
+Zhang Ziyi held an X-ray film and handed it to Shi Niaoren. "Dean Shi, here's a film. Dr. Ai would like you to take a look at it."
 
-　　时袅仁转身找了太阳，举起片子，对着太阳读片。光线不理想，只能凑合着看：“透亮度降低，质密——斑片状阴影，肺尖好像有钝化……记得以后在我办公室里装个阅片灯，不在阅片室看不清……小叶性肺炎就好，可别是肺不张……”
+Shi Niaoren turned to find the sun, held up the film, and read it against the sun. The light was not ideal, so he could only make do. "Reduced transparency, dense—patchy shadows, the apex of the lung seems to be blunted... Remember to install a film viewer in my office in the future. I can't see clearly outside the film reading room... Lobular pneumonia would be good, but I hope it's not atelectasis..."
 
-　　“像孩子的片子？哪位元老公子的？”
+"Looks like a child's film? Which elder's son is it?"
 
-　　张子怡回答到：“不，是归化民的孩子，1周岁3个月，发热1个余月伴咳嗽，入院时体格检查示精神欠佳，双肺呼吸音粗，闻少许及湿罗音，肝肋下约2.5cm，在院磺胺治疗效果差。昨天出现双下肢水肿，艾贝贝大夫决定拍张X光片看看，这不除了支气管肺炎，还确诊了双侧胸腔积液、叶间积液。”
+Zhang Ziyi replied, "No, it's the child of a naturalized citizen, 1 year and 3 months old, with a fever for more than a month accompanied by a cough. On admission, the physical examination showed poor spirits, coarse breath sounds in both lungs, a few moist rales, and the liver was about 2.5 cm below the ribs. The effect of sulfanilamide treatment in the hospital was poor. Yesterday, edema appeared in both lower limbs. Dr. Ai Beibei decided to take an X-ray to see. Not only was bronchopneumonia confirmed, but also bilateral pleural effusion and interlobar effusion."
 
-　　时袅仁听了眉头微皱：“不是说了射线管还不知道哪辈子山寨出来，不是元老和家属的话都要慎重签字使用……”说到这里他随即又换了副笑脸：“哈哈，虽然我们传染科医生在美国可以在电视剧《庸医房大夫》里当万金油大夫使，但还是有不熟悉的病情啊哈哈……其实小婴儿呼吸道局部免疫不完善，对呼吸道炎症的局限能力差，动不动就小叶性肺炎了。这阶段的孩子气道直径相对较小、粘膜组织丰富、分泌腺旺盛，呼吸道感染后易导致小气道阻塞，所以容易出现哮鸣音……婴儿肺的代偿能力不足，加上膈肌易疲劳，肺部炎症后易发生呼吸衰竭，由于多数肺炎伴有支气炎症及堵塞，所以主要表现为II型呼吸衰竭……你们护理的时候要注意保持病人呼吸道通畅，清除呼吸道分泌物，翻身拍背，解除气道痉挛……”
+Shi Niaoren frowned slightly. "Didn't I say that we don't know when we'll be able to replicate the X-ray tube, and that we should be cautious about signing off on its use for anyone other than the elders and their families..." He then changed his tone and smiled. "Haha, although we infectious disease doctors in the United States can be all-purpose doctors in the TV series *House*, there are still conditions we are not familiar with, haha... In fact, the local immunity of the respiratory tract of infants is not perfect, and their ability to localize respiratory inflammation is poor, so they are prone to lobular pneumonia. At this stage, the airway diameter of children is relatively small, the mucous membrane tissue is rich, and the secretory glands are vigorous. After respiratory infection, it is easy to cause small airway obstruction, so wheezing is common... The compensatory ability of the infant's lungs is insufficient, and the diaphragm is easily fatigued. Respiratory failure is prone to occur after pulmonary inflammation. Since most pneumonia is accompanied by bronchial inflammation and obstruction, it mainly manifests as type II respiratory failure... When you are nursing, you must pay attention to keeping the patient's airway open, clearing respiratory secretions, turning over and patting the back, and relieving airway spasm..."
 
-　　时袅仁打了一轮太极拳，总算把张子怡给糊弄走了——艾贝贝打发她来干什么他很清楚，不过他实在下不了决心，就算这快到期的抗生素也是越来越少了……
+Shi Niaoren beat around the bush for a while and finally managed to fool Zhang Ziyi away. He knew very well why Ai Beibei had sent her, but he really couldn't make up his mind. Even the supply of these expiring antibiotics was dwindling...
 
-　　他刚开始处理了几份文件，忽然门猛得被推开了，进来的正是气冲冲的艾贝贝。
+He had just started to deal with a few documents when the door was suddenly pushed open. It was the furious Ai Beibei.
 
-　　“哎呀，艾大夫，有什么事吗？”时袅仁见势不妙，赶紧做出一副百忙之中不忘同志友情的笑容。
+"Oh, Dr. Ai, what's the matter?" Seeing that the situation was not good, Shi Niaoren quickly put on a smile that showed he had not forgotten his comradely friendship despite his busy schedule.
 
-　　艾贝贝正色道：“老时，病人的下肢浮肿是在接受多天磺胺治疗之后出现的，说明病情在加重，以至于出现了心源性双下肢水肿。难道你不提一提升级抗生素么？至于这张片子，虽说暂时化工部还拿不出底片，但是赛璐珞和银盐感光材料在上次的企划院通气会上也说了，都是近期可以自制的东西——这说明办法总是比办法多的，早晚我们也能造出射线管，你何必对忠于我们的归化民这么小气呢？刘大霖那个不识稼穑的剥削阶级老爷，你又是送医又是送药的，还把张子怡派去照顾了这么多天，现在普通民众需要治疗，你怎么就一毛不拔了呢？”
+Ai Beibei said with a serious face, "Old Shi, the patient's lower limb edema appeared after several days of sulfanilamide treatment, which shows that the condition is worsening, to the point where cardiogenic bilateral lower limb edema has appeared. Aren't you going to suggest upgrading the antibiotics? As for this film, although the chemical department can't produce the negatives for now, celluloid and silver salt photosensitive materials were mentioned at the last Planning Institute briefing as things that can be self-produced in the near future—this shows that there are always more solutions than problems. Sooner or later, we will be able to build our own X-ray tubes. Why are you so stingy with the naturalized citizens who are loyal to us? That Liu Dalin, that exploiting class master who doesn't know the difference between grains, you sent him doctors and medicine, and even sent Zhang Ziyi to take care of him for so many days. Now that the common people need treatment, why are you so unwilling to part with a single hair?"
 
-　　时袅仁面子上有些挂不住了：“刘大霖那是执委会，嗯，元老院的指示……小艾啊，其实我也是个人权分子，想在符有地那里用我们的临床实验基地试验杀人机器的军武宅被我骂跑多少了？但是你要知道，人权这东西不是天赋的，是随着社会发展而不断发展的。我们穿越前的法律和政府工作报告说，我们都享有基本医疗，穿越过来之后，生产力水平降了，当年享受的基本医疗待遇现在不也没了么？现在我们卫生部不正在拼命的争取全民公费医疗吗？当然，目前条件还不是很成熟，依我的观点，现在咱们三个月一期培养的赤脚医生就是量产庸医，好歹在有了甲种文凭之后，系统的学习两年，有了中专文化；再在我们的带领下接受两年临床培训，有了六、七十年代县级庸医的水平，才好意思出门啊！但是现在培养他们，对基层医疗就是能够起到填补空白的贡献，就是能在历史发展过程起到不可或缺的作用……反正本位面的土著也习惯儿童早夭了……”
+Shi Niaoren was a little embarrassed. "Liu Dalin was an instruction from the Executive Committee, um, the Senate... Little Ai, I'm actually a human rights activist myself. How many of those military geeks who want to use our clinical trial base in Fuyou to test their killing machines have I scolded away? But you have to know that human rights are not innate; they develop with the development of society. Before we transmigrated, the law and the government work report said that we all enjoyed basic medical care. After we transmigrated, the level of productivity dropped, and the basic medical treatment we enjoyed back then is gone now, isn't it? Isn't our Ministry of Health now desperately fighting for universal public medical care? Of course, the conditions are not yet mature. In my opinion, the barefoot doctors we are training in three-month batches are just mass-produced quacks. At least after they get a Class A diploma, they should study systematically for two years and have a secondary school education; then, under our guidance, they should receive two years of clinical training and reach the level of a county-level quack in the 60s and 70s before they can be considered presentable! But training them now can fill the gap in grassroots medical care and play an indispensable role in the course of historical development... Anyway, the natives in this world are used to children dying young..."
