--- a/_posts/2013-4-13-5-47200.md
+++ b/_posts/2013-4-13-5-47200.md
@@ -1,54 +1,55 @@
 ---
 layout: post
-title: 第四百七十二节 争论
+title: "Section 472: The Debate"
 category: 5
 path: 2013-4-13-5-47200.md
 tag: [normal]
 ---
 
-　　艾贝贝听到这话冷笑道：“部长大人，我不是对之前照顾刘大霖有意见，也认同现在培养的赤脚大夫，搞职工公费医疗。但是这和我说的事情有关系吗？你别打太极拳。我就是问你一句话：从原位面带来的抗生素，你给不给这个孩子用！我知道你的难处，你可以笑话我多愁善感，你也可以笑话我是不着边际的‘普世派’！今天我来找你，就是出于我也是位女人，也是个妈妈，也有普通女人天生的母性！我每天看见这位孩子的妈妈对我们每一个人毕恭毕敬，每天抢着帮工人打扫病房卫生，努力学习护理知识，帮孩子拍背，就是为了让孩子多得到些照顾，早些好起来！我很心痛！你确实一直是个关爱人权的人，但是人是会变的！但请你在变成一个只关注汇报总结和统计报表的老爷的时候，仔细想想，我们为什么要到这里来！虽然我们都想过当千秋万代的贵族老爷，但是我们穿越到这里，为的不是让世界实现一个比原位面更美好的可能么？我不认同很多人的目标，就是在未来形成一个森严等级的阶级社会，靠底层的贫穷无知，用三瓜俩枣统驭，我们处在这样的顶端。如果那样，我们付出的努力又是为了什么！今天你淡漠归化民，明天就会淡漠无职无权的元老！只当你成为老爷，迟早会被愤怒的底层反对！推翻！”
+Ai Beibei sneered at these words. "Minister, I'm not objecting to the care given to Liu Dalin before, and I also agree with the current training of barefoot doctors and the implementation of public medical care for employees. But does this have anything to do with what I'm talking about? Don't beat around the bush. I'm just asking you one question: will you give this child the antibiotics brought from the original world or not? I know your difficulties, you can laugh at me for being sentimental, you can also laugh at me for being an unrealistic 'universalist'! I came to you today because I am also a woman, a mother, and I have the natural maternal instinct of an ordinary woman! Every day I see this child's mother being respectful to every one of us, rushing to help the workers clean the ward, striving to learn nursing knowledge, and patting the child's back, all just to get the child a little more care and get better sooner! My heart aches! You have indeed always been a person who cares about human rights, but people change! But please, when you become a master who only pays attention to reports, summaries, and statistical charts, think carefully about why we came here! Although we have all thought about being aristocratic masters for generations, didn't we transmigrate here to make the world a better possibility than the original world? I don't agree with the goal of many people, which is to form a rigidly hierarchical class society in the future, relying on the poverty and ignorance of the lower class, and ruling with a few trifles, while we are at the top. If so, what is the purpose of our efforts! Today you are indifferent to the naturalized citizens, tomorrow you will be indifferent to the powerless elders! When you become a master, you will sooner or later be opposed by the angry lower class! Overthrown!"
 
-　　艾贝贝说过这些话，因为激动。面色潮红，大口的喘着粗气，皱眉瞪着时袅仁。时袅仁不知所措。站在办公桌后，尴尬的不知道说啥好，
+After Ai Beibei said these words, her face was flushed from excitement, and she was panting heavily, frowning and glaring at Shi Niaoren. Shi Niaoren was at a loss. Standing behind his desk, he was awkwardly at a loss for words.
 
-　　正在这时，门又被推开了。卫生部办公室主任兼百仞总医院医务科科长邓铂鋆脸上堆笑，不顾此时的尴尬气氛，边和时、艾两人打招呼，边走进来。直奔时部长的办公桌，从那堆文件中翻出一份，对时袅仁说：“部长。这是好些天前就送来的法规，关于女职工经期、孕产期和哺乳期‘三期’保健的，该签署了吧！”
+Just then, the door was pushed open again. Deng Bofang, the director of the Ministry of Health's office and the head of the medical affairs department of Bairen General Hospital, came in with a smile on his face. Ignoring the awkward atmosphere, he greeted Shi and Ai as he walked in. He went straight to Minister Shi's desk, found a document from the pile, and said to Shi Niaoren, "Minister, this is a regulation that was sent over many days ago, regarding the 'three periods' of health care for female employees: menstruation, pregnancy and childbirth, and lactation. It's time to sign it!"
 
-　　时袅仁瞪了邓铂鋆一眼：“又来这套，不是说我会客的时候。不许进来要求签字么！”
+Shi Niaoren glared at Deng Bofang. "This again? Didn't I say that when I have guests, you are not allowed to come in and ask for signatures!"
 
-　　邓铂鋆陪笑说：“部长。这东西弄得不容易啊，想想我们夹在企划院、民政人民委员会、土著权益保护委员会还有妇联之间受了多少气啊！昨天杜雯刚从济州岛回来就到卫生部来骂街：说您再不签署这份‘充斥着统治阶级虚伪本性’的法规，她作为牵头单位，就要让这部法规的制定砍掉重练。咱们可别吃二遍苦，受二茬罪啊！”
+Deng Bofang said with a smile, "Minister, this thing was not easy to get done. Think about how much grief we have endured between the Planning Institute, the People's Committee for Civil Affairs, the Committee for the Protection of the Rights and Interests of the Natives, and the Women's Federation! Yesterday, Du Wen came back from Jeju Island and came to the Ministry of Health to curse: she said that if you don't sign this regulation, which is 'full of the hypocritical nature of the ruling class,' she, as the lead unit, will have the formulation of this regulation cut and redone. We can't suffer twice and be punished twice!"
 
-　　时袅仁知道这份原本由妇联起草的法规折腾了大半年才算是定稿，因为“三期”保健牵扯到用工效率问题，而原稿完全是照抄旧时空的制度，因而遭到了企划院和制造总监部等多个部门的激烈反对——要是这么执行的话。女职工的年可使用工时就会缩水，这对目前严重缺乏劳动力。特别是熟练劳动力的工矿业和机关来说是很大的一个数字。
+Shi Niaoren knew that this regulation, originally drafted by the Women's Federation, had been tossed around for more than half a year before it was finalized. Because the "three periods" of health care involved the issue of labor efficiency, and the original draft was a complete copy of the system of the old world, it was fiercely opposed by several departments, including the Planning Institute and the General Manufacturing Supervision Department. If it were to be implemented in this way, the annual available working hours of female employees would shrink, which would be a huge number for the industrial and mining industries and government agencies that were currently severely lacking in labor, especially skilled labor.
 
-　　而且企划院还有其他担心：他们大量输入的女性移民中，育龄妇女占据的比例很高，她们很快就能缓解目前临高等地男多女少，难以成家的局面。但是这么一来，马上就会有一个更大规模的婴儿潮出现。大量女职工集中孕育哺乳，对生产力的影响极大。因而企划院希望尽可能小的缩小负面影响。
+Moreover, the Planning Institute had other concerns: among the large number of female immigrants they had imported, the proportion of women of childbearing age was very high. They could quickly alleviate the current situation in Lingao and other places where there were more men than women and it was difficult to start a family. But in this way, a larger baby boom would soon appear. A large number of female employees would be concentrated in pregnancy and lactation, which would have a great impact on productivity. Therefore, the Planning Institute hoped to minimize the negative impact as much as possible.
 
-　　在经过几个月的走马灯一般的磋商、辩论、骂街和私下交易之后，最终终于定稿。当然各方面都不甚满意。作为卫生部来说，当然是很赞成搞这样一部法规的，但是由于经期有无必要休假，产假是42天还是4个月，孕妇能够承受多重的劳动这些关键性的问题上，卫生部不得不充当“技术专家”的角色，因而也不可避免的被卷入了各派角斗的漩涡里。各派都要求他们做出有利于自己一方的“专业证明”。自然也有各派人马过来游说和“攻关”。
+After several months of carousel-like consultations, debates, shouting matches, and private deals, it was finally finalized. Of course, all parties were not very satisfied. As the Ministry of Health, they were of course very much in favor of such a regulation, but on key issues such as whether it was necessary to take leave during menstruation, whether maternity leave was 42 days or 4 months, and how much labor a pregnant woman could bear, the Ministry of Health had to act as a "technical expert," and thus was inevitably drawn into the vortex of factional struggles. All factions demanded that they provide "professional proof" that was beneficial to their side. Naturally, people from all factions also came to lobby and "do public relations."
 
-　　时袅仁深知被利益集团绑架的后果就是不得不胡言乱语遭人嗤笑成“砖家”，因而拒绝了一切公关，对三期对女性生理的影响问题只做了十分谨慎的“纯学术性”的阐述——也就是说，等于什么都没说。
+Shi Niaoren knew very well that the consequence of being hijacked by interest groups was that he would have to talk nonsense and be ridiculed as a "bricklayer," so he refused all public relations and only gave a very cautious "purely academic" explanation of the physiological effects of the three periods on women—in other words, he said nothing at all.
 
-　　最终制定出来的法规，大体还是按照企划院和制造总监部的意见，因而引来了杜雯的严重不满——不过不满归不满，一小步也是一大步这个道理她也是懂得，一回来就催着卫生部联署，然后进元老院投票。
+The final regulation was largely in accordance with the opinions of the Planning Institute and the General Manufacturing Supervision Department, which led to Du Wen's serious dissatisfaction. However, dissatisfaction was one thing, but she also understood the principle that a small step was a big step. As soon as she came back, she urged the Ministry of Health to co-sign it, and then go to the Senate for a vote.
 
-　　时袅仁从衣兜中摸出名章，盖了上去，小声道：“杜雯闹，杜雯早就在这……”偷偷瞥了艾贝贝一眼，把话咽了回去。然后时袅仁一边用视线的余光偷偷看艾贝贝，一边对邓铂鋆说：“我不在部里这么久，还有什么急件，你赶紧说吧，免得耽误大家的事”。
+Shi Niaoren took out his name seal from his pocket and stamped it, whispering, "Du Wen is making a fuss, Du Wen has been here for a long time..." He secretly glanced at Ai Beibei and swallowed his words. Then, while secretly looking at Ai Beibei out of the corner of his eye, Shi Niaoren said to Deng Bofang, "I haven't been in the ministry for so long. Are there any other urgent documents? Hurry up and tell me, so as not to delay everyone's business."
 
-　　“农委会生物实验室的甲型流脑灭活、减毒疫苗试制成功，这是报告书。关于小儿脊髓灰质炎疫苗的开发计划的经费和物资申请报告书；强制免疫计划——这是报告书。这几份报告涉及的技术问题比较多，您慢慢审阅。公费医疗范围、实施方法和额度的事情这星期大家下了不少功夫。做了[文总][y002]和几位主要元老的不少工作，弄了个重大专项攻关工程，现在执委会传达了一个精神：在公费医疗体制到底如何运转的结论没有下来之前，凡是有助于元老保健工作的诊疗活动及新药临床实验，都可以在百仞总医院或其他有元老医生供职的医院，在元老医生的指导下开展，费用使用办公厅那边的特别资金，[文总][y002]和[萧子山][y001]都签字了，您也签了吧。”
+"The inactivated and attenuated Japanese encephalitis vaccine from the Agricultural Committee's biological laboratory has been successfully trial-produced. This is the report. The funding and material application report for the development plan of the polio vaccine; the compulsory immunization plan—this is the report. These reports involve more technical issues, so you can review them slowly. As for the scope, implementation method, and quota of public medical care, everyone has put in a lot of effort this week. We have done a lot of work with [Wen Zong][y002] and several major elders, and have set up a major special project to tackle key problems. Now the Executive Committee has conveyed a spirit: before the conclusion on how the public medical care system will operate is reached, all diagnosis and treatment activities and clinical trials of new drugs that are conducive to the health care of the elders can be carried out in Bairen General Hospital or other hospitals where there are elder doctors, under the guidance of elder doctors. The expenses will be covered by the special funds of the General Office. [Wen Zong][y002] and [Xiao Zishan][y001] have both signed it, so you should sign it too."
 
-　　时袅仁快速翻阅着这份文件，心想总算是有个空子可钻，赶忙在署名处盖上了自己的名章。
+Shi Niaoren quickly flipped through the document, thinking that he had finally found a loophole. He hurriedly stamped his name seal on the signature line.
 
-　　“今天早上，[Ma Qianzhu][y005]那边送来的，关于百仞总医院之外易地设立妇幼保健临床中心，主要收治非职工归化民及其家属，以培养医护队伍的业务能力及锻炼经验。建设资金和运转费用由办公厅全包，物资企划院调拨。[Wu Nanhai][y009]说他准备在归宿农业口的公社社员里搞了个互助基金会，可以无息贷我们一部分流动资金，还答应在土建阶段动员一部分归化民参加义务劳动；吴石芒这阵子送百仞总医院实习的那些修女，答应再借给我们两年，人手算是有了。”
+"This morning, it was sent from [Ma Qianzhu][y005]'s side, regarding the establishment of a maternal and child health clinical center outside of Bairen General Hospital, mainly to treat non-employee naturalized citizens and their families, in order to cultivate the professional ability and experience of the medical and nursing team. The construction funds and operating expenses will be fully covered by the General Office, and the materials will be allocated by the Planning Institute. [Wu Nanhai][y009] said that he is preparing to set up a mutual aid foundation among the commune members of the agricultural households, which can lend us some working capital without interest, and also promised to mobilize some naturalized citizens to participate in voluntary labor during the civil construction stage; the nuns that Wu Shimang sent to Bairen General Hospital for internship a while ago have agreed to lend them to us for another two years, so we have the manpower."
 
-　　时袅仁看都没看，急忙盖上了名章。
+Shi Niaoren didn't even look at it and hurriedly stamped his name seal.
 
-　　“这是教育部和政保的备忘录：关于医学班长学制设立；还有芳草地准备吸收大陆进步知识青年学习，涉及医护专业，请您有空过目。跟这相关，还是和商务部合作的项目，涉外医疗，医疗旅游，广州总医院的筹建计划书，请您有空过目。”
+"This is a memorandum from the Ministry of Education and the Political Security Bureau: regarding the establishment of a long-term medical class system; and Fangcaodi is preparing to absorb progressive intellectual youth from the mainland to study, involving medical and nursing majors. Please take a look when you have time. Related to this, it is also a project in cooperation with the Ministry of Commerce, involving foreign medical care, medical tourism, and the preparatory plan for the Guangzhou General Hospital. Please take a look when you have time."
 
-　　时袅仁仔细的翻阅着与商务部合作的文件，抬头看了邓铂鋆一眼：“有进步，虽然还是把敏感问题堆在了最后，但是知道拿铅笔标一下了。李总金票大大的有，你小子——”
+Shi Niaoren carefully read the document in cooperation with the Ministry of Commerce, looked up at Deng Bofang, and said, "You've made progress. Although you still pile the sensitive issues at the end, you know to mark them with a pencil. General Manager Li has a lot of gold tickets, you little—"
 
-　　“都是部里的预算外收入，医院食堂早上的羊奶，实验用的动物，有多少都是从这里——”邓铂鋆一脸怪笑。
+"It's all off-budget income for the ministry. The goat milk in the hospital cafeteria in the morning, the experimental animals, how much of it comes from here—" Deng Bofang said with a strange smile.
 
-　　时袅仁经常在单位过夜，也逐渐养成了不必先看着试毒就能下筷子吃实验动物的习惯。邓铂鋆话中的意味，他是体会得出来的，于是板着脸，把备忘录圈了个筒，象征性敲了邓铂鋆的脑袋一下。制造总监部研制弹簧的过程中，副产品之一是尺寸剽悍的铁夹子，在卫生部用作病历夹。邓铂鋆是卫生部内唯一让时袅仁有拿病历夹劈头砸过去冲动的人，还是元老。
+Shi Niaoren often spent the night at the unit and had gradually developed the habit of being able to eat experimental animals without having to watch for poison first. He could understand the meaning behind Deng Bofang's words, so he put on a straight face, rolled the memorandum into a tube, and symbolically tapped Deng Bofang on the head. One of the by-products of the General Manufacturing Supervision Department's research and development of springs was a large-sized iron clip, which was used as a medical record clip in the Ministry of Health. Deng Bofang was the only person in the Ministry of Health who made Shi Niaoren have the urge to smash him over the head with a medical record clip, and he was also an elder.
 
-　　“最后一份文件我就不批了，不知道有你小子什么私货。你小子，现在部里编制多少人了？上回五道口来要我难看，说卫生部的人员编制是仅次于强力部门的，还不是你背着我搞的。”没等邓铂鋆开口，时袅仁就对拿着最后一份文件等着汇报的邓铂鋆下了逐客令。邓铂鋆贱笑着对时袅仁道了句“Yes Minsiter”，边拿着批示好的文件往门外走，边对着空气对艾贝贝寒暄，在门外留下了“办公厅落实对离开百仞短期出差元老的生活补助，河马他们驻外的都算长期早有政策，您这个月要想多些实惠，还是签了吧”的话音。
+"I won't approve the last document. I don't know what kind of private goods you have in it. You little rascal, how many people are on the ministry's payroll now? Last time, Wudaokou came to make things difficult for me, saying that the number of personnel in the Ministry of Health is second only to the powerful departments. Isn't it you who did it behind my back?" Before Deng Bofang could open his mouth, Shi Niaoren gave him a dismissal order as he held the last document waiting to be reported. Deng Bofang smiled obsequiously and said "Yes, Minister" to Shi Niaoren. As he walked out with the approved documents, he made small talk with Ai Beibei in the air, leaving behind the words, "The General Office is implementing the living allowance for the elders who are on short-term business trips away from Bairen. The policy for those stationed abroad like He Ma has long been in place. If you want to get more benefits this month, you should sign it."
 
-　　时袅仁双手撑着桌子站了起来，起身时，双手微攥了一下。时袅仁边走向办公室的大门，边对一直默默无语的艾贝贝说：“早晨还没有查房，我们先去病房看看。待会见了那个孩子，我再考虑一下用药。虽然一级管控药品都是等待过期的货，但现在地主家里余粮也不多了——真要全给用空了，万一元老和眷属要用的时候没有造成后果的，我也当不起这个责任。今天的事，你半年内别给我来第二次。”
+Shi Niaoren stood up with his hands on the table. When he got up, he clenched his hands slightly. As he walked towards the office door, he said to the silent Ai Beibei, "I haven't done my rounds this morning. Let's go to the ward first. After I see that child, I'll reconsider the medication. Although the level-one controlled drugs are all waiting to expire, the landlord's family doesn't have much surplus grain now—if we really use it all up, and there are consequences when the elders and their families need it, I can't bear the responsibility. As for today's matter, don't come to me with it a second time within half a year."
 
-　　艾贝贝为自己刚才的失态道歉，两人似乎又和好如初。在通往病房的路上，穿行在熟悉的建筑中，时袅仁心情复杂。
+Ai Beibei apologized for her earlier outburst, and the two seemed to be on good terms again. On the way to the ward, walking through the familiar buildings, Shi Niaoren had mixed feelings.
+
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y005]: /characters/y005 "Ma Qianzhu"
