--- a/_posts/2013-4-17-6-00400.md
+++ b/_posts/2013-4-17-6-00400.md
@@ -1,82 +1,83 @@
 ---
 layout: post
-title: 第四节 战利品处置
+title: "Section 4: Disposal of Spoils"
 category: 6
 path: 2013-4-17-6-00400.md
 tag: [normal]
 ---
 
-　　加勒是锡兰岛上的重要商业口岸，此地又是前往印度贸易的沿途中转地之一，而锡兰本身也有相当多的香料和宝石的出产，所以很多船只会在这里靠泊，补充食水，整修船只，交易商品。所以修船厂的规模颇为可观。
+Galle was an important commercial port on the island of Ceylon. It was also one of the transit points along the trade route to India, and Ceylon itself produced a considerable amount of spices and gems, so many ships would dock here to replenish food and water, repair their ships, and trade goods. Therefore, the shipyard was quite large.
 
-　　不过李华梅把格里芬号拖进修船厂之后，这里的估价却高达三千西班牙比索——12磅加农炮的威力实在太过显著，船壳上打出了不少破洞不说，临高独有的葡萄弹对甲板和帆缆的洗劫使得帆缆全部报废，三根桅杆要更换，甲板上也有大量的破损需要修补。除了金钱，还得花上三个月的工期。
+However, after Li Huamei dragged the *Griffin* into the shipyard, the estimate for repairs was as high as three thousand Spanish pesos. The power of the 12-pounder cannons was too significant. Not only were there many holes in the hull, but Lingao's unique grapeshot had ravaged the deck and rigging, rendering the rigging completely useless. The three masts needed to be replaced, and there was also a great deal of damage to the deck that needed to be repaired. In addition to the money, it would also take three months of work.
 
-　　李华梅有些迟疑，她原本打算修复格里芬号之后作为自己的旗舰使用——既然要正式投奔澳洲人，自己的“本钱”就得雄厚一些才好。格里芬号的吨位和船型都很合乎她的心意。但是这开销和工期都让她难以接受。
+Li Huamei hesitated. She had originally planned to repair the *Griffin* and use it as her flagship. Since she was going to formally join the Australians, she needed to have a more solid "capital." The tonnage and ship type of the *Griffin* were very much to her liking, but the cost and time were unacceptable to her.
 
-　　正在迟疑间，出现了一个戴着一只眼罩的西班牙绅士，他提出以九千西班牙比索的价格购买格里芬号——包括上面的大炮、火药和货仓里运销来得武器：包括数百支火绳枪，一些刀剑和几门小炮。
+While she was hesitating, a Spanish gentleman with an eye patch appeared. He offered to buy the *Griffin* for nine thousand Spanish pesos—including the cannons, gunpowder, and the weapons in the cargo hold that had been transported for sale, including hundreds of matchlocks, some swords, and a few small cannons.
 
-　　这个建议立刻打动了她，虽然格里芬号是艘不错的船，但是她第一耽误不起时间，第二也不愿意在这上面花太多的钱。再说等到正式投髡之后，很可能从澳洲人那里弄到更好的船。
+This proposal immediately moved her. Although the *Griffin* was a good ship, she could not afford to waste time, nor was she willing to spend too much money on it. Besides, after she officially joined the Australians, she would most likely be able to get a better ship from them.
 
-　　于是这笔买卖在讨价还价中以一万比索成交。西班牙绅士很爽快的拿出一张可以再果阿和澳门兑现的印度婆罗门商人的支票付了账。
+So the deal was concluded at ten thousand pesos after some bargaining. The Spanish gentleman readily paid with a check from an Indian Brahmin merchant that could be cashed in Goa and Macau.
 
-　　她唯一的要求就是拆下船头的鹰狮船头雕——为此差不多损失了五百比索，不过李华梅觉得很值：她现在终于有了一件连澳洲人都没有的东西了。
+Her only request was to remove the griffin figurehead from the bow—for which she lost almost five hundred pesos, but Li Huamei felt it was worth it: she now finally had something that even the Australians did not have.
 
-　　卖掉了受损严重的格里芬号。杭州号的维修就很快了。李华梅一边督促修船一边处理战利品。
+After selling the heavily damaged *Griffin*, the repairs on the *Hangzhou* were much faster. Li Huamei supervised the ship repairs while dealing with the spoils of war.
 
-　　主要的战利品就是俘虏。由于上次她们姐妹在这里和葡萄牙殖民当局闹过一点小小的不愉快，所以这次为了体现姿态，只好把这些丹麦佬以半卖半送的价格卖给了总督。让总督能小小的发一笔财。
+The main spoils were the prisoners. Since she and her sister had had a small unpleasant incident with the Portuguese colonial authorities here last time, in order to show their attitude this time, they had to sell these Danes to the governor at a price that was half-sale, half-gift, so that the governor could make a small fortune.
 
-　　能换赎金的都是些军官和高级船员，没有人会为普通船员们付出赎金的。而且这伙人中间也没几个丹麦人。李华梅很简单的把余下的人集中起来，要他们二选一：要么跟着她干，要么就到总督府的地牢里蹲着，等候总督和主教的审问。走运的话按世俗的海盗罪绞死，不走运的话按宗教“异端”处理，愿意悔罪的充当苦役划桨手。坚持信仰直接烧死。
+Those who could be ransomed were all officers and senior crew members. No one would pay a ransom for ordinary sailors. Moreover, there were not many Danes among this group. Li Huamei simply gathered the remaining people and gave them two choices: either follow her, or squat in the governor's dungeon and wait for the interrogation of the governor and the bishop. If they were lucky, they would be hanged for the secular crime of piracy. If they were unlucky, they would be dealt with as religious "heretics." Those who were willing to repent would serve as galley slaves. Those who insisted on their faith would be burned at the stake.
 
-　　当下所有人立马换了东家，轻伤员简单治疗一下。重伤的根本不用管——因为他们早就死在海上了。
+Immediately, everyone changed their allegiance. The lightly wounded were given simple treatment. The seriously wounded were not cared for at all—because they had already died at sea.
 
-　　那些被蹂躏的病恹恹的阿拉伯奴隶在码头上就地卖掉，看起来还行的给点咸鱼调养一下跟欧洲女人一起运到临高去。这一路倒是很安全——按照李思雅定的老规矩。船上绝对禁止搞女人，下船随便。
+The ravaged and sickly Arab slaves were sold on the spot at the pier. Those who looked alright were given some salted fish to recuperate and then transported to Lingao with the European women. This journey was very safe—according to the old rules set by Li Siya, women were absolutely forbidden on the ship. Once they disembarked, they were free to do as they pleased.
 
-　　在俘虏中李华梅留下一个十来岁的阿克苏姆小女孩做使唤丫头——埃塞俄比亚的特产就是奴隶，这些东非人高大有力，线条俊美。是中东奴隶市场上很受欢迎的货源。自己严加调教肯定是一把好手。为了纪念这次胜利。给小丫头起名叫李鹰。
+Among the prisoners, Li Huamei kept a ten-year-old Aksumite girl as a servant girl. Ethiopia was famous for its slaves. These East Africans were tall and strong, with beautiful features, and were a very popular source of goods in the Middle Eastern slave market. With her strict training, she would definitely be a good hand. To commemorate this victory, she named the little girl Li Ying.
 
-　　至于卡尔森牧师，他一听说到了葡萄牙人的地盘就躲在甲板下面不敢出来，生怕被葡萄牙人抓去“拯救”，这年头异端往往比异教徒更有风险。穆斯林俘虏尚且可以当奴隶，当水手。异端不肯悔改可就要尝尝裁判所的火刑柱的味道了。
+As for Pastor Carlson, as soon as he heard that they had arrived in Portuguese territory, he hid below deck and did not dare to come out, for fear of being captured by the Portuguese and "saved." In those days, heretics were often more at risk than heathens. Muslim prisoners could still be slaves or sailors, but heretics who refused to repent would have to taste the stake of the Inquisition.
 
-　　作为提供保护的代价，卡尔森要在到达临高之前当水手，她老婆和其他女人一起关在底舱里以免遭遇意外。李华梅隐约记得澳洲人里似乎也有那么一两个新教徒，只是搞不清楚也懒得搞清楚到底是路德邪教还是加尔文邪教。她自己其实什么也不信。为了照顾船员的情绪，她平日里摆出既信妈祖又信圣母的样子。
+As the price for his protection, Carlson had to work as a sailor until they reached Lingao. His wife and the other women were locked in the hold to avoid any accidents. Li Huamei vaguely remembered that there seemed to be one or two Protestants among the Australians, but she couldn't figure out and couldn't be bothered to figure out whether it was the Lutheran heresy or the Calvinist heresy. She herself did not believe in anything. In order to take into account the feelings of the crew, she usually pretended to believe in both Mazu and the Virgin Mary.
 
-　　再次抵达临高已经是八月底的事情了。她按时交付了紧急订货。并且向殖民和贸易部提出自己有一批货物出售——可以给殖民和贸易部优先出价的权力。
+It was already the end of August when she arrived in Lingao again. She delivered the urgent order on time and proposed to the Colonial and Trade Department that she had a batch of goods for sale—and that the Colonial and Trade Department would have the right of first refusal.
 
-　　这次李华梅又重拾了当年第一次到临高时候的风光：虽然夸克穷已经运来了一船大洋马，但是市场远没到饱和的状态，再多来十几个也是件喜闻乐见的事情——更何况这批女奴隶还有罕见的北欧种。
+This time, Li Huamei regained the glory of her first visit to Lingao. Although Quark had already brought a shipload of foreign women, the market was far from saturated. A dozen more would be a welcome sight—not to mention that this batch of female slaves also included the rare Nordic race.
 
-　　司凯德最近依然郁闷：几个激进派元老依然时不长在报纸上发一两篇不点名抨击“右倾投降主义”和“乌龟保守主义”的笔名文章。司凯德是有苦难言：殖民部早有一大堆扩张和贸易计划，早已报上去的关于对北海道进行远程探险寻找炼焦煤矿的议案，和在乌苏里江、黑龙江口地区建立季节性贸易栈和常年基地进行驯鹿皮、地衣染料贸易和进一步深入内陆议案一直石沉大海，听闻有人批他是“左倾冒险主义盲动”。
+Si Kaide was still depressed recently. A few radical elders still published one or two articles in the newspapers from time to time, attacking "right-wing capitulationism" and "turtle conservatism" under a pseudonym. Si Kaide had a lot to say but couldn't: the Colonial Department had long had a pile of expansion and trade plans. The proposal for a long-range expedition to Hokkaido to search for coking coal mines, and the proposal to establish seasonal trading posts and permanent bases in the Ussuri River and Amur River estuary areas for the trade of reindeer skins and lichen dyes and to further penetrate the inland had all been shelved. He heard that some people criticized him for "left-wing adventurism and blind action."
 
-　　“娘西皮，这样是投降主义，那样的冒险主义，老子不成了风箱里的老鼠了么？”司凯德在他的三楼可以俯瞰大沙盘的办公室里生闷气，“看来这执委是高处不胜寒——没根基的坐不住啊！”
+"Damn it, this is capitulationism, that is adventurism. Am I not like a mouse in a bellows?" Si Kaide fumed in his third-floor office overlooking the large sand table. "It seems that this Executive Committee is a high and cold place—those without a foundation can't sit still!"
 
-　　掐指一算，眼下的七执委，外加一个没投票权的办公厅主任，除了自己，执委个个要么是有自己的基本盘，要么就是和其他执委之间连声带气。相比之下自己不但和其他执委交集甚少，而且在元老院中也没有可靠的同盟者。殖民贸易部里强力派系广雷系自成一体，虽然对自己开展工作很支持，但是并不贴心，要说到大是大非的问题上的时候未必靠得住。
+Counting on his fingers, of the current seven members of the Executive Committee, plus a director of the General Office who had no voting rights, except for himself, every member of the Executive Committee either had his own base, or was connected with other members of the Executive Committee. In contrast, he not only had little interaction with other members of the Executive Committee, but also had no reliable allies in the Senate. The powerful Guang-Lei faction in the Colonial and Trade Department was a self-contained entity. Although they were very supportive of his work, they were not close to him. When it came to major issues of right and wrong, they might not be reliable.
 
-　　正在愁闷间，听说李华梅回来的消息，他也提不起太大的兴趣——李华梅提请“入籍”的事情他早就知道了，不过这事不归他管：入籍是民政人民委员会的事情，具体审查又是政治保卫总局经手。他又不是大航海的粉丝，对这个名字和这个女人都没什么遐想——李华梅对他不过是一个很好用的商人而已。这次紧急订货的安排也是根据企划院的要求做出的。
+While he was feeling depressed, he heard the news of Li Huamei's return, but he was not very interested. He had known about Li Huamei's application for "naturalization" for a long time, but this matter was not under his jurisdiction: naturalization was a matter for the People's Committee for Civil Affairs, and the specific review was handled by the Political Security General Bureau. He was not a fan of the Age of Discovery, and had no fantasies about this name and this woman—Li Huamei was just a very useful merchant to him. The arrangement for this urgent order was also made according to the requirements of the Planning Institute.
 
-　　“按正常程序走就是了——”司凯德挥了挥手。
+"Just follow the normal procedure—" Si Kaide waved his hand.
 
-　　“首长，她还运来了一批‘办公厅特别用’……”
+"Chief, she also brought a batch of 'special use for the General Office'..."
 
-　　司凯德打了个激灵——“办公厅特别用”是个委婉的代号，其实就是专门供应元老的女奴的代号。
+Si Kaide shuddered—"special use for the General Office" was a euphemism, in fact, it was a code name for female slaves exclusively for the elders.
 
-　　他顿时来了精神：“先把人送去净化！告诉码头和检疫营：我一会就过来。”
+He immediately became energetic. "Send the people to be purified first! Tell the wharf and the quarantine camp: I'll be there in a moment."
 
-　　司凯德一见“货色”的品相，心里顿时乐开了花，立马派人去请[萧子山][y001]来“验货”。
+As soon as Si Kaide saw the quality of the "goods," his heart was filled with joy. He immediately sent someone to invite [Xiao Zishan][y001] to "inspect the goods."
 
-　　办公厅主任立马就出现了，司凯德眉飞色舞的对着来“检查工作”的[萧子山][y001]大谈“洋马经”：
+The director of the General Office appeared immediately. Si Kaide, with a beaming face, talked at length about the "foreign horse sutra" to [Xiao Zishan][y001] who had come to "inspect the work":
 
-　　“……大洋马其实也有很多不同品种，以我过去去过欧洲的经验，北欧女人有‘贫乳女神’的称号，胸脯比较小，你看，这几个就是典型的北欧洋马，”他一边说一边指点着，“充其量也就是B罩杯。可是你别看她们普遍胸小，她们的骨架和下巴没有德国大洋马那么宽大，也不像英国女人那么窄小，腿又很细长，比较符合元老的审美观。”
+"...There are actually many different breeds of foreign horses. Based on my past experience in Europe, Nordic women have the title of 'poor-breasted goddesses,' and their chests are relatively small. Look, these are typical Nordic foreign horses," he said, pointing. "At best, they are B-cups. But don't look at their generally small chests. Their skeletons and chins are not as wide as German foreign horses, nor as narrow as British women. Their legs are also very slender, which is more in line with the aesthetic standards of the elders."
 
-　　[萧子山][y001]连连点头。
+[Xiao Zishan][y001] nodded repeatedly.
 
-　　“……另外北欧雅利安人在寒带进化了几千年，久经高脂食品考验，既不像东欧女人那样容易发胖，也不像南欧女人那样容易衰老。再说北欧人目前主要还是吃鱼吃肉，胸再小也比大明朝和日本女人强一些……”
+"...In addition, the Nordic Aryans have evolved in the frigid zone for thousands of years and have been tested by high-fat foods for a long time. They are neither as prone to obesity as Eastern European women, nor as prone to aging as Southern European women. Besides, the Nordic people currently mainly eat fish and meat, so even if their chests are small, they are still better than the women of the Ming Dynasty and Japan..."
 
-　　萧子上对他的理论很是佩服，点头道：“可惜少了点。”
+Xiao Zishan was very impressed with his theory and nodded. "It's a pity there are so few."
 
-　　这批女奴除去阿拉伯人，来自北欧的只有七个人：一个是瑞典人妻，三个丹麦寡妇，一个丹麦萝莉，另有二名德国女子，不过她们来自荷尔斯泰因石勒苏益格地区，也勉强可以算是北欧洋马。
+Excluding the Arabs, there were only seven women from Northern Europe in this batch of female slaves: one was a Swedish wife, three were Danish widows, one was a Danish loli, and there were two other German women, but they were from the Schleswig-Holstein region and could barely be considered Nordic foreign horses.
 
-　　“不要紧，货源可以慢慢开辟，”司凯德拍着胸脯，“这次不还弄来一个神马瑞典神父么，还有几个丹麦佬，可以从他们身上打开渠道……”
+"It doesn't matter, the source of goods can be slowly developed," Si Kaide patted his chest. "Didn't we also get a Swedish priest this time? And a few Danes. We can open up channels through them..."
 
-　　对于西北欧大洋马的来源司凯德并不十分担心。三十年战争是一场非常残酷的战争，将整个中欧地区都陷入血火之中，民众流离失所是家常便饭，失去家园的男人可以去当雇佣兵，女人只好跟在军队后面做妓女。只要肯花钱，绝不会买不到女人——就是路途实在远了点，比去巴士拉还麻烦。一来一回差不多三四年功夫……
+Si Kaide was not very worried about the source of the Northwestern European foreign horses. The Thirty Years' War was a very cruel war that plunged the entire Central European region into blood and fire. It was common for people to be displaced. Men who lost their homes could become mercenaries, and women had to follow the army as prostitutes. As long as you were willing to spend money, you would never be unable to buy women—it was just that the journey was too far, more troublesome than going to Basra. A round trip would take almost three or four years...
 
-　　想到这里，他不由得又叹了一口气：只能作为长远规划了。
+Thinking of this, he couldn't help but sigh again: it could only be a long-term plan.
 
-　　就在这时候，李华梅在杭州号的船长室里，正在账本上计算着这次航行的收益和支出。
+At this moment, in the captain's cabin of the *Hangzhou*, Li Huamei was calculating the income and expenditure of this voyage in her account book.
 
-　　别看李丝雅和李华梅平日里行事豪奢，一掷千金，颇有贵家千金、海上女豪杰的派头。实则姐妹俩对金钱出入控制很严——李丝雅除了一栋大房子和两条船之外并无什么恒产，在海上贸易、行劫、贩卖情报和违禁品虽然获利丰厚，支出开销也很大：仅仅维持在澳门的场面、保护伞和各地的情报网开销就是一笔不小的巨款，如果不能量入为出，很快就会捉襟见肘。
+Don't be fooled by the extravagant and lavish lifestyle of Li Siya and Li Huamei, who spent money like water and had the air of noble ladies and heroines of the sea. In fact, the two sisters were very strict with their finances. Apart from a large house and two ships, Li Siya had no other permanent property. Although she made a lot of money from maritime trade, piracy, and selling intelligence and contraband, her expenses were also very large. Just maintaining her presence in Macau, her protectors, and her intelligence network in various places was a huge sum of money. If she could not make ends meet, she would soon be in financial straits.
+
 [y001]: /characters/y001 "Xiao Zishan"
