--- a/_posts/2013-4-18-6-00500.md
+++ b/_posts/2013-4-18-6-00500.md
@@ -1,69 +1,69 @@
 ---
 layout: post
-title: 第五节 入籍
+title: "Section 5: Naturalization"
 category: 6
 path: 2013-4-18-6-00500.md
 tag: [normal]
 ---
 
-　　这些年来李丝雅为脑，她是手臂，在海上翻云覆雨，收获丰厚，每年都有不小的盈余。不过，为了将来做考虑，不得不多存储一些下来。李华梅每次出海获得的利润，一部分缴在李丝雅在澳门一家犹太人的银行的户头上，一部分直接交给小姐。
+For many years, Li Siya had been the brains, and she the brawn, stirring up storms at sea and reaping rich rewards, with a considerable surplus every year. However, for the sake of the future, she had to save more. A portion of the profits Li Huamei earned from each voyage was deposited into Li Siya's account at a Jewish bank in Macau, and another portion was given directly to her mistress.
 
-　　李丝雅给她每次出航行纯利润的5%，按照当时的标准看来，李丝雅对她的恩惠已经很了不起了：她李淳说到底不过是李丝雅的家奴，为主家奔走营收原本是应尽的本分——主人肯额外赏些钱财就不错了，还给分红那是恩典浩荡。
+Li Siya gave her 5% of the net profit from each voyage. By the standards of the time, Li Siya's favor to her was already remarkable. After all, she, Li Chun, was just a house slave of Li Siya, and it was her duty to work for her master's income. It would have been nice if her master had given her some extra money, but to give her a share of the profits was a great act of grace.
 
-　　虽然有这笔分红，但是钱除了随身携带一部分之外，大部分还是放在澳门的银行里——也是由乳姐代管的。李华梅原本钱这码事不大上心，总觉得有小姐打理钱财，自己跟着小姐不会吃亏。
+Although she had this share of the profits, most of the money, except for a small portion she carried with her, was still in the bank in Macau—also managed by her foster sister. Li Huamei had never paid much attention to money, always feeling that with her mistress managing the finances, she would not be at a disadvantage.
 
-　　不过，最近她的心态却有了微妙的变化：过去总觉得自己和乳姐是一家人，不分彼此。但是随着年龄的增长，特别是在暗暗感怀年华逝去的时候，才惊觉起自己原来什么都没有，连杭州号都是姐姐的财产。
+However, her mentality had recently undergone a subtle change. In the past, she always felt that she and her foster sister were one family, without any distinction. But as she grew older, especially when she secretly lamented the passing of her youth, she was shocked to realize that she had nothing, not even the *Hangzhou*, which was her sister's property.
 
-　　多少也要为自己打算一点了。小姐总不会一辈子在澳门干这个买卖。等小姐一走，自己又怎么办呢？继续跟着她吗？
+She had to start planning for herself a little. Her mistress would not be doing this business in Macau for the rest of her life. When her mistress left, what would she do? Continue to follow her?
 
-　　李淳最近一直为这样的问题所困扰。她甚至想过乘着这次投髡干脆假戏真做，彻底摆脱乳姐的控制。过去她身边都是李家的人，船也是李家的。这次不开眼的丹麦人送来了大把的钱财和水手。
+Li Chun had been troubled by such questions recently. She had even thought of taking advantage of this opportunity to join the Australians and make the pretense a reality, completely breaking free from her foster sister's control. In the past, she was surrounded by people from the Li family, and the ship was also the Li family's. This time, the blind Danes had sent a large amount of money and sailors.
 
-　　从船上抢劫到的战利品出售、卖船的收入，除去一路的开销和支出，加起来大概有一万二千多比索。为澳洲人运输货物的利润不在内——这部分不能算是海盗行动的收入。
+The sale of the spoils of war from the ship, and the income from selling the ship, after deducting the expenses and expenditures along the way, amounted to more than twelve thousand pesos. The profit from transporting goods for the Australians was not included—this part could not be considered income from piracy.
 
-　　按照规矩，打劫格里芬号获得的战利品收益按船长50%，头目20%分配。剩下的由水手平分。她自己独得六千比索。
+According to the rules, the profits from the spoils of war obtained from robbing the *Griffin* were distributed with 50% to the captain and 20% to the leaders. The rest was divided equally among the sailors. She herself received six thousand pesos.
 
-　　六千比索之外，她还得到了从格里芬号船长室里得到的维斯赫伊船长的私财：包括一袋金币、一个装满锡兰红宝石、绿宝石、水晶的小口袋。一向以光明磊落为傲的淳小姐这次毫不犹豫的把东西落了自己的口袋。
+In addition to the six thousand pesos, she also obtained Captain Visby's private property from the captain's cabin of the *Griffin*, including a bag of gold coins and a small pocket full of Ceylon rubies, emeralds, and crystals. Miss Chun, who had always been proud of her integrity, did not hesitate to pocket the items this time.
 
-　　有了这笔本钱，弄一条船也不是难事——虽然每次一想起这个，都在心里大骂自己薄情寡义，不过这个想法却变得越来越顽固……
+With this capital, it would not be difficult to get a ship—although every time she thought of this, she cursed herself in her heart for being heartless and ungrateful, but this idea became more and more stubborn...
 
-　　不管以后会怎么样，现在先在这里安居下来吧，李华梅心想——我也算是正式投髡了呢。
+No matter what happens in the future, let's settle down here first, Li Huamei thought—I can be considered to have officially joined the Australians.
 
-　　关于李华梅正式申请“入伙”的事情，在民政人民委员会的桌子上已经押了好久了。之所以说什么要等三个月，主要还是刘牧州目前对执委会和元老院的归化民政策感到比较模糊。这事事关国策，在没有得到明确的政策之前他觉得自己还是不要擅做主张为好。
+The matter of Li Huamei's formal application to "join the group" had been on the desk of the People's Committee for Civil Affairs for a long time. The reason why they said they had to wait for three months was mainly because Liu Muzhou was currently rather vague about the Executive Committee's and the Senate's policy on naturalized citizens. This matter concerned national policy, and he felt that he should not make his own decisions before receiving a clear policy.
 
-　　执委会到目前为止。对入籍该如何定义和管理并未有明确的规范。大体来说只要来到临高定居的，都算是“移民”。不管是有组织移民还是自发移民，到临高之后都要进入检疫营净化，然后再分配到各地居住。
+So far, the Executive Committee had not had a clear regulation on how to define and manage naturalization. Generally speaking, as long as they came to Lingao to settle down, they were all considered "immigrants." Regardless of whether they were organized immigrants or spontaneous immigrants, they had to enter the quarantine camp for purification after arriving in Lingao, and then be assigned to various places to live.
 
-　　这些人都是登记注册，然后统一分配到各个公社。加上原先海南岛各县中已经编入公社，完成集村分户，并且在基层建立基本组织的各个村落的人口，就形成了隶属于企划院控制下的“直营人口”。这部分人口中还有相当比例是“契约奴”。所谓的归化民就是指这部分“直营人口”。元老院从归化民中征募士兵，招收工人和学生，选拔干部。
+These people were all registered and then uniformly assigned to various communes. In addition, the population of the villages in the various counties of Hainan Island that had already been incorporated into the communes, had completed the consolidation of villages and the division of households, and had established basic organizations at the grassroots level, formed the "directly managed population" under the control of the Planning Institute. A considerable proportion of this population were "indentured servants." The so-called naturalized citizens referred to this part of the "directly managed population." The Senate recruited soldiers, workers, and students from the naturalized citizens, and selected cadres.
 
-　　归化民受到十分严格的控制，民政人民委员会、警察总部和政治保卫总局联合建立了一套严密的户籍制度。禁止自由迁徙，任何常住人口流动必须伴随以户口迁徙手续。用精密表格控制每个归化民的具体下落和动向。
+The naturalized citizens were under very strict control. The People's Committee for Civil Affairs, the Police Headquarters, and the Political Security General Bureau jointly established a strict household registration system. Free migration was prohibited, and any movement of the permanent population had to be accompanied by household registration transfer procedures. A precise form was used to control the specific whereabouts and movements of each naturalized citizen.
 
-　　其他没有被编入公社的村落、城镇的人口，他们向元老院纳税完粮，也提供人力。但是在统计上不列入归化民范畴。目前民政人民委员会只是初步完成了对他们的人口普查和田地清丈工作，发给了的田凭和户帖。除此之外还没有在各村建立起有效的基层统治，基本还是过去的乡村自治的套路，缙绅和宗族依然享有较大的威望和权力。不过。由于国民军系统的建立和治安战时的严厉打击——特别是大批缙绅和宗族在治安战中以“通匪”的名义遭到清洗，这些乡村传统势力的气焰已经大不如前。
+The population of other villages and towns that had not been incorporated into the communes paid taxes and provided labor to the Senate. However, they were not included in the category of naturalized citizens in the statistics. At present, the People's Committee for Civil Affairs had only preliminarily completed the census of their population and the survey of their land, and had issued land certificates and household certificates. In addition, effective grassroots rule had not yet been established in the various villages. It was basically the same old pattern of rural self-government, and the gentry and clans still enjoyed great prestige and power. However, due to the establishment of the National Army system and the severe crackdown during the pacification war—especially the cleansing of a large number of gentry and clans in the name of "collaborating with bandits" during the pacification war—the arrogance of these traditional rural forces was much less than before.
 
-　　目前之所以不把他们列入归化民纯粹是由于目前的干部不足。而且整个海南地域广大，要完成这一工作也非一朝一夕，何况现在内政人民委员会目前的主要精力都放在移民安置上，全部完成全海南汉族、苗族和熟黎人口的“归化”，还需要二三年时间。
+At present, the reason why they were not included as naturalized citizens was purely due to the current shortage of cadres. Moreover, the entire Hainan region was vast, and it would take more than a day to complete this work. What's more, the main energy of the People's Committee for Internal Affairs was currently focused on the resettlement of immigrants. It would take another two or three years to complete the "naturalization" of the entire Han, Miao, and assimilated Li populations of Hainan.
 
-　　但是要成为归化民也不难，只要志愿加入军队、去元老院属下的工商农企业当工人、职员，或者去国民学校念书，就可以被列入归化民的范畴。总之，归化民大体就是一个想做就能做得阶层——只要能够坚定的“为元老院和人民服务”就可以。不问出身，不问性别，也不问年龄。
+However, it was not difficult to become a naturalized citizen. As long as one volunteered to join the army, work as a worker or employee in an industrial, commercial, or agricultural enterprise under the Senate, or go to a national school, one could be included in the category of naturalized citizens. In short, a naturalized citizen was basically a class that one could join if one wanted to—as long as one could firmly "serve the Senate and the people." It did not matter what one's background, gender, or age was.
 
-　　虽然理论上说起来很简单，但实际上具体到哪些人可以列入归化民在元老院一直有争论：比如地主能不能算归化民？按照元老院目前的农村工作思路，鼓励扶持经营性地主发展集约化农场，既然他们是鼓励的对象，把他们列入归化民显然不成问题，但是租佃类地主能否成为归化民引起了元老院的很大争议。
+Although it was very simple in theory, in practice, there had always been a debate in the Senate about who could be included as a naturalized citizen. For example, could a landlord be considered a naturalized citizen? According to the Senate's current rural work thinking, it encouraged and supported the development of large-scale farms by business-oriented landlords. Since they were the objects of encouragement, it was obviously not a problem to include them as naturalized citizens. However, whether tenant landlords could become naturalized citizens caused a great controversy in the Senate.
 
-　　租佃地主属于“消灭”的对象，但是目前积极支持元老院的租佃地主也很多，不少人还把子弟送进了国民学校和工厂企业。这样的地主在临高就有十多家：特别是勋素济的岳父刘家，虽然也加入了天地合，开始搞集约农场，但是他们家族名下的出租土地和佃户依然很多。
+Tenant landlords were the objects of "elimination," but at present, there were also many tenant landlords who actively supported the Senate. Many of them had even sent their children to national schools and factories and enterprises. There were more than ten such landlords in Lingao alone. In particular, the Liu family, the father-in-law of Xun Suji, although they had also joined the Heaven and Earth Society and started to run large-scale farms, their family still had a lot of rented land and tenants under their name.
 
-　　类似林林总总的细节问题使得归化民这个身份的认定变得难以操作，目前由马甲牵头正在搞一个有关这一内容的法律文件，彻底的将这件事规范起来。
+Similar detailed issues made the identification of the status of a naturalized citizen difficult to operate. At present, Ma Jia was leading the drafting of a legal document on this content to completely regulate this matter.
 
-　　象李华梅这样有一定财产又有专业技术的人愿意“入籍”成为归化民，一般都会得到同意。但是政治保卫总局对李华梅的政治鉴定不高——她和李丝雅之间的关系虽然没有得到明确的证据，但是种种迹象表明并非空穴来风。按照政治保卫总局的看法就是“有历史问题，社会关系复杂”。
+People like Li Huamei, who had a certain amount of property and professional skills, would generally be approved to "naturalize" and become a naturalized citizen. However, the Political Security General Bureau's political appraisal of Li Huamei was not high—although there was no clear evidence of her relationship with Li Siya, various signs indicated that it was not groundless. According to the Political Security General Bureau, she had "historical problems and complex social relations."
 
-　　很所以这事就一直悬着。但是海军少壮派里颇有几个李华梅的粉丝，听说李华梅愿意来“投奔自由”，一天到晚上刘牧州这儿来做工作，刘牧州不堪其扰，斟酌再三，决定直接向执委会汇报，请他们定夺——反正李华梅此人在执委会也是人人都听说过的。
+So this matter had been hanging in the air. However, there were quite a few fans of Li Huamei among the young turks of the navy. Hearing that Li Huamei was willing to "seek freedom," they came to Liu Muzhou's office all day long to do work. Liu Muzhou was so annoyed that he deliberated again and again and decided to report directly to the Executive Committee and ask them to make a decision—anyway, Li Huamei was a person that everyone in the Executive Committee had heard of.
 
-　　李华梅不知道澳洲人内部正在热烈的讨论该怎么处置自己。分完钱之后，她到商馆去了一次，看看有没有自己的信件。商馆转交信件也是一项服务内容，当然，政治保卫总局也不会放过借此检查信件的机会。
+Li Huamei did not know that the Australians were having a heated discussion about how to deal with her. After distributing the money, she went to the trading post to see if there was any mail for her. Forwarding mail was also a service of the trading post. Of course, the Political Security General Bureau would not miss the opportunity to inspect the mail.
 
-　　信是小姐写来的——当然抬头是澳门的一家商行，内容非是汇报买卖商品的情况。她回到自己的卧室里，用煤气灯的火焰烤了烤信封的内侧，很就浮现出几段字迹来。
+The letter was from her mistress—of course, the letterhead was from a trading company in Macau, and the content was not about reporting the sale of goods. She returned to her bedroom, heated the inside of the envelope with the flame of a gas lamp, and a few lines of handwriting soon appeared.
 
-　　李丝雅要她去搜集澳洲人海军最近的动向，除此之外，还要她提供“冒黑烟三桅船”的详细情报。包括它上面装几门炮，发射多大的炮，除了风帆之外还有秘密的方式驱动的等等。
+Li Siya wanted her to gather information on the recent movements of the Australian navy. In addition, she also wanted her to provide detailed information on the "three-masted ship that spewed black smoke," including how many cannons it had, what size cannons it fired, and whether it had a secret means of propulsion besides sails.
 
-　　李华梅将信放在煤气灯上点着，看着它化为灰烬。她知道姐姐又给自己出了一个难题。当然，姐姐要她来投髡，本质也就是为了搜集澳洲人的情报。
+Li Huamei lit the letter with the gas lamp and watched it turn to ashes. She knew that her sister had given her another difficult task. Of course, the reason her sister wanted her to join the Australians was essentially to gather intelligence on them.
 
-　　“冒黑烟三桅大船”——“立春号”——她在博铺见过几次。但是这次回来立春却已经不知去向了。根据她以前几次来博铺搜集到的情报，立春号十有八九已经去了台湾的高雄——澳洲人在台湾建的一个港口。
+"The big three-masted ship that spews black smoke"—the *Lichun*—she had seen it several times in Bopu. But this time when she returned, the *Lichun* was nowhere to be found. According to the intelligence she had gathered on her previous visits to Bopu, the *Lichun* had most likely gone to Kaohsiung in Taiwan—a port that the Australians had built in Taiwan.
 
-　　不过，就算这船不在这里，她也能从自己的“粉丝”那里得到些有用的消息。何况还有些一些小些的“喷黑烟的船”在博铺，运气好的话，说不定还能到船上去转转呢——相当年圣船她都登上去过。
+However, even if the ship was not here, she could still get some useful information from her "fans." What's more, there were some smaller "smoke-spewing ships" in Bopu. If she was lucky, she might even be able to go on board for a tour—she had even been on the holy ship back then.
 
-　　只要能找到一个熟人，她就有了七八分的把握。此外，她还想借机寻找下姐姐的下落——既然小姐说姐姐就在澳洲人这里，那么她十之八九在临高这个澳洲人的老巢里。很可能就在距此不远的百仞城里。
+As long as she could find an acquaintance, she was 70-80% confident. In addition, she also wanted to take the opportunity to find out the whereabouts of her sister—since her mistress said that her sister was here with the Australians, then she was most likely in Lingao, the Australians' old nest. It was very likely that she was in Bairen City, not far from here.
 
-　　为了避免惹上麻烦，她并没有把寻找姐姐李默的事情告诉澳洲人，先找到人弄清楚状况再说。丫头李鹰是临高唯一的非洲人，过于引人注目，被留在家里。其实就她这样身高165的女人已经够引人注目了。只是澳洲人最近运来不少北方人，才显得不那么惹眼。李华梅换上一身归化民女职工旧制服，戴上草帽穿上草鞋，暂住牌挂在脖子上，背上一个竹水壶，勉强像个来的山东大妞。
+To avoid trouble, she did not tell the Australians that she was looking for her sister, Li Mo. She would first find someone to find out the situation. The servant girl, Li Ying, was the only African in Lingao and was too conspicuous, so she was left at home. In fact, a woman of her height of 165 cm was already conspicuous enough. It was only because the Australians had recently transported a lot of northerners that she did not seem so eye-catching. Li Huamei changed into an old uniform of a naturalized female worker, put on a straw hat and straw shoes, hung her temporary residence permit around her neck, and carried a bamboo water bottle on her back, barely looking like a big girl from Shandong.
