--- a/_posts/2013-4-19-6-00600.md
+++ b/_posts/2013-4-19-6-00600.md
@@ -1,91 +1,91 @@
 ---
 layout: post
-title: 第六节 东南亚公司成员
+title: "Section 6: Member of the Southeast Asia Company"
 category: 6
 path: 2013-4-19-6-00600.md
 tag: [normal]
 ---
 
-　　不过要搜集“冒黑烟三桅大船”的消息却不容易，这船如今不在博铺。而平日里在博铺随处可见的海军水兵此时更是少了很多。她只好在博铺港区四处转悠——看看能不能找到个海军中熟人打探一番。
+However, it was not easy to gather information about the "big three-masted ship that spewed black smoke." The ship was not in Bopu at the moment, and the naval sailors who were usually seen everywhere in Bopu were much fewer at this time. She had no choice but to wander around the Bopu port area, hoping to find a naval acquaintance to inquire about it.
 
-　　然而这里一个她认识的元老都没见到，她在博铺白白转悠了二三天，一无所获。只好又去找李千姬，但是她也不知道自己的“首长”们现在在哪里。李千姬只知道自己在送回来之前李海平还在高雄，之后就一无所知了。
+However, she did not see any of the elders she knew here. She wandered around Bopu for two or three days in vain, gaining nothing. She had no choice but to go to Li Qianji again, but she did not know where her "chiefs" were now. Li Qianji only knew that Li Haiping was still in Kaohsiung before she was sent back, and she knew nothing after that.
 
-　　虽然一无所获，但是她又不敢离开此地，生怕错过了澳洲人的入籍回复——有了归化民的身份，她才可以自由的在澳洲人的地盘里活动。虽然她现在已经渐渐起了贰心，但是小姐的余威仍在，对她的命令她还是不敢违抗怠慢的。充其量也就是为自己先铺点后路罢了。
+Although she had gained nothing, she did not dare to leave this place, for fear of missing the Australians' reply to her naturalization—with the status of a naturalized citizen, she could move freely in the Australians' territory. Although she was gradually developing a second heart, her mistress's prestige was still there, and she did not dare to disobey or neglect her orders. At best, she was just paving a way for herself.
 
-　　此时，在执委会的办公室里，有个人一锤定音地就她的申请做出了回答：
+At this time, in the office of the Executive Committee, someone made a final decision on her application:
 
-　　“既然她表示愿意为我们的事业而奋斗，政治保卫总局又觉得她不可靠，那么就让她带着自己的杭州号到第一线去吧——大炮会证明她是不是真心诚意的投靠我们。”
+"Since she has expressed her willingness to fight for our cause, and the Political Security General Bureau finds her unreliable, then let her take her *Hangzhou* to the front line—the cannons will prove whether she is sincerely defecting to us."
 
-　　于是李华梅的入籍就此批准，司凯德很快收到了二封加了火漆的正式公文。第一封是同意李华梅正式入籍归化民的批复，另带全套相关文件；第二份是政治保卫总局发来得李华梅政治鉴定：4C级：“不可靠，可利用。进一步观察”的最低一级。
+Thus, Li Huamei's naturalization was approved. Si Kaide soon received two official documents sealed with wax. The first was the approval of Li Huamei's formal naturalization as a naturalized citizen, with a full set of related documents; the second was the political appraisal of Li Huamei from the Political Security General Bureau: Class 4C: "Unreliable, usable. Further observation"—the lowest level.
 
-　　司部长知道，按照这个级别，李华梅就是上了政治保卫总局的另册了。凡是评到4级的人。都是告密员密切重视的对象。
+Minister Si knew that according to this level, Li Huamei was on the Political Security General Bureau's blacklist. Anyone rated as Class 4 was a target of close attention by informants.
 
-　　要说这个级别，连刚进检疫营的难民都不如——和有会道门小头目背景的难民不相上下了：那类人可是一旦被人汇报有“反社会言论”就会直接抓到三亚的矿场上去。
+To say that this level was even worse than that of a refugee who had just entered a quarantine camp—it was on par with a refugee with a background as a small leader of a secret society. That kind of person would be directly sent to the mines in Sanya if someone reported that they had made "anti-social remarks."
 
-　　“看来她的下场不会太好呀。”司凯德叹了口气，有些遗憾地说道。随后他签发了一道命令，将李华梅的编制列入到殖民和贸易部属下的东南亚贸易公司的序列里——这是按照刚才办公厅打来的电话执行，根据这一电话，李华梅的杭州号将被调往台湾。
+"It seems her end will not be too good," Si Kaide sighed and said with some regret. He then issued an order to list Li Huamei's establishment in the sequence of the Southeast Asia Trading Company under the Colonial and Trade Department—this was in accordance with the phone call from the General Office just now. According to this phone call, Li Huamei's *Hangzhou* would be transferred to Taiwan.
 
-　　在接到入籍准许的通知之后的第二天，李华梅就开始了她漫长的入籍归化之旅。为了确保她能有准备地按照步骤去做。殖民和贸易部专门派遣了一位归化民职员全程陪同。
+The day after receiving the notice of her naturalization, Li Huamei began her long journey of naturalization. To ensure that she could follow the steps with preparation, the Colonial and Trade Department specially dispatched a naturalized clerk to accompany her throughout the process.
 
-　　首先是制作户口本和身份证，由于李华梅目前没有固定住址——商馆那是临时居所，所以她的户口本暂缓办理。只办了一张临时身份证。办事员表示她最好在三个月内找到固定住所——买的、租的都可以。
+First was the creation of a household registration book and an ID card. Since Li Huamei currently had no fixed address—the trading post was a temporary residence—her household registration book was temporarily suspended. Only a temporary ID card was issued. The clerk said that she had better find a fixed residence within three months—bought or rented would do.
 
-　　李华梅在硬纸卡上仔细的按下了拇指指印，又在相关登记册上留下了十个手指的全部指纹。
+Li Huamei carefully pressed her thumbprint on the cardboard, and then left the fingerprints of all ten fingers on the relevant registration book.
 
-　　“这就是你的身份证了，要随身携带，作为归化民很有用的。”办事员说道。
+"This is your ID card. You must carry it with you. It is very useful as a naturalized citizen," the clerk said.
 
-　　李华梅把这张对开硬卡纸接到手里。仔细的看着。卡纸很硬，十分挺括，折起来只有半个巴掌那么大。封面上的三个黑宋体字：临时身份证，下面一排小字：“大宋澳洲行在警察总局，有效期自签发之日起三个月”。打开里面却是详细的写着自己的名字，出生日期——上面一排是他们常用的阿拉伯数字，用公元纪年记录，下面是按照大明的年号。出生地点：澳门。居住地址上却是：无固定住址。职业栏里写着“船长”，文化程度一栏是“非文盲”。最后是户口性质：非农。
+Li Huamei took the folded cardboard in her hand and looked at it carefully. The cardboard was very hard and stiff, and when folded, it was only half the size of a palm. The three black Song-style characters on the cover read: Temporary ID Card. Below was a line of small characters: "Great Song Australian Sojourn Police General Bureau, valid for three months from the date of issue." When opened, it was detailed with her name, date of birth—the top line was in the Arabic numerals they commonly used, recorded in the Gregorian calendar, and below was according to the reign title of the Ming Dynasty. Place of birth: Macau. The residential address was: no fixed address. The occupation column read "Captain," and the education level column was "non-illiterate." Finally, the nature of the household registration was: non-agricultural.
 
-　　在栏目的最下面。是一排十二位的阿拉伯数字。身份证上盖着个鲜红的大印：临高县警察局。下面是签发的日期：。
+At the bottom of the column was a row of twelve Arabic numerals. The ID card was stamped with a bright red seal: Lingao County Police Bureau. Below was the date of issue.
 
-　　李华梅拿了这张身份证从博铺派出所出来，马上又被带到了海关大楼一楼的一个房间。房间门口一块不起眼木牌子告诉她这里就是东南亚公司的所在地。
+Li Huamei took this ID card and came out of the Bopu police station. She was immediately taken to a room on the first floor of the customs building. An inconspicuous wooden sign at the door of the room told her that this was the location of the Southeast Asia Company.
 
-　　东南亚公司里的办事员当下拿出一堆文件来要她签署，包括她的杭州号入股协议。办事员向她解释说，她是以杭州号船东的身份加入的东南亚公司的，所以属于入股东南亚公司了，公司会按照她的船只情况给予一定数量的分红股份，在年底会按照利润给予分红。另外，她还可以享受公司发给的工资和相关福利。
+The clerk in the Southeast Asia Company immediately took out a pile of documents for her to sign, including the shareholding agreement for her *Hangzhou*. The clerk explained to her that she was joining the Southeast Asia Company as the owner of the *Hangzhou*, so she was considered a shareholder of the Southeast Asia Company. The company would give her a certain number of dividend shares according to the condition of her ship, and would give her dividends at the end of the year according to the profits. In addition, she could also enjoy the salary and related benefits issued by the company.
 
-　　“您的杭州号，按照契卡的估价，以西班牙比索计为一万五千比索——包括上面的所有火炮和其他零星设备——就按照这个金额给您入股，您有异议么？”
+"Your *Hangzhou*, according to the valuation of the Cheka, is valued at fifteen thousand Spanish pesos—including all the cannons and other miscellaneous equipment on it—and you will be given shares based on this amount. Do you have any objection?"
 
-　　“没有。”
+"No."
 
-　　“您现在还没有船长等级证书，不过以您一贯的航海表现来看，我们认为您申请领取乙等船长证书是很容易的，最好在一周内申请船长证书——按照元老院的法令，所有元老院治下的船只的船长都要持证上岗……”
+"You don't have a captain's license yet, but based on your consistent sailing performance, we believe it will be easy for you to apply for a Class B captain's license. It's best to apply for a captain's license within a week—according to the laws of the Senate, all captains of ships under the jurisdiction of the Senate must be licensed..."
 
-　　“好，好，我一定申请。”
+"Okay, okay, I will definitely apply."
 
-　　“还有你的文化资格证书……”
+"And your cultural qualification certificate..."
 
-　　“我明白我明白，我一定马上去考一张。”李华梅连连点头。
+"I understand, I understand. I will definitely go and take the test right away," Li Huamei nodded repeatedly.
 
-　　“您还有什么问题了吗？”
+"Do you have any other questions?"
 
-　　“没有了。”李华梅被冗长的说明搞得晕头转向，心想反正自己的是来卧底的，真要给骗了财小姐也得给兜着，当下二话不说全部签了字，按了手印。
+"No more." Li Huamei was dizzy from the lengthy explanation. She thought to herself that she was here as an undercover agent anyway. If she was really cheated of her money, her mistress would have to cover for her. So she signed all the documents without saying a word and pressed her fingerprint.
 
-　　“这是您在东南亚公司的工作证，请您要随身携带，”办事员又递给她一张类似的对开卡片——少不了又得按指印登记。
+"This is your work permit for the Southeast Asia Company. Please carry it with you," the clerk handed her another similar folded card—and of course, she had to register her fingerprint again.
 
-　　“按照元老院和军务总监部的命令，东南亚公司的船长都要授予海军预备役少尉的军衔。”办事员继续说道，“这是文书，您一会要去一次港务大楼里的要塞指挥部，那里会帮您办理的。”
+"According to the orders of the Senate and the General Military Supervisory Department, all captains of the Southeast Asia Company are to be granted the rank of naval reserve ensign," the clerk continued. "This is the document. You will have to go to the fortress command post in the port authority building later. They will help you with the procedures there."
 
-　　“好……”李华梅已经开始晕了。
+"Okay..." Li Huamei was already starting to feel dizzy.
 
-　　从海关大楼出来，她又被带到德隆银行博铺办事处，办了一张储蓄存折：用来发工资、分红和扣除社保费用之用。
+After coming out of the customs building, she was taken to the Bopu office of the Delong Bank to open a savings passbook: for receiving salary, dividends, and deducting social security fees.
 
-　　“您现在已经拥有了元老院为您提供的社会保险。”办事员倒背如流，面带微笑的介绍着。
+"You now have the social insurance provided by the Senate," the clerk introduced with a smile, reciting from memory.
 
-　　“啥……射会？”李华梅瞠目结舌。
+"What... social insurance?" Li Huamei was dumbfounded.
 
-　　按照最近一次财政工作会议上的结果，目前开始在所有财政供养人员：干部、职员、工人、军人中推行的社会保险，建立养老、工伤和医疗三项基金，按照基数由财政和个人各自承担一部分。
+According to the results of the last financial work conference, social insurance was currently being implemented among all financially supported personnel: cadres, staff, workers, and soldiers. Three funds were established for pensions, work-related injuries, and medical care, with the government and individuals each bearing a portion according to the base number.
 
-　　东南亚公司虽然有商股，但是也是国有性质，所以也享受这一体制。李华梅对保险略有所知，欧洲很早就有了海运保险制度，在中国，镖局其实也有类似担保责任在内。不过可没有养老金之类的概念。解释了半天才知道自己每个月要交钱，这样以后自己生病了或者老了干不动活就可以从银行领钱了……
+Although the Southeast Asia Company had commercial shares, it was also state-owned, so it also enjoyed this system. Li Huamei knew a little about insurance. Europe had a maritime insurance system very early on, and in China, the escort agencies actually had a similar guarantee responsibility. However, there was no concept of pensions. It took a long time to explain that she had to pay money every month, so that she could receive money from the bank when she got sick or old and could no longer work...
 
-　　骗谁呢。李华梅想，老了不靠儿孙靠这银行那成——就是儿孙也靠不住，还得自己口袋里的真金白银来得实在，靠得住。这所谓的养老保险左不过也是髡贼变着法收税罢了。
+Who are you kidding, Li Huamei thought. When you get old, you rely on your children and grandchildren, not this bank—even children and grandchildren are not reliable. The real gold and silver in your own pocket is the most reliable. This so-called pension insurance is just another way for the髡 to collect taxes.
 
-　　说到收税问题，办事员倒也没有遗漏，通知她说按照她的工资和预计的分红情况，她的预期收入已经达到了个人所得税的起征点：她得每月缴纳所得税——自动从存折上扣除。
+Speaking of taxes, the clerk did not miss it. He informed her that according to her salary and estimated dividends, her expected income had already reached the threshold for individual income tax: she had to pay income tax every month—automatically deducted from her passbook.
 
-　　在被官僚主义的文牍折磨了一下午之后，李华梅终于从要塞指挥部出来了，她完成了最后一道手续，正式注册成为了海军预备役少尉。当然了，她还需要考两张证书来证明自己的能力。不管你多有本事，总之在元老院眼里都得有证才行。
+After being tormented by bureaucratic paperwork for an afternoon, Li Huamei finally came out of the fortress command post. She had completed the last procedure and was officially registered as a naval reserve ensign. Of course, she still needed to take two certificate exams to prove her ability. No matter how capable you were, in the eyes of the Senate, you had to have a certificate.
 
-　　“恭喜你了，现在你就是我们一伙了。”听说她已经正式入籍当了归化民，司蜜达表示由衷的祝贺，高兴地冲着她说道。
+"Congratulations, you are one of us now," Si Mida said with sincere congratulations, smiling at her when she heard that she had been officially naturalized.
 
-　　“呸，谁和你们是一伙。”李华梅的脸都红了。她得到文书之后，就来到司蜜达这里，想具体打听下自己加入的东南亚公司的路数。过去她在海南周边看见过几艘挂着启明星旗帜的东南亚公司旗帜的商船，但是很少在南洋看到它们的踪影。刚才去了这家公司的办公室，也没觉得他们有很多生意做，心里不免有些奇怪。没想到一进屋子就被人打趣。
+"Pah, who is one of you," Li Huamei's face turned red. After receiving the document, she came to Si Mida's place to inquire about the Southeast Asia Company she had joined. In the past, she had seen a few merchant ships of the Southeast Asia Company flying the Venus flag around Hainan, but she rarely saw them in the South China Sea. When she went to the company's office just now, she didn't feel that they had much business, so she couldn't help but feel a little strange. She didn't expect to be teased as soon as she entered the room.
 
-　　“别不好意思嘛。”司蜜达因为怀孕的关系，变得唠唠叨叨，“你现在好歹也算是首长的人了。你和我们不一样呀，有船有人的女中豪杰，首长们都喜欢你——特别是海军的那几个，说不定还能弄个正房夫人当当呢。”
+"Don't be shy," Si Mida said, becoming chatty due to her pregnancy. "You are now considered one of the chief's people. You are different from us. You are a heroine with a ship and people. The chiefs all like you—especially those in the navy. Maybe you can even become a proper wife."
 
-　　“那几个废物点心……”一提起这几个“粉丝”，李华梅总要想起一个个哆哆嗦嗦连桅杆都爬不上去的怂包样，实在对他们尊敬不起来。
+"Those useless things..." Whenever these "fans" were mentioned, Li Huamei always remembered their trembling and cowardly appearance, unable to even climb the mast. She really couldn't respect them.
 
-　　司蜜达露出了不以为然的表情，在她看来李华梅已经成了“首长”们的手下，还这么不敬，简直就是大逆不道。
+Si Mida showed a disapproving expression. In her opinion, Li Huamei had become a subordinate of the "chiefs," and it was simply outrageous for her to be so disrespectful.
 
-　　李华梅从司蜜达口中没得到多少东南亚公司的消息——别说司凯德不和她说起工作上的事情，就是司凯德自己也对这个东南亚公司所知甚少。这家公司自从成立之日起，就没做过什么远洋贸易。一直在海军的控制下承担着货运任务，最远不过去过越南而已。直到平秋盛打开了暹罗贸易的大门之后东南亚公司才跑了几趟暹罗。
+Li Huamei did not get much information about the Southeast Asia Company from Si Mida—not to mention that Si Kaide did not talk to her about work matters, even Si Kaide himself knew very little about this Southeast Asia Company. Since its establishment, this company had not done much ocean trade. It had been under the control of the navy, undertaking freight tasks, and the farthest it had gone was Vietnam. It was not until Ping Qiusheng opened the door to trade with Siam that the Southeast Asia Company made a few trips to Siam.
