--- a/_posts/2013-4-2-5-46100.md
+++ b/_posts/2013-4-2-5-46100.md
@@ -1,115 +1,115 @@
 ---
 layout: post
-title: 第四百六十一节 拍卖
+title: "Section 461: The Auction"
 category: 5
 path: 2013-4-2-5-46100.md
 tag: [normal]
 ---
 
-　　玛丽娜在浴室楼上的单独卧室里被囚禁了七天，这里的一切和修道院颇为类似，简单的房间，但是床单柔软舒适，精致的纱帐，窗户上虽然安装着铸铁的栏杆，但是大幅的玻璃透入的阳光明媚耀眼——让她想起了西班牙的太阳。
+Marina was imprisoned for seven days in a separate bedroom on the upper floor of the bathhouse. Everything here was quite similar to the convent: a simple room, but with soft and comfortable bedsheets, an exquisite gauze canopy, and although the windows were fitted with cast iron bars, the large panes of glass let in bright and dazzling sunlight—it reminded her of the sun in Spain.
 
-　　最让她难以置信的是卧室居然有单独的厕所：全部用上好的中国瓷砖贴面，连马桶都是瓷器的！
+What she found most incredible was that the bedroom actually had a separate toilet: all tiled with fine Chinese porcelain, and even the toilet bowl was made of porcelain!
 
-　　我现在比国王、皇帝、苏丹和红衣主教们还要阔气！她吃惊的想到。
+I am now more extravagant than kings, emperors, sultans, and cardinals! she thought in astonishment.
 
-　　她的每天的生活十分优渥——虽然没有女仆贴身服侍，但是每天都会有华人女仆来为她收拾收拾床铺，送来一日三餐，都是些她没尝过得简单又新奇的伙食：口味清淡，味道鲜美。
+Her daily life was very comfortable—although she had no personal maid, a Chinese maid would come every day to make her bed and bring her three meals a day, all of which were simple and novel dishes she had never tasted before: light in flavor and delicious.
 
-　　玛丽娜在女修道院的伙食虽然谈不上艰苦，但是克制和禁欲的理念是始终贯穿着对她们的教育中的，因而伙食十分寡淡。乍一尝到各种新奇美味的食物不由得胃口大开。特别是一种用海鲜和稻米制作的烩饭令她十分喜爱。饭后总是会送一杯放入柠檬片和糖块的“红茶”。
+Although Marina's meals at the convent were not harsh, the concepts of restraint and asceticism were always instilled in their education, so the food was very bland. The sudden taste of various novel and delicious foods whetted her appetite. She was particularly fond of a risotto made with seafood and rice. After the meal, a cup of "black tea" with lemon slices and sugar cubes was always served.
 
-　　每天还会送来许多新鲜的水果，很多是她从来没见识过的。
+Many fresh fruits were also sent every day, many of which she had never seen before.
 
-　　每到中午，收拾过午餐餐具之后，一名女仆会进来帮她放下泛着暗黄色微光的细致美丽的中国帘子，把灼热的阳光挡在室外，然后端来一个美丽洁白的青花瓷瓷缸，里面放着一大块的冰：晶莹剔透，散发着一缕一缕的白色水汽。然后她就会在女仆的服侍下换上柔软透气的细布做成的睡袍，在宜人的温度和惬意的幽暗光线中沉沉睡去。
+Every day at noon, after the lunch dishes were cleared, a maid would come in to help her lower the delicate and beautiful Chinese curtains with a faint yellowish glow, blocking the scorching sun outside. Then she would bring a beautiful and clean blue and white porcelain jar with a large block of ice inside: crystal clear, emitting wisps of white water vapor. Then, with the help of the maid, she would change into a soft and breathable fine cloth nightgown and fall into a deep sleep in the pleasant temperature and comfortable dim light.
 
-　　下午四时她会被唤醒，然后会被女仆带去洗澡——这是强制性的。如果她不去，健壮的女仆会毫不犹豫的揪着她的胳膊拽着她去洗，她们用一种加了某种香精油的肥皂为她洗澡。这让她很是不安：据说苏丹的后宫也是这样做的。
+She would be woken up at four in the afternoon and then taken by the maid to take a bath—this was mandatory. If she refused, the sturdy maid would not hesitate to grab her arm and drag her to the bath. They would bathe her with a soap scented with some kind of essential oil. This made her very uneasy: it was said that the Sultan's harem did the same.
 
-　　洗过澡之后，她被重新带回到卧室，换上干净的衣服，替换下来的衣服全部被收走。服装并不奢华，但是全部是非常细腻舒适的料子——穿着也觉得合体舒适。
+After the bath, she was taken back to her bedroom and changed into clean clothes. All the clothes she had taken off were collected. The clothes were not luxurious, but they were all made of very fine and comfortable materials—they were also well-fitting and comfortable to wear.
 
-　　如果不是她的俘虏身份，这些日子可以说是十来年来最优渥舒适的生活了。她的心情甚至为此能更好些。
+If it weren't for her status as a captive, these days could be said to be the most comfortable and luxurious life she had had in more than ten years. Her mood could even be better for it.
 
-　　前些日子，这里一直十分的安静，楼下很少有人声。但是从几天前开始，院子里开始热闹起来。经常有人来回走动的声音，不时还响起斥骂和哭叫声。从窗户边勉强可以看到院子里的一些情况，她看到有许多褐色、黑色和金色头发的女人在院子里等候，她们一个个披头散发，破衣烂衫。神情萎顿，被那几个曾经“伺候”她的华人女仆搓弄着，斥骂着——显然她们是俘虏或者奴隶。在这个院子里重复着和她一样的过程。
+For the past few days, it had been very quiet here, with few voices from downstairs. But a few days ago, the courtyard began to get lively. There were often sounds of people walking back and forth, and from time to time, there were shouts and cries. From the window, she could barely see some of the situation in the courtyard. She saw many women with brown, black, and golden hair waiting in the courtyard. They were all disheveled, with tattered clothes and listless expressions, being pushed and scolded by the same Chinese maids who had "served" her—obviously, they were captives or slaves, repeating the same process as her in this courtyard.
 
-　　这使得她对自己的命运异常的担忧：这样的优待显然不是单纯的“好意”。她只能在焦虑中等待着自己的命运。她开始失眠，经常连续几个小时的祈祷。
+This made her extremely worried about her own fate: such preferential treatment was clearly not simply "goodwill." She could only wait for her fate in anxiety. She began to suffer from insomnia and often prayed for hours on end.
 
-　　这天，门多萨小姐终于出现在她的面前。
+On this day, Miss Mendoza finally appeared before her.
 
-　　“您终于来了！”被焦虑和等待折磨已经开始有些神经质的玛丽娜说，“你们到底打算怎么安排我？”
+"You've finally come!" Marina, who had become somewhat neurotic from the torment of anxiety and waiting, said. "What do you intend to do with me?"
 
-　　“你这么想知道吗？”
+"Do you really want to know?"
 
-　　“我只是想早点知道我的命运罢了。”玛丽娜手里拿着念珠，仰望天空。
+"I just want to know my fate sooner rather than later," Marina said, holding her rosary and looking up at the sky.
 
-　　“我们不是海盗。但是您是我们的俘虏。所以要按照处置俘虏的规矩来办，也就是说：公开拍卖。”
+"We are not pirates. But you are our captive. So we must follow the rules for disposing of captives, which is: public auction."
 
-　　这个词汇似乎是极不情愿的从门多萨的嘴唇中吐露出来的。
+This word seemed to be uttered from Mendoza's lips with great reluctance.
 
-　　“上帝救我！”玛丽娜惊叫一声，似乎就要昏了过去——这是她最为害怕的事情。她不由自主的紧紧的握住了门多萨的手，颤声说道：“看在我们是同胞又是基督徒的份上！不要让我沦为后宫的女奴！”
+"God save me!" Marina cried out, as if she was about to faint—this was what she feared most. She involuntarily clasped Mendoza's hand tightly and said in a trembling voice, "For the sake of our being compatriots and Christians! Don't let me become a slave girl in a harem!"
 
-　　门多萨的表情让她心里又升起了一丝希望：“您听我说。只要你们肯放了我，我的未婚夫会给向你们支付一笔巨款——我的未婚夫马上就是马尼拉最富有的人了！或许是整个菲律宾，甚至新西班牙最富有的贵族！”
+Mendoza's expression gave her a glimmer of hope. "Listen to me. If you are willing to release me, my fiancé will pay you a huge sum of money—my fiancé will soon be the richest man in Manila! Perhaps the richest nobleman in the entire Philippines, or even New Spain!"
 
-　　门多萨摇了摇头：“这不可能。这是元老院的决定！”她的脸上带着同情的神情：“你好好休息吧。”说着快步离开了房间。
+Mendoza shook her head. "That's impossible. This is the decision of the Senate!" Her face showed a look of sympathy. "You should rest well." With that, she quickly left the room.
 
-　　唐娜玛丽娜·德·阿雷利亚诺昏了过去。
+Doña Marina de Arellano fainted.
 
-　　醒来的时候她已经躺在了床上，一位陌生的教士正坐在她的床畔。带着爱怜的表情看着她。
+When she woke up, she was already lying in bed. A strange priest was sitting by her bedside, looking at her with a loving expression.
 
-　　“神父……”玛丽娜看到一位欧洲神父，不由得想坐起身来。
+"Father..." Marina saw a European priest and couldn't help but want to sit up.
 
-　　“我的孩子。您的身体还很虚弱，还是先躺着吧。”神父说着一口蹩脚的西班牙语，“您先吃一剂药——会让你舒服一些的。”
+"My child, you are still very weak. You should lie down for now," the priest said in broken Spanish. "Take a dose of medicine first—it will make you feel better."
 
-　　他喂她喝下了一小玻璃杯苦涩的药水。
+He fed her a small glass of bitter potion.
 
-　　“神父，”玛丽娜虽然不知道为何这里会有一位欧洲人神父，但是他的出现让他燃起了新的希望，但是对方的西班牙语实在太难懂了。于是她试着用意大利语——对方果然能够说语。
+"Father," Marina said, although she didn't know why there was a European priest here, his appearance gave her new hope. But the other party's Spanish was too difficult to understand. So she tried Italian—and the other party could indeed speak it.
 
-　　“您是意大利人！”
+"You are Italian!"
 
-　　“不错，我来自意大利。”
+"That's right, I am from Italy."
 
-　　“看在上帝的份上，请您救救我！”她哀求道，“海盗们要把我拍卖！请您不要让我沦为异教徒的奴隶！”
+"For God's sake, please save me!" she pleaded. "The pirates are going to auction me off! Please don't let me become a slave to the heathens!"
 
-　　说着她从自己的手指上拽下了戒指：“请您找一个人，把我的信件和戒指一起给交给他，他会重重的报答您和您的使者的。”
+With that, she pulled the ring from her finger. "Please find someone and give him my letter and this ring. He will reward you and your messenger handsomely."
 
-　　神父摇了摇头：“我的孩子，即使我马上派人去送信也来不及了。拍卖会就在后天举行。他们打算把您和那些从巴士拉运来的女奴一起拍卖……”
+The priest shook his head. "My child, even if I send someone with the letter right away, it will be too late. The auction will be held the day after tomorrow. They plan to auction you off with the slave girls brought from Basra..."
 
-　　“上帝！”玛丽娜捂住了自己的脸，抽泣起来。
+"God!" Marina covered her face and began to sob.
 
-　　“您不要担心。”神父压低了声音说，“门多萨小姐将您的求告告诉我之后我一直在为您的解救而奔走……”
+"Don't worry," the priest said in a low voice. "After Miss Mendoza told me of your plea, I have been working to save you..."
 
-　　“您快说吧。”玛丽娜的心中又燃起来希望的火焰。
+"Please tell me quickly," Marina's heart was once again filled with the flame of hope.
 
-　　“您现在是在临高，是澳洲人的领地上。他们会在后天拍卖战利品。不过，他们并不禁止其他人来购买奴隶。所以我打算找一位基督徒出面将您买下……”
+"You are now in Lingao, on the territory of the Australians. They will auction off the spoils of war the day after tomorrow. However, they do not prohibit others from buying slaves. So I plan to find a Christian to buy you..."
 
-　　“如果您能救我出虎口，我会感激您一辈子的。”
+"If you can save me from the tiger's mouth, I will be grateful to you for the rest of my life."
 
-　　“您放心，我们已经为您寻找了一位合适的人选。”意大利人说，“他是荷兰人在本地的领事……”
+"Rest assured, we have already found a suitable person for you," the Italian said. "He is the Dutch consul here..."
 
-　　“一个新教徒！”玛丽娜差点惊叫起来，这简直比异教徒还可怕——荷兰人在西班牙和葡萄牙的美洲殖民地的名声十分的差，简直势如水火。
+"A Protestant!" Marina almost screamed. This was even more terrifying than a heathen—the Dutch had a very bad reputation in the American colonies of Spain and Portugal, and they were like fire and water.
 
-　　“不，他是一位真正的教徒。他叫莱布·特里尼。是我的同胞，也很同情您。”教士安慰她，“他在这里为澳洲人绘画，积攒了许多钱。足够支付购买您的花费。”
+"No, he is a true believer. His name is Leib Trini. He is my compatriot and is also very sympathetic to you," the priest comforted her. "He paints for the Australians here and has saved a lot of money, enough to pay for your purchase."
 
-　　“我父亲和未婚夫在菲律宾和新西班牙拥有许多财产。请您转告那位好心的基督徒，喊价的时候不要心慌意乱，不论对方出多少价码，他都一定要胜过他。只要他能把我买下，我就会出双倍的赎金为自己赎身。但是无论如何，千万不要让我落入异教徒之手……”
+"My father and fiancé have many properties in the Philippines and New Spain. Please tell that kind Christian not to panic when bidding. No matter how much the other party bids, he must outbid them. As long as he can buy me, I will pay double the ransom to redeem myself. But no matter what, please don't let me fall into the hands of the heathens..."
 
-　　“这我就放心了！”玛丽娜说着感动的握住了他的手：“谢谢您，您的大恩大德我没齿难忘。”她忽然想起她还不知道对方的名字，“请问您的姓名？”
+"I am relieved to hear that!" Marina said, gratefully grasping his hand. "Thank you, I will never forget your great kindness." She suddenly remembered that she did not know his name. "May I ask your name?"
 
-　　“我是上帝的仆人。”教士说，“耶稣会的一员。现在我得赶紧离开了。愿上帝保佑您。”
+"I am a servant of God," the priest said. "A member of the Society of Jesus. Now I must leave quickly. May God bless you."
 
-　　夸克穷坐在商馆的椅子上，品味着女仆送来的“雪茄”，心中有一种要发大财的预感。
+Quark sat in a chair at the trading post, savoring the "cigar" that the maid had brought him, with a premonition that he was about to make a fortune.
 
-　　就在一周前，他亲自出马指挥到巴士拉去得双桅帆船“狮”号终于安全的抵达的博铺，运来了183个女奴。这是他在巴士拉奴隶市场买下的200个女奴的幸存者——要不是路上遇到了一次风暴，或许能活下来的人会更多。他尽量给每个女奴足够的空间、水和食物，免得她们在路上损耗过多。
+Just a week ago, he had personally commanded the two-masted schooner *Lion* to Basra, and it had finally arrived safely in Bopu, carrying 183 female slaves. These were the survivors of the 200 female slaves he had bought in the Basra slave market—if it hadn't been for a storm on the way, perhaps more would have survived. He had tried his best to give each slave enough space, water, and food to prevent them from being overly depleted on the way.
 
-　　即使这样，他的收入也会十分可观，司凯德部长许诺给他每个健康的女奴到岸价为五十石白糖。这一船白糖运到波斯能赚到多少钱，他简直做梦都要笑醒。
+Even so, his income would be very considerable. Minister Si Kaide had promised him a shore price of fifty stones of white sugar for each healthy female slave. He would wake up laughing in his dreams just thinking about how much money he could make by transporting this shipload of white sugar to Persia.
 
-　　贩奴真是一本万利的买卖！夸克遗憾的想到，如果他们对巴士拉的女奴的需求量有需要东南亚奴隶那么高就好了……
+Slave trading was truly a business of immense profit! Quark thought with regret. If only their demand for female slaves from Basra was as high as their need for Southeast Asian slaves...
 
-　　正在傻笑的时候，司凯德部长满面春风的走了进来。
+As he was chuckling to himself, Minister Si Kaide walked in with a beaming face.
 
-　　“怎么样？检疫的结果如何？”夸克穷急不可耐的站起来问道。
+"How is it? What are the results of the quarantine?" Quark stood up impatiently and asked.
 
-　　“初步的检查全部合格。”司凯德的心情很是愉快，为元老院运来大家的夙愿“大洋马”，光这个就足够让他在元老院的人气暴涨——虽然人数有点少，但是他初步到检疫营实地观摩相貌和身材，认为质量相当不错，足够让多数元老满意。
+"The preliminary examination is all qualified." Si Kaide was in a very good mood. Bringing the long-awaited "foreign horses" to the Senate was enough to make his popularity in the Senate soar—although the number was a bit small, he had initially gone to the quarantine camp to observe their appearance and figure, and he thought the quality was quite good, enough to satisfy most of the elders.
 
-　　“这么说……”
+"So..."
 
-　　“没错。”司凯德说着从口袋里掏出一张单子，夸克穷知道那是什么：一张海关仓库里的栈单。他的眼前仿佛有无数的银币在飞舞。
+"That's right." Si Kaide said, taking a list from his pocket. Quark knew what it was: a warehouse receipt from the customs warehouse. It was as if countless silver coins were flying before his eyes.
 
-　　“这是奴隶的货价。”司部长说，“至于你一起运来的那几匹阿拉伯马的价格？”
+"This is the price of the slaves," Minister Si said. "As for the price of the few Arabian horses you brought with you?"
 
-　　“这是我的礼物——作为让我为元老院服务的感谢。”夸克穷恭敬的鞠了一躬，“愿为元老院效劳。”
+"This is my gift—as a thank you for letting me serve the Senate," Quark bowed respectfully. "I am willing to serve the Senate."
