--- a/_posts/2013-4-20-6-00700.md
+++ b/_posts/2013-4-20-6-00700.md
@@ -1,77 +1,77 @@
 ---
 layout: post
-title: 第七节 寻亲的道路
+title: "Section 7: The Road to Finding Family"
 category: 6
 path: 2013-4-20-6-00700.md
 tag: [normal]
 ---
 
-　　一无所获的李华梅从司蜜达那里出来，百无聊赖的一路往码头方向走去——既然暂时得不到什么消息，不如先回船去仔细检查一下船只，看看有哪些地方可以改造一番的。她早就对澳洲人的船只改造技术充满了好奇心：许多旧船破船，只要一落入他们之手，重新投入使用的时候都会变得十分美观，而且船只的操控性和速度都有很大的提高。
+Having gained nothing, Li Huamei left Si Mida's place and walked aimlessly towards the pier. Since she couldn't get any news for the time being, she might as well go back to the ship and inspect it carefully to see what parts could be modified. She had long been curious about the Australians' ship modification technology: many old and broken ships, once they fell into their hands, would become very beautiful when they were put back into use, and the ship's handling and speed would be greatly improved.
 
-　　但是这些“魔改”只有他们自己的船只才有。外人，不管出多大的价钱都得不到这些改造。现在她算是入伙了，那就算是“自己人”了，不管那东南亚公司具体干什么，她提出要求改造船只总没什么问题了——何况她还愿意自己出钱。
+But these "magical modifications" were only available for their own ships. Outsiders, no matter how much they paid, could not get these modifications. Now that she had joined the group, she was considered "one of their own." No matter what the Southeast Asia Company did, it shouldn't be a problem for her to request to modify her ship—not to mention that she was willing to pay for it herself.
 
-　　对她这样常年在海上讨生活的人，船不仅仅简单的运输工具，还是自己寄托性命的所在。关键的时候船只状态如何往往决定一切。所以她在对船只的维修整备上是从来不吝惜于金钱的。
+For someone like her who had been making a living at sea for many years, a ship was not just a simple means of transportation, but also the place where she entrusted her life. At critical moments, the condition of the ship often determined everything. Therefore, she never spared any expense in the maintenance and preparation of her ship.
 
-　　她心里盘算着，首先是安装舵盘，这个轻轻一转就能改变航向的装置太好用了，比舵杆灵活的多；然后是风帆系统，澳洲人似乎使用了一种和欧洲人、中国人都不同的混合式帆装，用风的效率要比一般船只高得多。..
+She was calculating in her mind. First was the installation of a steering wheel. This device that could change the course with a slight turn was too easy to use, much more flexible than a tiller. Then there was the sail system. The Australians seemed to use a hybrid rig that was different from both the Europeans and the Chinese, and its efficiency in using the wind was much higher than that of ordinary ships...
 
-　　当然，最关键的，还是得到更多澳洲人的大炮——她早就看中了那种又粗又短的卡隆炮。发射出来的48磅重炮弹能够给敌船毁灭性的打击。虽然比不上澳洲人最好的大炮，但是杭州号上装上这个。在海上除了澳洲人之外就是所向披靡了。
+Of course, the most crucial thing was to get more of the Australians' cannons—she had long had her eye on that thick and short carronade. The 48-pound cannonballs it fired could deal a devastating blow to enemy ships. Although it was not as good as the Australians' best cannons, if the *Hangzhou* was equipped with it, she would be invincible at sea, except for the Australians.
 
-　　另外就是给自己的水手们装备一批南洋式步枪，这种步枪的射速和精度都让人眼馋——特别是在跳帮战的时候，自己的手下拥有这种武器就会对敌人的火绳枪乃至更好的燧发枪都有压倒性的优势——她还不敢奢望能够弄到伏波军使用的那种步枪。
+Another thing was to equip her sailors with a batch of Nanyang-style rifles. The rate of fire and accuracy of these rifles were enviable—especially in boarding battles, if her men had this weapon, they would have an overwhelming advantage over the enemy's matchlocks and even better flintlocks. She didn't dare to hope to get the kind of rifles used by the Fubo Army.
 
-　　不过到了船厂一问。却被告知眼下根本没时间接受她的生意，哪怕她是东南亚公司的船也不行——如果她改造船只有很急迫的用途，就得请公司替她打报告，这样才能把杭州号改造列入船厂的生产计划。
+But when she asked at the shipyard, she was told that there was no time to take her business at the moment, even if she was a ship of the Southeast Asia Company. If she had a very urgent need to modify her ship, she would have to ask the company to file a report for her, so that the modification of the *Hangzhou* could be included in the shipyard's production plan.
 
-　　李华梅一贯的思维是只要带着银币没有办不成的事情，第一次在计划经济面前败下阵来，不免十分的不习惯。
+Li Huamei's usual way of thinking was that there was nothing that couldn't be done with silver coins. This was the first time she had been defeated by a planned economy, and she was inevitably very unaccustomed to it.
 
-　　无奈之下，只好又跑去东南亚公司的办公室求助。
+In desperation, she had no choice but to go to the office of the Southeast Asia Company for help again.
 
-　　“你来得正好。”女办事员欣喜道。“原来也要找你。杭州号暂时不用改造了。这里有你的一份命令书：三天后你就指挥杭州号运一批货物去高雄。”
+"You've come at the right time," the female clerk said happily. "We were looking for you anyway. The *Hangzhou* doesn't need to be modified for the time being. Here is an order for you: in three days, you will command the *Hangzhou* to transport a batch of goods to Kaohsiung."
 
-　　“什么？！”李华梅还在转改造船只的念头，没想到立马就有活给自己摊上了，“去高雄吗？”
+"What?!" Li Huamei was still thinking about modifying her ship, but she didn't expect to be assigned a task right away. "To Kaohsiung?"
 
-　　“是的。去高雄。”办事员拿出一个文件袋，“这是航行任务书，还有海图，注意保管。任务完成之后要交还的。”
+"Yes, to Kaohsiung," the clerk said, taking out a file bag. "This is the voyage mission book and the nautical charts. Please keep them safe. They must be returned after the mission is completed."
 
-　　李华梅知道高雄——她过去多次去过大员。知道高雄就在荷兰人的大员港不远的海岸上，原本叫做打狗的地方。
+Li Huamei knew of Kaohsiung—she had been to Dayuan many times in the past. She knew that Kaohsiung was on the coast not far from the Dutch port of Dayuan, in a place originally called Takau.
 
-　　“明白了，我明天一早就出发——”既然澳洲人已经有事情给她做，她还是表现的积极些为好。
+"Understood, I will set off tomorrow morning—" Since the Australians already had something for her to do, it was better for her to be more proactive.
 
-　　“不，不，”女办事员赶紧制止她，“船只出航有航次分配，你要按照任务书上的规定时间出航。不能擅自出航——否则就是严重违纪。给首长们办事，要守规矩才行。不能擅自行动。”
+"No, no," the female clerk quickly stopped her. "Ship departures are allocated by voyage. You must depart at the time specified in the mission book. You cannot depart without authorization—otherwise, it is a serious violation of discipline. When you work for the chiefs, you must follow the rules. You cannot act on your own."
 
-　　李华梅在东南亚公司被女办事员教育了一番才算溜出来：这感觉实在坏透了。自己这个原本自由的人，如今一下就好像撞入了网中一样，抬腿迈步，处处都有许许多多的限制，开口就是要证件，闭口就是要填表，样样都是规矩比——在小姐手下还要不自由。
+Li Huamei was educated by the female clerk at the Southeast Asia Company before she was allowed to slip away. This feeling was really bad. She, who was originally a free person, now felt as if she had crashed into a net. Every step she took was subject to many restrictions. Every time she opened her mouth, she was asked for documents, and every time she closed it, she had to fill out a form. Everything was about rules—it was even less free than under her mistress.
 
-　　李华梅不由得叹了口气：吃人饭，受人管。这澳洲人的海鲜粥不是那么好吃的，规矩太多——要不是为了姐姐的下落，她还真不大情愿上这里来卧底呢。
+Li Huamei couldn't help but sigh: you eat someone's food, you are under their control. This Australian seafood congee was not so easy to eat, there were too many rules. If it weren't for her sister's whereabouts, she would not have been willing to come here as an undercover agent.
 
-　　回想当年在澳门的酒店里，海军的“少壮派”们要招募自己当船长，恨不得把自己的家底都亮出来时候的模样相比，澳洲人这几年来真是天翻地覆，隐隐约约已经有南中国海霸者的身份——自己大约早就不在他们眼里了。
+Thinking back to the hotel in Macau back then, when the "young turks" of the navy wanted to recruit her as a captain, they were so eager that they almost showed her all their assets. Compared to that, the Australians had changed so much in the past few years, and they vaguely had the status of the hegemon of the South China Sea—she was probably no longer in their eyes.
 
-　　要是当初就接受条件当了他们的船长，或许现在自己在这里也是赫赫有名的大人物了吧。想到这里，她不由得一阵唏嘘。
+If she had accepted the conditions and become their captain back then, perhaps she would be a famous figure here now. Thinking of this, she couldn't help but feel a wave of emotion.
 
-　　既然她已经有了具体的任务，眼下又不能改造船只，不如趁着这三天的时间先找找姐姐——反正她现在已经有了身份证，要去临高的任何地方都不再有阻碍了，顺便，再给自己找个住处——她不愿意再住在自家的商馆里了。
+Since she already had a specific task and couldn't modify her ship for the time being, she might as well use these three days to look for her sister first. Anyway, she now had an ID card and there were no longer any obstacles for her to go anywhere in Lingao. By the way, she would also find a place to live for herself—she no longer wanted to live in her own trading post.
 
-　　她从前也去过几次东门市，那是在有人招待陪同的条件下，自己一个人轻松自在的去还是第一回。
+She had been to Dongmen Market a few times before, but that was under the condition of being entertained and accompanied by someone. This was the first time she had gone there alone and at ease.
 
-　　不过，她多少有些不习惯身上这套“归化民制服”，虽然为为了海上搏杀的便利性，她穿的裙子向来是比较短的，但是像个跑马卖解似得直接穿着裤子在大街上晃悠她还是有点感到“羞辱”——不管是大明还是澳门的葡萄牙人，没哪个正经的女人是这么穿着的。
+However, she was somewhat unaccustomed to this "naturalized citizen uniform" she was wearing. Although the skirts she wore were always relatively short for the convenience of fighting at sea, she still felt a little "humiliated" to be walking around on the street in trousers like a street performer. Whether it was in the Ming Dynasty or among the Portuguese in Macau, no decent woman dressed like this.
 
-　　因而她是不是的不自觉的会拉一下制服的下摆，似乎想让它徒劳的起一点裙子的作用。
+Therefore, she would unconsciously pull at the hem of her uniform from time to time, as if trying to make it serve the purpose of a skirt in vain.
 
-　　通往东门市的公路已经被拓阔了，过去常见的慢吞吞的牛车现在已经变少了，马路上更多奔驰着各种马车——双轮的，四轮的，载客的，运货的。到处能够听到牵引的马脖下的铃铛声。虽然马匹的质量不怎么样，但是这里的马匹之多让李华梅觉得吃惊，在整个南中国，一般是很难看到马的。
+The road to Dongmen Market had been widened. The slow-moving ox-carts that were common in the past were now fewer. The road was now filled with all kinds of horse-drawn carriages—two-wheeled, four-wheeled, for passengers, for goods. The sound of bells under the necks of the pulling horses could be heard everywhere. Although the quality of the horses was not very good, the number of horses here surprised Li Huamei. In the entire South China, it was generally difficult to see horses.
 
-　　博铺的交通总站有前往东门市的公共马车可以乘坐——牛车因为速度过慢已经全部停开了。不过她早就想尝试下冒着黑烟，能够自己拉着车厢跑的“火轮车”了。说起来，澳洲人的车船似乎都是冒着黑烟，不用牛马就能自己跑动起来，而且还力大无比。
+There was a public horse-drawn carriage from the Bopu transportation hub to Dongmen Market—the ox-carts had all been stopped because they were too slow. But she had long wanted to try the "steam-wheeled vehicle" that spewed black smoke and could pull its own carriages. Speaking of which, the Australians' vehicles and ships all seemed to spew black smoke and could move on their own without oxen or horses, and they were also incredibly powerful.
 
-　　李华梅上了博铺开往东门市的“临高城铁”。她知道东门市临高最繁华热闹的所在，姐姐要是在澳洲人手下当差做事，不会不在这里露面的。
+Li Huamei got on the "Lingao City Railway" from Bopu to Dongmen Market. She knew that Dongmen Market was the most prosperous and lively place in Lingao. If her sister was working for the Australians, she would not fail to show up here.
 
-　　城铁的票价十分便宜，因而车上挤满了带着蔬菜鸡鸭和各种货物的农民和小贩。李华梅买了二等票，虽然也是敞车，但是因为票价比三等座贵一半，车厢就空得多，车皮也距离冒黑烟的车头远一点。坐二等车的都是和她一样穿着归化民制服的工人和职员，间或也有几个四个口袋的“官”。他们在临高属于有较高收入水平的群体。
+The fare for the city railway was very cheap, so the train was crowded with farmers and small vendors carrying vegetables, chickens, ducks, and various goods. Li Huamei bought a second-class ticket. Although it was also an open car, because the fare was half more expensive than the third-class seat, the carriage was much emptier, and the carriage was also a little further away from the smoke-spewing locomotive. The people sitting in the second-class carriage were all workers and staff wearing naturalized citizen uniforms like her, and occasionally there were a few "officials" with four pockets. They belonged to the group with a higher income level in Lingao.
 
-　　小火车在熟铁轨道上轻快的奔驰着，李华梅坐在最后面的座位上，这里不但能够欣赏风景，也能离开不时飘来的黑烟远一点。
+The small train ran briskly on the wrought iron tracks. Li Huamei sat in the rearmost seat, where she could not only enjoy the scenery, but also be a little further away from the black smoke that drifted over from time to time.
 
-　　放眼望去，四周一片青翠。期间点缀着许多红色和白色的砖瓦房屋。博铺到东门市的沿途的原先有大片都是荒芜的旷野。现在公路边已经兴建起了许多新得居民点和农场。
+As far as the eye could see, it was a sea of green, dotted with many red and white brick and tile houses. The area along the road from Bopu to Dongmen Market was originally a large area of barren wilderness. Now, many new residential areas and farms have been built along the road.
 
-　　文澜江两岸的田洋地势平坦，灌溉便利，特别适宜种植水稻，自古以来就是临高的主要农业产区。但是受困于水利设施缺乏和劳动力稀缺的因素，大部分土地都没有开发。这几年在农委会的不断开发，许多土地已经被辟为标准化农田，建立起多个集约化经营的国有农场，由安置在标准村内，来自大陆的移民耕种——他们不再是一般的自耕农或者佃户，而是农委会隶属下的农业工人。
+The fields on both sides of the Wenlan River were flat and well-irrigated, making them particularly suitable for growing rice. They had been the main agricultural production area of Lingao since ancient times. However, due to the lack of water conservancy facilities and labor, most of the land had not been developed. In the past few years, with the continuous development of the Agricultural Committee, much of the land has been converted into standardized farmland, and a number of state-owned farms with intensive management have been established, cultivated by immigrants from the mainland who have been settled in standard villages—they are no longer ordinary self-cultivating farmers or tenant farmers, but agricultural workers under the Agricultural Committee.
 
-　　许多富有开拓精神，又擅长农活的人，不管是地主还是难民，都得到了天地合的支持，经营起规模不一的私人农场，这些大小农场全部按照农委会的标准化农田标准进行过一定程度的改造，渠道、道路、水闸、谷仓、厩舍、树林……无一不是整齐划一，体现着独特的现代美感。
+Many people with a pioneering spirit and good farming skills, whether they were landlords or refugees, received the support of the Heaven and Earth Society and started private farms of varying sizes. These large and small farms have all been transformed to a certain extent according to the standardized farmland standards of the Agricultural Committee. The canals, roads, sluices, granaries, stables, and forests... are all neat and uniform, reflecting a unique modern aesthetic.
 
-　　小火车喷着黑烟和白气，在这片美丽的田野中奔驰着。一阵海风吹过，吹散了煤烟的气味，清风掠过面颊，让她心旷神怡。这如画的美景正是澳洲人的神笔妙手所为。正如他们在原本荒芜的博铺海滩上建造出了能够任意航行纵横四海的快船一样——充满了不可思议。
+The small train, spewing black smoke and white steam, ran through this beautiful field. A sea breeze blew by, dispersing the smell of coal smoke. The cool breeze caressed her cheeks, making her feel refreshed. This picturesque scenery was the work of the Australians' divine brushstrokes. Just as they had built fast ships that could sail freely across the four seas on the originally barren Bopu beach—it was full of incredibility.
 
-　　他们到底掌握了什么样的神奇法术，能够到处化腐朽为神奇一般的点石成金？李华梅过去对澳洲人充满了好奇，现在则满怀崇敬。以至于对自己的卧底任务也变得不那么讨厌起来了。
+What kind of magical arts did they possess that could turn decay into magic and stone into gold everywhere? In the past, Li Huamei was full of curiosity about the Australians, but now she was full of reverence, so much so that she no longer hated her undercover mission as much.
 
-　　她在东门市车站下了车，东门市已经扩张为一个颇具规模的街市。从规模和人口来说已经远远超过了原来的临高县城所在地——临城镇。而且它正不断的沿着文澜江两岸向南扩展，看起来用不了多久就会把整个临高县城也吞并进来。
+She got off at the Dongmen Market station. Dongmen Market had already expanded into a sizable market town. In terms of scale and population, it had far surpassed the original location of Lingao County Town—Lincheng Town. And it was constantly expanding southward along both banks of the Wenlan River. It seemed that it would not be long before it would swallow up the entire Lingao County Town.
 
-　　李华梅站在车水马龙，人流如织的东门市街头，只觉得茫然无措。在这人潮里上哪里去找姐姐呢？她连问人都想不出该问什么，这里每个人看起来都行色匆匆。姐姐到底会在哪里呢？
+Li Huamei stood on the bustling street of Dongmen Market, with its heavy traffic and crowds of people, feeling lost and helpless. Where could she find her sister in this crowd? She didn't even know what to ask. Everyone here seemed to be in a hurry. Where could her sister be?
