--- a/_posts/2013-4-21-6-00800.md
+++ b/_posts/2013-4-21-6-00800.md
@@ -1,58 +1,59 @@
 ---
 layout: post
-title: 第八节 命运的相遇
+title: "Section 8: A Fateful Encounter"
 category: 6
 path: 2013-4-21-6-00800.md
 tag: [normal]
 ---
 
-　　密密麻麻犹如树林一般的楼房，大幅的玻璃橱窗，还有琳琅满目的商品……在这一切中她几乎要迷失方向。李华梅徒劳地在东门市和县城转了一天，四处找人打听。但是一点头绪也没有。虽说她自己也知道姐姐不大可能还叫原来的名字，但是她在描述人物形象的时候还是差了很多——多年不见，她印象中的姐姐已经完全偏差了，她还是习惯地认为姐姐依然面颊白皙笑如春风，而且比自己高一头——如果真有那么高的女人，不用她找也会变成街谈巷议的话题。
+The dense forest of buildings, the large glass shop windows, and the dazzling array of goods... she was almost lost in all of this. Li Huamei wandered around Dongmen Market and the county town for a day in vain, asking people everywhere, but she had no clue. Although she knew that her sister was unlikely to still be called by her original name, she was still far off in her description of her sister's appearance. After not seeing her for many years, her impression of her sister was completely distorted. She still habitually thought that her sister's cheeks were still fair and her smile was like a spring breeze, and that she was a head taller than herself. If there really was such a tall woman, she would have become a topic of street talk without her having to look for her.
 
-　　最关键的是李默一直深居简出，基本上就是在土著不得擅入的南海农场宿舍和闲人免进的总医院总务科之间两点一线，女儿李荃平时住校，每周回家一趟都是天黑前后。这两个人在绝大多数归化民和土著的生活中等于是不存在的。
+The most crucial thing was that Li Mo had always lived in seclusion, basically moving between the South China Sea Farm dormitory, which was off-limits to natives, and the general affairs department of the general hospital, which was also off-limits to idlers. Her daughter, Li Quan, lived at school and only came home once a week, around dusk. These two people were practically non-existent in the lives of most naturalized citizens and natives.
 
-　　她在东门市的查找毫无结果，看来没有小姐的情报自己还是做不到啊——小姐的锁链依然无形的锁着自己，她不由地觉得气馁。又隐隐约约地感到，小姐似乎对自己隐瞒了什么。
+Her search in Dongmen Market was fruitless. It seemed that she still couldn't do it without her mistress's intelligence. Her mistress's chains still invisibly bound her, and she couldn't help but feel discouraged. She also vaguely felt that her mistress seemed to be hiding something from her.
 
-　　除了找姐姐，李华梅还想找一座房子。她是第一个在澳宋做贸易，租用房租设立商馆的海商。但是李家商馆的人都是李思雅的亲信。不管是将来找到姐姐一起住，还是避开乳姐的耳目，怎么都需要自己的房子。这里和澳门不同，小姐的手下再神通广大，也断然不可能在澳洲人地盘上搞什么事端的。
+Besides looking for her sister, Li Huamei also wanted to find a house. She was the first sea merchant to trade in Song-Song Australia and rent a house to set up a trading post. But the people at the Li family's trading post were all Li Siya's trusted followers. Whether it was to live with her sister after finding her, or to avoid her foster sister's eyes and ears, she needed her own house. This was different from Macau. No matter how resourceful her mistress's subordinates were, it was absolutely impossible for them to cause any trouble on Australian territory.
 
-　　多年来。她一直以船为家，即使是澳门的那个家，一年中也难得会去住几天。空旷而冰冷的豪宅。如果不是有小姐的存在，她简直一分钟也不愿意多待。
+For many years, she had made the ship her home. Even the home in Macau, she rarely stayed there for a few days a year. The empty and cold mansion, if it weren't for her mistress's presence, she wouldn't want to stay there for a minute longer.
 
-　　女人一旦有了家的期盼，就会在一夜之间变成守财奴，李华梅也一样。这次赚取的利润除去必要的开销，余下的她都交到商馆柜上汇回澳门去——这也算是补偿一点内心准备“独走”的亏欠。不过从维斯赫伊床底下搜出来的金币、宝石和首饰她就不客气了。
+Once a woman has the expectation of a home, she will become a miser overnight, and Li Huamei was no exception. After deducting the necessary expenses from the profits she earned this time, she handed over the rest to the trading post's counter to be remitted back to Macau—this was also a way to compensate for the guilt of preparing to "go it alone." However, she was not polite about the gold coins, gems, and jewelry she had found under Visby's bed.
 
-　　临高的房价比两年前涨了很多。大量移民的涌入使得建筑用地变得非常紧张。而更多并非企划院计划内的自发移民的到来使得本地的房价和地价跟着一起上涨。
+The housing prices in Lingao had risen a lot in the past two years. The influx of a large number of immigrants had made construction land very tight. And the arrival of more spontaneous immigrants who were not part of the Planning Institute's plan had caused local housing and land prices to rise together.
 
-　　不但“吃瓦片”的本地土著出租户大量出现，还出现了许多炒作地皮的人。因而李华梅想买房子比她预计要花更多的钱。好在她有沉甸甸的一口袋金币：里面大多数是葡萄牙金币，还有不少印度和波斯的金币。也是一笔不小的财富了。
+Not only had a large number of local native landlords who "lived off rent" appeared, but there were also many people who speculated on land. Therefore, Li Huamei had to spend more money than she expected to buy a house. Fortunately, she had a heavy pocket of gold coins: most of them were Portuguese gold coins, and there were also many Indian and Persian gold coins. It was also a considerable fortune.
 
-　　李华梅看中了一处小院。在博铺和临高之间，这个地区还没大规模开发，房价相对便宜。房主是当地农户。因为吃不消澳宋政府的万税决定把土地卖给国有农场，自己搬到新建的标准村去住。她看中这个地方主要是因为比较隐秘，又不是很荒凉，便于隐蔽金银财宝。而且旁边就有一条文澜江的支流。准备上一条小船有点风吹草动随时可以逃跑。这是她做海匪多年养成的习惯——上了岸就要先看好退路。
+Li Huamei took a fancy to a small courtyard between Bopu and Lingao. This area had not yet been developed on a large scale, and the housing prices were relatively cheap. The owner was a local farmer. Because he could not bear the ten thousand taxes of the Song-Song government, he decided to sell his land to a state-owned farm and move to a newly built standard village. She took a fancy to this place mainly because it was relatively secluded, but not too desolate, which was convenient for hiding gold, silver, and treasures. Moreover, there was a tributary of the Wenlan River next to it. She prepared a small boat so that she could escape at any time if there was any trouble. This was a habit she had developed over many years as a pirate—as soon as she went ashore, she had to find a way out first.
 
-　　决定好了就马上入手。但是卖家希望能用白银结账。虽然临高目前推广使用流通券结算，禁止白银直接流通。但是农民处于传统习惯还是更信任真金白银。因而私下使用白银的情况还是相当普遍的。由于使用白银属于“犯法”，所以凡是使用白银的大宗交易，价格都会有相当程度的下浮，较之于流通券计算要便宜一成以上。
+Once she made up her mind, she immediately bought it. But the seller hoped to be paid in silver. Although Lingao currently promoted the use of circulation coupons for settlement and prohibited the direct circulation of silver, farmers, out of traditional habits, still trusted real gold and silver more. Therefore, the private use of silver was still quite common. Because the use of silver was "illegal," the price of large transactions using silver would be significantly lower, more than 10% cheaper than using circulation coupons.
 
-　　李华梅手里只有金币。只是黄金在东亚不值钱。明清金银比价大约在1:5-1:8之间浮动，产黄金的日本甚至曾经达到过1:3。而在欧洲，金银比价通常在1:10-1:15之间，这也是欧洲人一直用白银而不是黄金购买中国商品的原因。欧洲人同时把用白银收购中国和日本的黄金贩卖到欧洲作为一项有利可图的贸易来做。
+Li Huamei only had gold coins in her hand. It was just that gold was not valuable in East Asia. The gold-silver price ratio in the Ming and Qing dynasties fluctuated between 1:5 and 1:8. In Japan, which produced gold, it even reached 1:3 at one point. In Europe, the gold-silver price ratio was usually between 1:10 and 1:15, which was why Europeans had always used silver instead of gold to buy Chinese goods. Europeans also made a profitable trade of buying gold from China and Japan with silver and selling it in Europe.
 
-　　临高这里，黄金没有货币地位，因而不能流通。只有在德隆银行可以兑换成白银或者流通券。不过按照李华梅的看法。兑换率不大划算。最划算的是找荷兰商馆的意大利人。莱布·特里尼早就发现亚洲的金银比价比欧洲低的多。他在巴达维亚不敢插手这种公司垄断的买卖，到了临高就无所顾忌了。这里经常有商人手里有零散黄金，特里尼就用1:8-1:9的价格收购，范·德兰特隆也在这个小生意里分一些肥。元老院对这事睁一眼闭一眼，反正旧金山就在那摆着，西伯利亚就在那摆着，巴西、南非、澳大利亚就在那摆着，过几年全世界的金子都是元老院的，元老院真正需要发愁的是那些金子如果不在欧亚非洲土著手里，就根本形不成对澳宋工业品购买力。
+Here in Lingao, gold had no monetary status and therefore could not be circulated. It could only be exchanged for silver or circulation coupons at the Delong Bank. However, in Li Huamei's opinion, the exchange rate was not very favorable. The most favorable was to find the Italians at the Dutch trading post. Leib Trini had long discovered that the gold-silver price ratio in Asia was much lower than in Europe. He did not dare to interfere in this kind of company-monopolized business in Batavia, but he had no scruples in Lingao. There were often merchants here with scattered gold in their hands, and Trini would buy it at a price of 1:8-1:9. Van der Lans also got a share of the profits from this small business. The Senate turned a blind eye to this matter. Anyway, San Francisco was there, Siberia was there, Brazil, South Africa, and Australia were there. In a few years, all the gold in the world would belong to the Senate. What the Senate really needed to worry about was that if those gold were not in the hands of the natives of Eurasia and Africa, they would not be able to form a purchasing power for Song-Song industrial products at all.
 
-　　荷兰商馆距离自己的商馆不远，李华梅为了避人耳目，没有坐小火车，而是徒步绕道去了商馆区。如今商馆区像是一个大工地，正在建起十来座砖木结构的欧洲式小楼，也夹杂着中式、日式甚至伊斯兰式风格，相当精美，在绿树掩映之下错落有致。不过这里的大多数房屋都空着。
+The Dutch trading post was not far from her own trading post. In order to avoid being seen, Li Huamei did not take the small train, but walked around to the trading post area on foot. Nowadays, the trading post area was like a large construction site, with a dozen or so brick-and-wood European-style small buildings being built, mixed with Chinese, Japanese, and even Islamic styles, which were quite exquisite and scattered among the green trees. However, most of the houses here were empty.
 
-　　商馆区是新的一个创收项目：用来租给来临高的商团和大商人或者将来的外交使团，比如夸克穷租的商馆是一栋仿都铎式建筑，不但比荷兰人的临时木屋要高一点，就是地基也比正在修建中的荷兰人商馆子来得高，看起来要巍峨许多。为此，不久前巴达维亚给特里尼送来了新的指示，要他尽快修改澳洲人正在修建的荷兰商馆，将原先的二层之上再加一层。
+The trading post area was a new income-generating project: it was used to rent to visiting merchant groups, large merchants, or future diplomatic missions. For example, the trading post rented by Quark was a Tudor-style building, which was not only a little taller than the Dutch temporary wooden house, but its foundation was also higher than the Dutch trading post that was under construction, making it look much more majestic. For this reason, Batavia had recently sent new instructions to Trini, asking him to modify the Dutch trading post that the Australians were building as soon as possible and add another floor on top of the original two floors.
 
-　　在旧时空，英国人和荷兰人之间的争霸故事还要到20年后才会全面展开，现在双方还是盟友，不过无声的攀比已经开始了。李华梅穿的不男不女，不仔细看就像个小工头，大中午的穿过这些工地谁也不会注意。
+In the old time and space, the story of the rivalry between the British and the Dutch would not fully unfold for another 20 years. Now the two sides were still allies, but the silent comparison had already begun. Li Huamei was dressed in an androgynous way. If you didn't look carefully, she looked like a small foreman. No one would pay attention to her passing through these construction sites at noon.
 
-　　敲开荷兰商馆的门，荷兰仆人带着怪异的眼神进去通禀，如果不是李华梅会说几句葡萄牙语，大概会被当成问路讨水的路人。不一会特里尼满面堆笑地迎了出来，双方在殖民贸易部举办的招待会、吹风会等各种会上见过，虽然属于不同阵营，毕竟同在异乡为异客，两个人又都身兼卧底使命，不觉就能谈到一起。
+She knocked on the door of the Dutch trading post. The Dutch servant went in to announce her with a strange look in his eyes. If Li Huamei hadn't been able to speak a few words of Portuguese, she would probably have been treated as a passerby asking for directions or water. In a short while, Trini came out with a smile on his face. The two sides had met at various receptions and briefings held by the Colonial and Trade Department. Although they belonged to different camps, they were both strangers in a foreign land, and both had undercover missions, so they couldn't help but talk to each other.
 
-　　特里尼多次使出浑身解数企图勾搭她，包括提出为她绘制一幅肖像和给她制作若干首饰。不过李华梅对意大利人没有什么特别的性趣，不管鬼佬活大活小，身上的体味让人头大，不用香料还好，熏了香以后，抱着睡觉还不如抱一桶鲱鱼干。
+Trini had tried his best to hook up with her many times, including proposing to paint a portrait for her and make some jewelry for her. However, Li Huamei had no particular sexual interest in Italians. Regardless of whether the foreigner was big or small, the body odor was a headache. It was better not to use perfume. After being perfumed, sleeping with him was worse than hugging a bucket of dried herring.
 
-　　不过，李华梅看得出特里尼的笑容十分勉强，眼睛里更是心事重重。不知道这意大利佬有什么烦心事？
+However, Li Huamei could see that Trini's smile was very forced, and his eyes were full of worries. I wonder what's bothering this Italian?
 
-　　特里尼的画室兼工作室里还坐着十来个人，正在围着石膏像画画。见到来了客人纷纷起来行礼。特里尼那些归化民学生李华梅大概还是有点印象的——他们出去采风的时候在博铺码头上见过几次，不过起身的人里有一个吓了李华梅一跳，这人整整比自己高了一头，剃着寸头，一看皮肤和神态表情，显然是个“真髡”。
+There were about a dozen people sitting in Trini's studio, drawing around a plaster statue. When they saw a guest coming, they all stood up and bowed. Li Huamei probably still had some impression of Trini's naturalized citizen students—she had seen them a few times at the Bopu pier when they went out to sketch. However, one of the people who stood up startled Li Huamei. This person was a head taller than her, with a crew cut. From his skin and expression, he was obviously a "true kun."
 
-　　“这位是……”
+"This is..."
 
-　　“李华梅小姐吧？幸会幸会，我姓祁，祁峰，山峰的峰，建筑总公司的”
+"Miss Li Huamei, right? It's a pleasure to meet you. My surname is Qi, Qi Feng, the feng of mountain peak. From the General Construction Company."
 
-　　“您是……首……首长好。”李华梅一时半会还大习惯这种归化民的称呼。
+"You are... Chief... Hello, Chief." Li Huamei was not yet used to this kind of address for naturalized citizens.
 
-　　李华梅粗门大嗓惯了，自己都不知道自己怎么回事，一下变成了澳洲人说的香菜腔。
+Li Huamei was used to being loud and boisterous. She didn't know what was wrong with her, but she suddenly spoke in what the Australians called a cilantro accent.
 
-　　得益于前时空21世纪初人类有史以来最大规模的城市化进程，元老中有好几个学城市规划和干城市规划的，上到[Ma Qianzhu][y005]、季润之，下到目前还很酱油的祁峰。不过按照[马督工][y005]的话说，前时空的城市规划专业纯属误人子弟兼祸害地方，按督工已经进化成机械式函数计算机的头脑，世界上的一切工作都可以分解为n元n次方程或者矩阵，城规无非是由产业配套半径，资源供给半径，本地支持能力和投资规模组成的四元矩阵，而前时空的城规专业只是教会学建筑的人怎么画街道和下水道。
+Thanks to the largest urbanization process in human history in the early 21st century of the previous time and space, there were several elders who had studied and worked in urban planning, from [Ma Qianzhu][y005] and Ji Runzhi at the top to the still very obscure Qi Feng at the bottom. However, according to [Director Ma][y005], the urban planning major in the previous time and space was purely misleading and harmful to the local area. According to the director's mind, which had already evolved into a mechanical functional computer, all the work in the world could be broken down into n-ary n-degree equations or matrices. Urban planning was nothing more than a four-element matrix composed of industrial supporting radius, resource supply radius, local support capacity, and investment scale. And the urban planning major in the previous time and space only taught architecture students how to draw streets and sewers.
 
-　　祁峰同学恰恰就是[督公][y005]认为被耽误了城规毕业生。不过祁峰的看法完全相反，出生在杭州老城区狭窄街巷里的他，在小学时候见到了一本国外城市风景挂历，被狭窄的生活环境压抑的内心忽然找到了释放通道，从此他开始自学建筑绘画，疯狂的阅读与东西方建筑有关的一切。到了高中时候他的家乡也进入了大拆大盖时代，他觉得再也无法忍受虽然狭窄老旧但是起码还充满独特历史印迹的街巷被设计拙劣的混凝土丛林取代，“美感”这个信念支撑他考上了著名高校的城规专业，支持他成了一个兼职建筑画家，然后又支撑他换了好几份在地上打格的工作，最后支持他毅然回到古代，只为在新世界留下优美而充满性格的城市群。
+Qi Feng was precisely the urban planning graduate that [Director Gong][y005] believed had been delayed. However, Qi Feng's view was completely opposite. Born in the narrow streets and alleys of the old city of Hangzhou, he saw a calendar of foreign cityscapes in elementary school, and his heart, which had been suppressed by the narrow living environment, suddenly found a channel for release. From then on, he began to teach himself architectural drawing and frantically read everything related to Eastern and Western architecture. By the time he was in high school, his hometown had also entered an era of large-scale demolition and construction. He felt that he could no longer tolerate the narrow and old but at least full of unique historical traces of the streets and alleys being replaced by poorly designed concrete jungles. The belief in "beauty" supported him to be admitted to the urban planning major of a famous university, supported him to become a part-time architectural painter, and then supported him to change several jobs of drawing grids on the ground. Finally, it supported him to resolutely return to ancient times, just to leave a beautiful and character-filled urban cluster in the new world.
+
 [y005]: /characters/y005 "Ma Qianzhu"
