--- a/_posts/2013-4-1-5-46000.md
+++ b/_posts/2013-4-1-5-46000.md
@@ -1,105 +1,105 @@
 ---
 layout: post
-title: 第四百六十节 派遣任务
+title: Section 460: The Dispatch Mission
 category: 5
 path: 2013-4-1-5-46000.md
 tag: [normal]
 ---
 
-　　“末班车开走了，运营结束。”魏斯插嘴说，一边肆无忌惮地扫视着包裹在连身裙下的腰肢和高耸的胸部。
+"The last bus has left, service is over," Weiss interjected, his eyes brazenly scanning the waist and soaring chest beneath the one-piece dress.
 
-　　江山咳嗽了一声，提示他注意举止。
+Jiang Shan coughed, a hint for him to mind his manners.
 
-　　“你坐我的公务车回去吧。”江山先走了出去，他不想这个女人在场，更不想为此耽误了正事。一辆红旗马车停在礼堂外面，江山对驭手嘱咐了几句，绅士派头十足地打开车门。柳水心提起裙摆踩上了踏板，露出了裹着丝袜的大腿，向站在马车边上的两个男人递上一个动人的微笑。魏斯·兰度则放肆地吹起了口哨。
+"Take my official car back," Jiang Shan said, walking out first. He didn't want this woman around, and he certainly didn't want her to delay important business. A Red Flag carriage was parked outside the auditorium. Jiang Shan gave the driver a few instructions and, with the air of a perfect gentleman, opened the carriage door. Liu Shuixin lifted her skirt, stepped onto the footboard, revealing a silk-stockinged thigh, and offered a charming smile to the two men standing by the carriage. Weiss Lando let out a shameless whistle.
 
-　　“这次回来你住哪里？还在办公厅第二招待所？”眼看着红旗马车拐了个弯，消失在芳草地的大门外，江山开口问道。
+"Where are you staying this time? Still at the General Office's Second Guesthouse?" Jiang Shan asked as the Red Flag carriage turned a corner and disappeared beyond the gates of Fangcao Di.
 
-　　“对，住那儿总比住教堂好。”兰度说，“装做一个虔诚的信徒是很辛苦的。”
+"Yes, it's better than staying at the church," Lando said. "It's exhausting pretending to be a devout believer."
 
-　　“我们走着过去，好吗？”
+"Shall we walk over?"
 
-　　“有五公里路呢，局长。”
+"It's five kilometers, Director."
 
-　　“你有急事吗？”
+"Are you in a hurry?"
 
-　　“啊？不，反正也没车可坐。”
+"Huh? No, there are no cars anyway."
 
-　　他们走出大门，门口的执勤学生给他们敬礼。门外是大片的果林——原来这里只有一小丛杂木林，现在整个校园所在的高岗已经被学生们种满了各种果树。四周寂静无人，砂石在鞋底下发出悉悉索索的细响，他们走下了高岗，在靠近海边的一条公路上绕了一个弯。夜晚的静谧被远处的博铺造船厂打破了。厂房灯火通明，淹没了夜空中靠近海平线的星光。烟囱里时不时地喷出一束束的火星，恰如点着的焰火。锅炉放出嘶哑的蒸汽声，吊斗在天床上低声嗥叫。吊车哒哒直响，绞盘机刹车时发出小猪仔一样的尖喊，蒸汽机单调的轰嗵作响，汇合着铁器捶打的哗啷声和锯木机的吱吱尖叫，整个工厂就像一头被夜幕隐藏了轮廓的巨兽，正匍匐在海滩上，用它强大的铁肺呼吸。
+They walked out of the gate, and the student on duty saluted them. Outside the gate was a large fruit orchard—originally, there was only a small thicket of miscellaneous trees here, but now the entire high ground where the campus was located had been planted with various fruit trees by the students. It was quiet all around, the gravel crunching softly under their shoes. They descended the high ground and took a turn on a road near the sea. The silence of the night was broken by the distant Bopu Shipyard. The workshops were brightly lit, drowning out the starlight near the horizon. Sparks shot out from the chimneys from time to time, like fireworks being lit. The boilers hissed with steam, and the buckets on the overhead cranes groaned. The cranes clattered, the winch brakes squealed like piglets, and the monotonous thud of the steam engines, combined with the clang of iron being hammered and the screech of the saws, made the whole factory seem like a giant beast whose outline was hidden by the night, crouching on the beach and breathing with its powerful iron lungs.
 
-　　“真美！”江山说。
+"How beautiful!" Jiang Shan said.
 
-　　兰度不能理解这有什么可美的。但他知道这帮子中国人审美趣味：多铆蒸刚，傻大黑粗。“有新的军舰要下水了？天哪，让我想想。又轮到谁该倒霉了？”
+Lando couldn't understand what was so beautiful about it. But he knew the aesthetic tastes of this bunch of Chinese: more rivets, more steam, big and black and crude. "Is a new warship about to be launched? Good heavens, let me think. Whose turn is it to be unlucky now?"
 
-　　“你到过马尼拉吗？”
+"Have you been to Manila?"
 
-　　“370年后到过。”魏斯想开个玩笑，看江山没有作答，便继续说下去：“饥饿行动倒是挺刺激，就是西班牙人的船上实在太脏。到处是粪便和耗子。现在你们想洗劫马尼拉吗？好吧。我可以装扮成一个西班牙官员，就叫——弗朗西斯科·佛朗哥好啦。用不着军舰，我只消带上十罐毒气，到晚上一拧开阀门，你们就尽管戴好防毒面具去搬空马尼拉的银库吧，”他忽然想起了什么，停了下来：“见鬼，耶稣会教士们会认出我。然后我就要上火刑柱啦！”
+"I have, 370 years from now," Weiss tried to make a joke, but seeing no response from Jiang Shan, he continued, "Operation Hunger was quite exciting, but the Spanish ships were just too filthy. Feces and rats everywhere. Do you want to sack Manila now? Alright. I can disguise myself as a Spanish official, let's call me—Francisco Franco. No need for warships, I'll just take ten canisters of poison gas, turn the valves at night, and you can all go in with gas masks and empty Manila's silver vaults." He suddenly remembered something and stopped. "Damn it, the Jesuits will recognize me. Then I'll be burned at the stake!"
 
-　　“马尼拉没有多少耶稣会士，”江山笑了。“马尼拉的修会以圣方济各会和多明我会为主。即使有耶稣会士，多半也没去过澳门——葡萄牙人虽然和他们是一个国王，可是彼此并不友好。”
+"There aren't many Jesuits in Manila," Jiang Shan smiled. "The religious orders in Manila are mainly the Franciscans and Dominicans. Even if there are Jesuits, most of them have probably never been to Macau—although the Portuguese and Spanish have the same king, they are not friendly with each other."
 
-　　“有一个就够了。”
+"One is enough."
 
-　　“兰度先生，你听说过一句中国古代战略学家的名言吗：制人而不制于人。”
+"Mr. Lando, have you ever heard a famous quote from an ancient Chinese strategist: 'Control others, but do not be controlled by others'?"
 
-　　“没有，不过在非洲时，有人告诉我一句中国话：先下手为强。”
+"No, but in Africa, someone told me a Chinese saying: 'He who strikes first, prevails.'"
 
-　　“你这次给我们的报告中指出，李丝雅近来和西班牙人接触频繁。我们在澳门派专人调查过，访问李丝雅的西班牙人里，其中一人是马尼拉总督的特使。”
+"In your report this time, you pointed out that Li Siya has been in frequent contact with the Spanish recently. We have sent special personnel to investigate in Macau, and one of the Spaniards who visited Li Siya is an envoy of the Governor-General of Manila."
 
-　　“马尼拉是想获得那份卖给巴达维亚的情报吧，弄到手了吗？”
+"Manila wants to get that piece of intelligence sold to Batavia, right? Did they get it?"
 
-　　“也许已经弄到了。李丝雅不忠于任何人。她把情报再卖给西班牙人不足为奇。不过她除了有那么一瞬间之外，从来也不算是我们真正的威胁。”江山不想多谈这个问题，有些事情并非每个人都可以知道的。
+"Perhaps they already have. Li Siya is not loyal to anyone. It's not surprising that she would sell the intelligence to the Spanish again. But she has never been a real threat to us, except for that one moment." Jiang Shan didn't want to elaborate on this issue; some things were not for everyone to know.
 
-　　兰度意识到这是“江局”在暗示，李丝雅已经不再是需要他关照的对象了。
+Lando realized that this was "Director Jiang's" hint that Li Siya was no longer his concern.
 
-　　江山掏出细麻布手帕擦了擦汗湿的额头，开始谈到西班牙人的一些奇怪的迹象：他们正在通过澳门的代理商大量收购广东的生铁。硝石、水银与被称为白铅的锌锭。这些货物整船整船地从安平运往马尼拉，这几种物品西班牙人以前很少从中国直接购买。而现在，西班牙人甚至企图在广东招募铜匠和铁匠到马尼拉去干活，以前他们只招募水手。
+Jiang Shan took out a fine linen handkerchief and wiped the sweat from his forehead. He began to talk about some strange signs from the Spanish: they were buying large quantities of pig iron from Guangdong through their agents in Macau. Saltpeter, mercury, and zinc ingots, known as "white lead." These goods were being shipped from Anping to Manila by the boatload. The Spanish had rarely bought these items directly from China before. And now, the Spanish were even trying to recruit coppersmiths and blacksmiths from Guangdong to work in Manila; previously, they had only recruited sailors.
 
-　　“这么说，西班牙人想让我们为海盗行动付出点代价啰？”
+"So, the Spanish want us to pay a price for our piracy?"
 
-　　“不，我们拦截马尼拉盖伦的事情才过去了不到半个月，西班牙人的行动从今年年初就开始了，所以我认为他们的行动是针对荷兰人的。”
+"No, it's been less than half a month since we intercepted the Manila galleon, and the Spanish have been acting this way since the beginning of this year. So I think their actions are directed against the Dutch."
 
-　　马尼拉的菲律宾总督de Tavora一直为荷兰人的威胁而担忧，不断的呼吁国王给他运来更多的钱和士兵来增加马尼拉的防御。菲律宾的西班牙人处境不佳，荷兰人在整个东亚海域不断骚扰他们，而且屡次进攻西班牙人的殖民地，给总督带来了很大的困扰。
+The Governor-General of the Philippines in Manila, de Tavora, had always been worried about the Dutch threat, constantly appealing to the king for more money and soldiers to strengthen Manila's defenses. The Spanish in the Philippines were in a bad situation. The Dutch were constantly harassing them throughout the East Asian seas and had repeatedly attacked Spanish colonies, causing the Governor-General a great deal of trouble.
 
-　　菲律宾殖民地的高级官员们似乎一直生活在对荷兰人发动进攻的忧虑中。
+The high-ranking officials of the Philippine colony seemed to live in constant fear of a Dutch attack.
 
-　　“西班牙人的状态很糟，”江山说，“我们有总督写给枢密院的一系列报告，西班牙人资金不足——没有马尼拉盖伦的补给，当局连维持现状的开销都没有了。他们的人力也不够，海上是荷兰人的骚扰，陆地上是土著的暴动——他们的的贸易开展的很差，不得不大量吸引中国人去开垦，但是又对中国人充满了怀疑。”
+"The Spanish are in a very bad state," Jiang Shan said. "We have a series of reports from the Governor-General to the Privy Council. The Spanish are short of funds—without the supplies from the Manila galleon, the authorities can't even maintain the status quo. They also lack manpower. At sea, they are harassed by the Dutch, and on land, there are native uprisings. Their trade is doing very poorly, and they have to attract a large number of Chinese to cultivate the land, but they are also full of suspicion towards the Chinese."
 
-　　“如果他们的状态这么糟，为什么突然增加了花钱的项目——看样子这些扩大的进口都是用在军备上的——而不是有利可图的投资。”
+"If they are in such a bad state, why have they suddenly increased their spending—it seems these expanded imports are all for military use—and not for profitable investments."
 
-　　“没错。特别是他们突然增加的水银进口——增加的太多了。您知道什么叫混汞法吗？”
+"Exactly. Especially their sudden increase in mercury imports—it's too much. Do you know what the amalgamation process is?"
 
-　　“不知道，我是个不折不扣的大兵。”
+"No, I'm a soldier through and through."
 
-　　“混汞法是一种提炼金银贵金属的工艺。需要大量的水银。”江山说，“我们知道菲律宾是出金银的。但是本时空的西班牙人可不知道……”
+"The amalgamation process is a method for refining precious metals like gold and silver. It requires a large amount of mercury," Jiang Shan said. "We know that the Philippines produces gold and silver. But the Spanish of this time don't know that..."
 
-　　兰度眼睛闪闪发光：“我明白您的意思了。”
+Lando's eyes sparkled. "I understand what you mean."
 
-　　“我们需要一个在马尼拉的人，”顺着公路，百仞城的灯火已经在望，“即使我们能轻易击败只有十七世纪武装的任何敌人，情报依然是必要的。我需要确切地知道西班牙人能干什么，打算干什么。”
+"We need someone in Manila," Jiang Shan said as the lights of Bairen City came into view along the road. "Even if we can easily defeat any enemy armed with 17th-century weapons, intelligence is still necessary. I need to know exactly what the Spanish are capable of and what they intend to do."
 
-　　派一个中国人是不行的，江山早就考虑过这点，西班牙人对中国人的猜忌很深，华人聚居区被限制，华人的活动范围主要是在马尼拉社会的中下层。上层是西班牙人把持着的，一个华人——不管多么富有也难以接触马尼拉的上层。
+Sending a Chinese was out of the question. Jiang Shan had considered this long ago. The Spanish were very suspicious of the Chinese. The Chinese residential areas were restricted, and the scope of Chinese activities was mainly in the middle and lower strata of Manila society. The upper class was controlled by the Spanish, and a Chinese person—no matter how wealthy—would find it difficult to access the upper echelons of Manila.
 
-　　“听起来不错。”魏斯清了一下喉咙。走了这么久的路，他很想再来一瓶格瓦斯：“不过一旦搞砸的话，也许就是我最后一次为您效力了。”
+"Sounds good," Weiss cleared his throat. After walking for so long, he was dying for another bottle of kvass. "But if it goes wrong, this might be the last time I serve you."
 
-　　“你这样想吗？”
+"You think so?"
 
-　　“请别见怪，局长。如果要预料事情的结局，我通常会先想到最糟糕的那个。”
+"Please don't be offended, Director. When I predict the outcome of things, I usually think of the worst-case scenario first."
 
-　　“要是这样：我们会把你的名字刻在情报局的墙上——如果你愿意的话，你可以指定一个归化民孩子做你的继承人。”
+"In that case, we will carve your name on the wall of the Intelligence Bureau—and if you wish, you can designate a naturalized child as your heir."
 
-　　最后一段路程两人都没有说话。“明天早晨九点钟情报局会议，”江山对站在招待所外的归化民接待员做了一个手势，示意他为魏斯打开大门，“我会派车来接你。晚安，詹姆斯·邦德先生。”
+They walked the last stretch of the road in silence. "Intelligence Bureau meeting tomorrow morning at nine," Jiang Shan said to the naturalized receptionist standing outside the guesthouse, gesturing for him to open the gate for Weiss. "I'll send a car to pick you up. Good night, Mr. James Bond."
 
-　　“晚安，M先生。”
+"Good night, Mr. M."
 
-　　江山回到了自己的办公室，桌子上已经送来了厚厚一叠审查马尼拉盖伦船上的俘虏的情况报告。
+Jiang Shan returned to his office. A thick pile of reports on the interrogation of the prisoners from the Manila galleon had already been delivered to his desk.
 
-　　报告十分详细，即使对最卑微的水手，乃至奴隶都有详细的统计数据和尽可能多的个人资料。
+The reports were very detailed, with statistical data and as much personal information as possible, even for the humblest sailor and slave.
 
-　　289名俘虏中有西班牙人、葡萄牙人、意大利人、德意志人和黑人，另有马来人和华人，后二者主要充当水手。还有一些是各种族之间的混血儿。十分典型的大航海时代的帆船成员组成。
+Among the 289 prisoners were Spaniards, Portuguese, Italians, Germans, and black people, as well as Malays and Chinese, the latter two mainly serving as sailors. There were also some of mixed race. A very typical crew composition for a ship of the Age of Discovery.
 
-　　对俘虏的利用和处置是企划院的事情，但是情报局和政治保卫局要给出一定的意见。哪些人可以利用，哪些人可以赎身释放，哪些人“劳作至死”，都出自他们的建议。
+The utilization and disposal of the prisoners was a matter for the Planning Institute, but the Intelligence Bureau and the Political Security Bureau had to give their opinions. Their recommendations would determine who could be utilized, who could be ransomed and released, and who would "labor until death."
 
-　　他大概的翻阅了一下，门多萨撰写的关于唐娜玛丽娜·德·阿雷利亚诺情况的报告引起了他的兴趣，他仔细阅读了这份报告，又翻看了对女仆、陪媪和船长的审问报告，又查阅了战利品清点清单。证明玛丽娜说得完全属实——她的确是一位待嫁的新娘，被送去马尼拉和她的未婚夫完婚。
+He skimmed through the reports. Mendoza's report on Donna Marina de Arellano caught his interest. He read it carefully, then looked at the interrogation reports of the maid, the chaperone, and the captain, and also checked the inventory of the spoils of war. It confirmed that Marina's story was completely true—she was indeed a bride-to-be, being sent to Manila to marry her fiancé.
 
-　　一个要去马尼拉完婚的贵族私生女，虽说没人说得出她要去和谁结婚，江山也不甚在意——想来就是一个西班牙官员之类的人物。
+A noble bastard girl going to Manila to get married. Although no one could say who she was going to marry, Jiang Shan didn't care much—he figured it was just some Spanish official.
 
-　　如果只是这样的话，她就没什么用处了。他们没法招募一个修道院里待了十年的18岁西班牙少女当间谍——且不说种族的问题，他们还刚刚抢了她的嫁妆。要是留在临高作为战利品分配给元老，光如何分配和分配之后的种种质疑就又要闹出一番激烈地辩论和争吵了。
+If that was all, she was of little use. They couldn't recruit an 18-year-old Spanish girl who had spent ten years in a convent as a spy—not to mention the racial issue, they had just stolen her dowry. If she were to be kept in Lingao and distributed as a spoil of war to the elders, the debate and arguments over how to distribute her and the subsequent questioning would cause another fierce storm.
 
-　　直接勒索赎金似乎是利润最大化也最安全的做法。
+Extorting a ransom seemed to be the most profitable and safest option.
