--- a/_posts/2013-4-10-5-46900.md
+++ b/_posts/2013-4-10-5-46900.md
@@ -1,97 +1,97 @@
 ---
 layout: post
-title: 第四百六十九节 抢救
+title: Section 469: The Rescue
 category: 5
 path: 2013-4-10-5-46900.md
 tag: [normal]
 ---
 
-　　艾贝贝一边刷手，一边注视着助产士的刷手消毒程序是否严格的按照标准，一边还听着护士在念产妇的病历。
+Ai Beibei scrubbed her hands, watching to see if the midwife's hand-washing and disinfection procedures were strictly followed, while also listening to the nurse read the patient's medical records.
 
-　　六个产妇中有五个问题不大，产检胎位正，胎心跳动正常，各方面指数都很合格，应该能够顺产，但是有一个孕妇骨盘狭小，不知是否能够顺产。
+Five of the six expectant mothers had no major problems. The prenatal examinations showed that the fetal position was correct, the fetal heartbeat was normal, and all indicators were up to standard. They should be able to have a smooth delivery. However, one of the pregnant women had a narrow pelvis, and it was uncertain whether she could deliver naturally.
 
-　　让她头疼的是女仆产妇全是初产妇，和经产妇相比难产的概率大不少，而且第一批女仆因为地域人种的关系，往往个头娇小，骨盘狭小的比例很高。
+What gave her a headache was that all the maids were first-time mothers. Compared with women who had given birth before, the probability of a difficult delivery was much higher. Moreover, the first batch of maids, due to their regional and ethnic background, were often petite and had a high proportion of narrow pelvises.
 
-　　已经洗刷好，穿好外衣，消了毒，她已经热得流汗了，跟着助产士们走进了产房。举着手监视着助产士们进入产房。除非遇到难产，否则她自己是不亲自动手的——她要随时预备着做剖宫产手术，同时还要监视助产士们的操作流程是否准确到位。
+After washing up, putting on her outer clothes, and disinfecting, she was already sweating. She followed the midwives into the delivery room, holding up her hands to supervise them as they entered. Unless there was a difficult delivery, she would not personally intervene—she had to be ready to perform a cesarean section at any time, while also monitoring whether the midwives' operating procedures were accurate and in place.
 
-　　“既然土著一时半会不懂为什么要这么干，那就只要教会他们必须这么干就好。”时院长在卫生部的培训会议上如是说，艾贝贝也只能采用这样的手段。
+"Since the natives won't understand why we do this for a while, we just need to teach them that they must do it this way," Dean Shi had said at a training meeting of the Ministry of Health, and Ai Beibei could only adopt such a method.
 
-　　孕妇们被一个个的推了进来，艾贝贝有些怜悯的看着这些只能算是“少女”的孕妇，要在旧时空，这些女孩子应该在念书呢。
+The pregnant women were pushed in one by one. Ai Beibei looked with some pity at these pregnant women, who could only be called "girls." In the old world, these girls should have been in school.
 
-　　她随口问了一声：“家属来了吗？”按照惯例，生产前都要通知到家属，这里也不例外——特别是涉及到元老的眷属生育的时候。
+She asked casually, "Have the family members arrived?" According to convention, the family members had to be notified before the delivery, and this was no exception—especially when it involved the birth of a member of an elder's family.
 
-　　“有三位首长来了，另三位说生下来他们就过来。还有办公厅的代表也来了。”
+"Three of the chiefs have arrived. The other three said they would come after the baby is born. A representative from the General Office has also arrived."
 
-　　办公厅的代表是来登记“户口”的，一旦孩子顺利出生，就会被登记到办公厅的元老户籍表册上。
+The representative from the General Office was there to register the "household registration." Once the child was born safely, it would be registered in the General Office's elder household registration book.
 
-　　来了个三个元老，总算待她们还不错！艾贝贝稍有宽慰。不过，推进来的时候虽然都已经开到了十指。但是至少也得一二个小时之后才能接生完毕。她正打算逐个检查一遍，忽然有个护士跑了进来：
+Three elders had come, which was at least a decent gesture towards them! Ai Beibei felt a little relieved. However, although they had all dilated to ten fingers when they were pushed in, it would still be at least an hour or two before the delivery was complete. She was about to check them one by one when a nurse suddenly ran in:
 
-　　“那个归化民产妇有难产征兆！胎心不稳！”
+"That naturalized citizen expectant mother is showing signs of a difficult labor! The fetal heart rate is unstable!"
 
-　　“别着急，是几床？”艾贝贝无可奈何地说道，这些起码的规矩到现在还是教不会。虽然她很清楚是那一床的孕妇。
+"Don't panic, which bed is it?" Ai Beibei said helplessly. These basic rules were still not being learned. Although she knew very well which pregnant woman it was.
 
-　　这是个归化民的老婆，男人是造船厂的工人，女人在服装厂上班。因为女人年龄较大，又是初产妇，在孕检中又发觉胎位不正，所以打算择日采取剖宫产。
+This was the wife of a naturalized citizen. The man was a worker at the shipyard, and the woman worked at the clothing factory. Because the woman was older and it was her first pregnancy, and a prenatal examination had revealed an incorrect fetal position, they had planned to schedule a cesarean section on another day.
 
-　　没想到这会出现胎心不稳了。艾贝贝赶紧吩咐一个归化民女医士在场监督。自己赶紧吩咐马上把孕妇推进手术室做好手术准备。
+Unexpectedly, the fetal heart rate had become unstable. Ai Beibei quickly instructed a naturalized female medical officer to supervise the scene, while she herself quickly ordered the pregnant woman to be pushed into the operating room to prepare for surgery.
 
-　　“请张大夫来做麻醉！”艾贝贝一面吩咐一面匆匆朝着手术室走去。
+"Please ask Dr. Zhang to administer the anesthesia!" Ai Beibei ordered as she hurried towards the operating room.
 
-　　“腰麻，注入盐酸丁卡因12mg——这是常规剂量。然后转为仰卧体位。”张土木边说边干净利落的做完了穿刺—麻醉。身后的一个归化民麻醉医士紧张的注视着他的一举一动，似乎要把这一切完全吞下肚一样。
+"Spinal anesthesia, inject 12mg of tetracaine hydrochloride—this is the standard dose. Then turn to the supine position," Zhang Tumu said as he cleanly and neatly completed the puncture and anesthesia. Behind him, a naturalized anesthesiologist watched his every move intently, as if trying to swallow everything whole.
 
-　　麻醉做得很是顺利，艾贝贝仔细的看了看病人，等待麻醉药奇效。正在测试阻滞平面之际。病人突然不答问话了，艾贝贝意识到不妙，她注意到病人的意识消失了。
+The anesthesia was administered smoothly. Ai Beibei carefully looked at the patient, waiting for the anesthetic to take effect. Just as she was testing the level of the block, the patient suddenly stopped responding to her questions. Ai Beibei realized something was wrong. She noticed that the patient had lost consciousness.
 
-　　“心跳骤停！”正在监视仪器的归化民护士尖叫起来，她被训练的对这台示波器上的一切数据无比敏感，“呼吸骤停！”
+"Cardiac arrest!" the naturalized nurse monitoring the instruments screamed. She had been trained to be extremely sensitive to all the data on the oscilloscope. "Respiratory arrest!"
 
-　　“快，准备喉镜！口腔插管！”张土木——他干过急诊，反应很快。大声喊了起来，“准备心肺复苏术！正肾上腺素1ml心内注射！”
+"Quick, prepare the laryngoscope! Oral intubation!" Zhang Tumu—he had worked in the emergency room and reacted quickly—shouted. "Prepare for cardiopulmonary resuscitation! 1ml of norepinephrine for intracardiac injection!"
 
-　　艾贝贝被吓了一跳，这是“全脊髓麻醉”啊！手术麻醉的时候最怕遇到，她赶紧帮忙做胸外心脏挤压。终于，心电图上的线条又开始跳动了，但是心率快速不齐。
+Ai Beibei was startled. This was "total spinal anesthesia"! It was the most feared complication during surgical anesthesia. She quickly helped with external cardiac compressions. Finally, the lines on the electrocardiogram began to jump again, but the heart rate was fast and irregular.
 
-　　“请时大夫来会诊！”艾贝贝只好祭出这一法宝了。她本质上是个研究医生，急诊这块涉猎极其有限。而当大夫主要就是要靠经验的积累。
+"Please ask Dr. Shi for a consultation!" Ai Beibei had no choice but to resort to this last measure. She was essentially a research doctor, with very limited experience in emergency medicine. And being a doctor mainly relied on the accumulation of experience.
 
-　　时大夫赶来的时候，在施行人工呼吸等抢救了约一刻钟的情况下。张土木汇报说病人神智和呼吸毫无恢复迹象，全身紫绀，血压180/90mmHg，体温38.5℃，无尿，心电图显示室上速伴频繁多源性室性早搏，同时频发全身抽搐，胎儿心跳听诊尚正常。
+When Dr. Shi arrived, after about a quarter of an hour of rescue measures such as artificial respiration, Zhang Tumu reported that the patient showed no signs of regaining consciousness or breathing, was cyanotic all over, had a blood pressure of 180/90 mmHg, a temperature of 38.5°C, no urine output, and the electrocardiogram showed supraventricular tachycardia with frequent multifocal ventricular premature beats, as well as frequent generalized convulsions. The fetal heartbeat was still normal on auscultation.
 
-　　伴随着有些慌乱的抢救，百仞总医院的元老医生将病人一致诊断为“心跳骤停复苏后脑缺氧后遗症”。
+Amidst the somewhat chaotic rescue, the elder doctors at Bairen General Hospital unanimously diagnosed the patient with "post-cardiac arrest hypoxic brain sequelae."
 
-　　“开始脑复苏！越快越好！”时袅仁说，“准备冰帽和冰袋！”
+"Start brain resuscitation! The sooner the better!" Shi Niaoren said. "Prepare an ice cap and ice packs!"
 
-　　护士们手忙脚乱的开始从冰箱里取出冰帽和冰袋。由于本位面的医疗条件实在太差，所以一些早期的医疗手段又被捡了起来，所以一早百仞总医院就土法自制了冰帽。
+The nurses scrambled to get the ice cap and ice packs from the refrigerator. Due to the extremely poor medical conditions in this world, some early medical methods had been picked up again, so Bairen General Hospital had made its own ice caps early on.
 
-　　“时大夫，按照最新的国际医学期刊载文，这种情况下头部重点降温没有实际意义……”艾贝贝小心翼翼的说道。
+"Dr. Shi, according to the latest articles in international medical journals, focused cooling of the head in this situation has no practical significance..." Ai Beibei said cautiously.
 
-　　“有意义没意义，只能试试看再说了。”时袅仁说，“头部重点降温，全身冰袋降温！利尿脱水！”
+"Meaningful or not, we can only try and see," Shi Niaoren said. "Focus on cooling the head, and use ice packs to cool the whole body! Diuresis and dehydration!"
 
-　　但这些手段并未取得明显的效果，眼看着病人始终昏迷、无自主呼吸、尿闭、皮肤通红、频繁多源性室性早搏，抽搐也越来越频繁。如何进一步处理？此时的百仞总医院，一筹莫展，困惑无措。
+But these measures did not achieve any obvious effect. The patient remained in a coma, with no spontaneous breathing, no urine output, flushed skin, frequent multifocal ventricular premature beats, and increasingly frequent convulsions. How to proceed? At this moment, Bairen General Hospital was at a loss, confused and helpless.
 
-　　要在旧时空，自然还有若干手段可以使用，但是不管那些手段，致病原因不找到的话就没法实施针对性的治疗。
+In the old world, there were of course several other methods that could be used, but regardless of the method, targeted treatment could not be implemented without finding the cause of the disease.
 
-　　电光火石间，时袅仁想起了当年在医学刊物上看到类似的病例，当即提出：此时孕产妇的的腹肌张力和膈肌张力业已完全消失，巨大子宫将膈肌顶压向胸腔，胸腔容积骤减、心脏位置变异、肺膨胀不全、肺门大血管扭曲、换气功能不足。因此，虽然在人工呼吸下，病人尚不致严重缺氧，但昏迷、抽搐有增无减、血压趋高不降、室性心律失常持续不止、体温升高、皮肤通红发烫，提示体内二氧化碳无法排尽。根据上述征象，他判断病人除处于“脑缺氧后遗症”外，还处于“二氧化碳麻醉”状态，昏迷、频繁抽搐和多源性室性早搏都与二氧化碳排出障碍导致体内严重蓄积所引起。如果不予及时解除二氧化碳蓄积问题，结果是再次心跳骤停而抢救无望。据此，时袅仁认为应立即果断施行剖宫产取出胎儿，以解除膈肌上抬顶压胸腔、改善呼吸换气功能问题。
+In a flash of inspiration, Shi Niaoren remembered seeing a similar case in a medical journal years ago. He immediately proposed that at this time, the pregnant woman's abdominal muscle tension and diaphragm tension had completely disappeared. The huge uterus was pushing the diaphragm up into the chest cavity, causing a sharp decrease in chest cavity volume, a change in the position of the heart, incomplete lung expansion, distortion of the large blood vessels at the hilum of the lung, and insufficient ventilation function. Therefore, although the patient was not severely hypoxic under artificial respiration, the coma, convulsions, rising blood pressure, persistent ventricular arrhythmia, elevated body temperature, and flushed, hot skin all indicated that carbon dioxide could not be expelled from the body. Based on these signs, he judged that in addition to being in a state of "post-hypoxic brain sequelae," the patient was also in a state of "carbon dioxide narcosis." The coma, frequent convulsions, and multifocal ventricular premature beats were all caused by the severe accumulation of carbon dioxide in the body due to impaired expulsion. If the problem of carbon dioxide accumulation was not resolved in time, the result would be another cardiac arrest with no hope of rescue. Based on this, Shi Niaoren believed that a decisive cesarean section should be performed immediately to remove the fetus, so as to relieve the upward pressure of the diaphragm on the chest cavity and improve respiratory and ventilation function.
 
-　　“这种情况下动手术，人挺不住吧！”艾贝贝虽然同意时袅仁的诊断，但是一想到病人很可能会就此死在手术台上——一尸两命啊！说着眼圈都有点红了。她可不像其他元老大夫那样在旧时空长期从事临床工作，心肠已经锻炼的足够坚硬了。
+"Operating under these circumstances, the person won't be able to take it!" Although Ai Beibei agreed with Shi Niaoren's diagnosis, the thought that the patient might die on the operating table—a double tragedy!—made her eyes well up. She was not like the other elder doctors who had worked in clinical practice for a long time in the old world and had hardened their hearts.
 
-　　“不这样做马上就挺不住了！”张土木也支持时袅仁的方案，“最不济，至少能保住孩子！”
+"If we don't do this, she won't be able to take it much longer!" Zhang Tumu also supported Shi Niaoren's plan. "At the very least, we can save the child!"
 
-　　“我也知道在这种临床濒死状态下提出施行剖宫产，确实冒着巨大风险。”时袅仁承认根据常规，在病情如此危重的状况下再予施行大手术，简直是违规处理，不可思议。“不过这是挽救病人生命的唯一措施。我们没别得选择了。”
+"I also know that proposing to perform a cesarean section in this clinical near-death state is indeed a huge risk." Shi Niaoren admitted that according to convention, performing a major operation on a patient in such a critical condition was simply a violation of regulations, unthinkable. "But this is the only measure to save the patient's life. We have no other choice."
 
-　　“是不是找家属签字……”张土木提醒道。虽然对方是归化民，到底也也得尊重下必要的权力。
+"Should we get the family's signature..." Zhang Tumu reminded him. Although the other party was a naturalized citizen, it was still necessary to respect the necessary rights.
 
-　　“她家属呢？”
+"Where is her family?"
 
-　　“在上班，按规定孩子没生出来之前是不能请产假，说下班之后会过来。”护士回答。
+"At work. According to the regulations, he can't take paternity leave until the child is born. He said he would come over after work," the nurse replied.
 
-　　艾贝贝忍不住骂了起来：“什么玩意！一点人情也没有！人都快死了！”她说着几乎控制不住的要掉眼泪。
+Ai Beibei couldn't help but curse: "What the hell! No humanity at all! The person is about to die!" As she spoke, she could barely hold back her tears.
 
-　　“好了，用不着家属签字，”时袅仁说，“我来签字好了。马上动手术！”
+"Alright, we don't need the family's signature," Shi Niaoren said. "I'll sign it. Let's operate immediately!"
 
-　　剖宫产手术剖出一健康男婴，病人的脸色随即趋予正常，散大的瞳孔逐步恢复，大汗停止，室性早搏基本消失，病情明显改善，但仍然处于昏迷、尿闭，伴全身抽搐状态。时袅仁吩咐继续积极施行脑复苏等后期处理。
+A healthy baby boy was delivered by cesarean section. The patient's complexion immediately returned to normal, her dilated pupils gradually recovered, the heavy sweating stopped, and the ventricular premature beats basically disappeared. Her condition had clearly improved, but she was still in a coma, with no urine output, and accompanied by generalized convulsions. Shi Niaoren ordered to continue with active brain resuscitation and other follow-up treatments.
 
-　　术后一个多小时，病人自主呼吸终于恢复，时袅仁终于松了一口气
+More than an hour after the operation, the patient's spontaneous breathing finally resumed. Shi Niaoren finally breathed a sigh of relief.
 
-　　“你去产房吧。”时袅仁对艾贝贝说，“那里也少不了人。这孩子也给他好好检查下身体，别落下什么后遗症！”
+"You go to the delivery room," Shi Niaoren said to Ai Beibei. "They need you there too. And give this child a good check-up, don't let him have any sequelae!"
 
-　　“好得，我这就去。”艾贝贝急匆匆的又走了。
+"Okay, I'll go right away," Ai Beibei said and hurried away.
 
-　　时袅仁吩咐张土木先盯着，自己走出手术室脱掉了手套泡在消毒清洗槽里，走到休息室里。护士给他擦擦汗，又给他点了支雪茄。这件事有点蹊跷，因为类似的事件在旧时空很少发生，而且使用的麻醉药也是从旧时空带来的药品，不是制药厂自己制造的仿制品，实话说他们眼下也做不出盐酸丁卡因来——要说抗生素发生过敏反应或者疫苗有点什么造成致死病例他一点都不会惊讶，就目前制药厂那个水平，这简直就是不可避免的。但是这盐酸丁卡因可是地地道道的正货——一级管控物资，除非是大手术，否则是不准动用的……
+Shi Niaoren instructed Zhang Tumu to keep an eye on things for now. He walked out of the operating room, took off his gloves, and soaked them in the disinfection and cleaning tank. He went to the lounge. A nurse wiped his sweat and lit a cigar for him. This matter was a bit strange, because similar incidents rarely occurred in the old world, and the anesthetic used was also a drug brought from the old world, not a counterfeit product made by their own pharmaceutical factory. To be honest, they couldn't produce tetracaine hydrochloride at the moment—he wouldn't be surprised at all if an allergic reaction to an antibiotic or a fatal case caused by a vaccine occurred. Given the current level of their pharmaceutical factory, this was simply inevitable. But this tetracaine hydrochloride was the real deal—a level-one controlled substance, not to be used unless it was for a major operation...
 
-　　时袅仁忽然打了个寒颤，想起了上次企划院给他们的通知：因为保质期临近，对多种药品撤销一级管控。
+Shi Niaoren suddenly shuddered, remembering the notice the Planning Institute had given them last time: because the expiration date was approaching, the level-one control on many drugs was lifted.
 
-　　这盐酸丁卡因不会是过期货吧？时袅仁想，虽然本位面他基本上可以为所欲为，但是这事情实在是一个很不好的信号，万一是用在元老身上闹出这样大的事情可就惨了！
+Could this tetracaine hydrochloride be expired? Shi Niaoren thought. Although he could basically do whatever he wanted in this world, this was a very bad signal. If such a major incident happened to an elder, it would be a disaster!
