--- a/_posts/2013-4-14-6-00100.md
+++ b/_posts/2013-4-14-6-00100.md
@@ -1,83 +1,83 @@
 ---
 layout: post
-title: 第一节 情报
+title: Chapter 1: Intelligence
 category: 6
 path: 2013-4-14-6-00100.md
 tag: [normal]
 ---
 
-　　九月的高雄，已经褪去了盛夏的暑热，海风也带来了一丝丝清凉。
+In Kaohsiung in September, the summer heat had already faded, and the sea breeze brought a hint of coolness.
 
-　　立春号静静的停泊在高雄港内，这艘“元老院海军的骄傲”的风帆—蒸汽混合动力巡洋舰刚刚从博铺出坞回到它的母港——高雄。整艘战舰焕然一新，连水兵们的模样都变得特别精神。
+The *Lichun* was quietly moored in Kaohsiung Harbor. This sail-steam hybrid cruiser, the "pride of the Senate Navy," had just returned to its homeport of Kaohsiung from the docks at Bopu. The entire warship was brand new, and even the sailors looked particularly spirited.
 
-　　经过了差不多一年的巡航之后，在整个夏季，立春在博铺造船厂接受了全面的维护和检修，更换了部分暴露出问题的零件——机械厂的产品随着归化民工人手艺的进步，一个批次比一个批次好，现在他们可以用更好的零件来替代早期那些粗劣的产品了。
+After nearly a year of cruising, the *Lichun* had undergone comprehensive maintenance and overhaul at the Bopu Shipyard throughout the summer. Some parts that had shown problems were replaced—the products of the machinery factory were getting better with each batch as the skills of the naturalized workers improved, and now they could replace the crude early products with better parts.
 
-　　立春号的火力没有做大的调整，但是实验性的安装了一门全新设计的5管哈乞开斯式手动转管炮。被称为“试三四式海军自动机关炮”。
+The *Lichun*'s firepower had not been significantly adjusted, but a newly designed 5-barreled Hotchkiss-type manually operated revolving cannon had been experimentally installed. It was called the "Type 34 Naval Automatic Cannon."
 
-　　武器设计小组的目的是用它来取代一部分海军舰船上的打字机：毕竟30mm榴弹比13mm铅弹对小型船只的摧毁效率高得多了。较大的弹体也可以容纳多种不同弹药——计划配备三种弹药：榴弹、穿甲弹和燃烧弹。不过暂时只配备了穿甲弹。
+The purpose of the weapon design team was to use it to replace some of the typewriters on naval ships: after all, a 30mm grenade was much more efficient at destroying small boats than a 13mm lead bullet. The larger projectile could also accommodate a variety of different ammunition—three types of ammunition were planned: high-explosive, armor-piercing, and incendiary. However, for the time being, only armor-piercing rounds were equipped.
 
-　　5管哈乞开斯式手动转管炮是一种自动火炮，和加特林类似，但是它的结构比加特林的多管炮要简单的多，因而被选中作为海军速射火炮。
+The 5-barreled Hotchkiss-type manually operated revolving cannon was an automatic cannon, similar to the Gatling gun, but its structure was much simpler than the Gatling's multi-barreled gun, so it was chosen as the navy's rapid-fire cannon.
 
-　　原版的哈乞开斯式手动转管炮使用的是37x94R弹，这种弹是“圣彼得堡宣言”中关于爆炸性弹头重量不得低于400克的规定所弄出来的一畸形产物的产物。由于弹头只能装填了15-20克黑火药，爆炸起来也就是个大号炮仗。超过半公斤的弹头使得初速只有可怜的367m/s，弹道性能一塌糊涂。
+The original Hotchkiss-type manually operated revolving cannon used the 37x94R cartridge, which was a deformed product of the St. Petersburg Declaration's regulation that the weight of an explosive warhead should not be less than 400 grams. Since the warhead could only be filled with 15-20 grams of black powder, its explosion was just a large firecracker. The warhead, which weighed more than half a kilogram, had a pitiful muzzle velocity of only 367 m/s, and its ballistic performance was a mess.
 
-　　考虑到海军小型速射炮的目标是敌方的小艇和敌船甲板上的水手，不需要太大的爆破威力。30mm口径足够了。缩小口径可以减小炮重，不仅大舰上可以增加安装数量，还可以适应舢板炮、海兵队支援火炮等多方面的需求。为了改善弹道性能，将火炮倍径改为25倍，炮弹长度也被拉长了。这么一番改进之后，临高版的5管哈乞开斯式手动转管炮的初速、弹道性能都比原版上了一个档次。理论射速可达每分钟一百发。
+Considering that the target of the navy's small rapid-fire cannons was the enemy's small boats and sailors on the deck of enemy ships, a large explosive power was not needed. A 30mm caliber was sufficient. Reducing the caliber could reduce the weight of the cannon, which not only allowed for more installations on large ships, but also adapted to the needs of sampan cannons, marine support artillery, and other aspects. In order to improve the ballistic performance, the barrel length was changed to 25 calibers, and the length of the shell was also lengthened. After such improvements, the Lingao version of the 5-barreled Hotchkiss-type manually operated revolving cannon had a higher muzzle velocity and better ballistic performance than the original version. The theoretical rate of fire could reach one hundred rounds per minute.
 
-　　不过要使用这种火炮就必须使用定装弹药。由于黄铜弹壳拉制尚未提上企划院的开发议事日程，因而采用的是工艺较为简单的卷制弹壳——虽然不甚可靠，但是用起来并无困难。为了回收弹壳，还专门配备了弹壳回收器。
+However, to use this type of cannon, fixed ammunition had to be used. Since the drawing of brass cartridge cases had not yet been put on the Planning Institute's development agenda, a simpler process of rolled cartridge cases was used—although not very reliable, it was not difficult to use. In order to recycle the cartridge cases, a special cartridge case recycler was also equipped.
 
-　　立春号并非第一次来到高雄，但是它的重新出现，使得紧盯着高雄的澳洲人动向的各路人马都陡然紧张起来。
+This was not the first time the *Lichun* had come to Kaohsiung, but its reappearance made all the forces that were closely watching the movements of the Australians in Kaohsiung suddenly tense.
 
-　　这艘喷着黑烟，挂着风帆的“巨舰”可不是临高那艘从来不动弹的“圣船”——很多人认为圣船是根本不会动的——立春号经常在海面上逡巡，冒出的黑烟。十几里外就能看得清清楚楚。
+This "giant ship" that spewed black smoke and hung sails was not the "holy ship" in Lingao that never moved—many people believed that the holy ship would not move at all—the *Lichun* often cruised on the sea, and the black smoke it emitted could be seen clearly from more than ten miles away.
 
-　　最可怕的是，哪怕在十几里外看到它的黑烟，用不了多久就会被它追上，看着它黝黑硕大的船体翻滚着白浪从旁边昂然经过。甲板上矗立着又黑又粗的大炮——这就足够让对澳洲人心怀不满的人丧魂落魄了。
+The most terrifying thing was that even if you saw its black smoke from more than ten miles away, it would not take long for it to catch up with you, and you would watch its dark and huge hull roll through the white waves and pass by majestically. On the deck stood black and thick cannons—this was enough to make those who were dissatisfied with the Australians lose their souls.
 
-　　它突然在台湾海峡重现，使得海峡里的暗潮再一次的涌动起来。
+Its sudden reappearance in the Taiwan Strait caused the undercurrents in the strait to surge once again.
 
-　　李丝雅又一次接到了郑芝凤的信函，这次，郑芝凤提出了新的要求。
+Li Siya once again received a letter from Zheng Zhifeng. This time, Zheng Zhifeng made a new request.
 
-　　自从林十帽神秘失踪，郑芝凤已经知道李丝雅的看似万无一失的计划已经败露——当然，除了澳洲人绑走了他，李丝雅出于灭口的目的也可能会让他“失踪”，但是荷兰人在大员等地毫无反应的局面说明他们的离间计划并未成功。通过郭怀一的活动，郑芝凤大体了解了一些在高雄发生的事情。包括整个行动的过程和澳洲人的应对。
+Since Lin Shimao's mysterious disappearance, Zheng Zhifeng already knew that Li Siya's seemingly foolproof plan had been exposed—of course, besides the Australians kidnapping him, Li Siya might also have made him "disappear" for the purpose of silencing him, but the Dutch's lack of reaction in Dayuan and other places showed that their plan to sow discord had not succeeded. Through Guo Huaiyi's activities, Zheng Zhifeng had a general understanding of what had happened in Kaohsiung, including the entire process of the operation and the Australians' response.
 
-　　真是奇怪，郑芝凤心想，无论从哪个角度来看，李丝雅的计划都执行的天衣无缝：按照他的看法，李丝雅的布置，每一个环节都可以轻而易举的切断线索。特别她派出的那个女人的被捕时候果断自杀可以说是掐断了最后的线索。堪称最高明无头案了——为什么澳洲人却能料事如神的抓到林十帽？
+It was strange, Zheng Zhifeng thought. From any angle, Li Siya's plan was executed flawlessly. In his opinion, every link in Li Siya's arrangement could easily cut off the clues. In particular, the decisive suicide of the woman she sent when she was arrested could be said to have cut off the last clue. It could be called the most brilliant headless case—why could the Australians catch Lin Shimao as if they had foreseen it?
 
-　　莫非澳洲人在李丝雅身边或者在郑家有奸细卧底？还是他们真得有什么妖术？郑芝凤想到了林一绍最近带回来的关于临高的很多令人震惊的传闻。他在最后一封信中说准备潜入临高，搜集更多澳洲人的消息。
+Could it be that the Australians had a spy by Li Siya's side or in the Zheng family? Or did they really have some kind of sorcery? Zheng Zhifeng thought of the many shocking rumors about Lingao that Lin Yishao had recently brought back. In his last letter, he said that he was preparing to sneak into Lingao to gather more information about the Australians.
 
-　　但是这一切对郑芝凤来说都已经无关紧要。澳洲人既然已经抓到了林十帽，自然就明白幕后的主使是郑家——两家图穷匕见的日子就在眼前了。
+But all this was no longer important to Zheng Zhifeng. Since the Australians had already captured Lin Shimao, they naturally understood that the mastermind behind the scenes was the Zheng family—the day when the two families would draw their daggers was just around the corner.
 
-　　两家之间的贸易，即使在夏季也没有停止——悬挂着启明星旗帜的大波航运的船只源源不断的运来福建最急需最赚钱的货物：盐。同时运走的各种货物都让郑家发了大财。但是郑家兄弟们都很清楚，这不过是表面的和睦——澳洲人眼下有重要的事情要做，暂时不愿意和他们刀兵相见而已。
+The trade between the two families had not stopped even in the summer—the ships of the Daybreak Shipping Company, flying the Venus flag, continuously transported the most urgently needed and most profitable goods to Fujian: salt. At the same time, the various goods they transported away made the Zheng family a lot of money. But the Zheng brothers all knew very well that this was just superficial harmony—the Australians had important things to do at the moment and were temporarily unwilling to go to war with them.
 
-　　一旦他们的事情做完，澳洲人就会毫不客气的露出他们的爪牙——这东亚海面上有什么仁义礼智信么？更别说澳洲人和他们仅仅只是生意关系而已。回想不多几年前，李魁奇和郑芝龙还是“兄弟”呢。
+Once their business was done, the Australians would show their claws without hesitation—was there any benevolence, righteousness, propriety, wisdom, or faith on the East Asian seas? Not to mention that the Australians and them were just business partners. Thinking back not many years ago, Li Kuiqi and Zheng Zhilong were still "brothers."
 
-　　崇祯五年到目前为止都是郑家大有发展，顺风顺水的一年，三月份。原本主持招安事宜的熊文灿荣升两广总督——这对郑家来说不能不说是一种遗憾：熊文灿是郑芝龙拿钱塞饱了的人。不过邹维琏也不是不好相与的人。邹维琏在万历年间曾出任延平推官，所以对本地的民风，夷情及海防都有所了解。
+So far, the fifth year of Chongzhen had been a year of great development and smooth sailing for the Zheng family. In March, Xiong Wencan, who was originally in charge of the pacification, was promoted to the governor-general of Guangdong and Guangxi—this was a pity for the Zheng family: Xiong Wencan was a man who had been stuffed with money by Zheng Zhilong. However, Zou Weilian was not a difficult person to get along with either. Zou Weilian had served as the magistrate of Yanping during the Wanli era, so he had some understanding of the local customs, the situation of the barbarians, and the coastal defense.
 
-　　邹维琏抵闽时，郑芝龙正好剿灭了原先在福建一带横行海陆的陈万、钟凌秀在陆地的余众，因此役升为游击将军。五月，钟凌秀余党又以战舰在海澄。太和等地为乱，郑芝龙又将他们击败。由此使得邹维琏对郑芝龙十分的倚重。
+When Zou Weilian arrived in Fujian, Zheng Zhilong had just wiped out the remnants of Chen Wan and Zhong Lingxiu, who had previously run rampant on land and sea in the Fujian area. For this service, he was promoted to the rank of general. In May, the remnants of Zhong Lingxiu's party again caused trouble with their warships in Haicheng, Taihe, and other places, and Zheng Zhilong defeated them again. This made Zou Weilian rely heavily on Zheng Zhilong.
 
-　　原本邹维琏已经准备调郑芝龙所部去江西剿灭流寇，但是不久前刘香老以一百七十艘船的舰队攻打闽安镇，焚劫抢杀，大有直犯省城的意思。邹维琏不敢犹豫，立即将仍未出发的郑芝龙留下来，对付刘香。此刻，他正在调兵遣将，准备一举击溃进犯福建的刘香所部。
+Originally, Zou Weilian was already preparing to transfer Zheng Zhilong's troops to Jiangxi to suppress the bandits, but not long ago, Liu Xianglao attacked Min'an Town with a fleet of 170 ships, burning, plundering, and killing, with the intention of directly attacking the provincial capital. Zou Weilian did not dare to hesitate and immediately kept Zheng Zhilong, who had not yet departed, to deal with Liu Xiang. At this moment, he was dispatching troops and generals, preparing to defeat Liu Xiang's invading forces in one fell swoop.
 
-　　虽然刘香直犯闽安，大有直接挑战郑芝龙的沿海霸权的意思，但是在郑芝龙眼里，刘香已经不再是他的首要对手了。
+Although Liu Xiang's direct attack on Min'an was a direct challenge to Zheng Zhilong's maritime hegemony, in Zheng Zhilong's eyes, Liu Xiang was no longer his primary opponent.
 
-　　原本郑家只把澳洲人视为广东海面上“群盗”中较大的一股，不过靠着大铁船之类奇技淫巧的东西突然发迹起来，而且他们根本不搀和海外贸易。但是自从他们的船只窜犯广州，火烧五羊驿之后，郑家就对他们的看法有了极大的转变。
+Originally, the Zheng family only regarded the Australians as a larger group among the "pirates" on the Guangdong sea, who had suddenly risen to prominence through some strange skills and tricks like large iron ships, and they did not interfere with overseas trade at all. But since their ships had invaded Guangzhou and burned the Wuyang Posthouse, the Zheng family's view of them had changed dramatically.
 
-　　现在，虽然刘老香依然在汕头汕尾一带逡巡，骚扰福建沿海，不断地派船前往巴达维亚和马尼拉，显然是要和郑家争夺西洋的贸易，但是从日本却传来了十分严重的消息：澳洲人的特使在五岛一带活动，还和得到幕府朱印状的周氏勾搭上了！不仅如此，他们甚至还深入到了平户。
+Now, although Liu Laoxiang was still cruising around Shantou and Shanwei, harassing the coast of Fujian, and constantly sending ships to Batavia and Manila, obviously to compete with the Zheng family for the trade with the West, very serious news came from Japan: the Australian special envoy was active in the Goto Islands and had even hooked up with the Zhou family, who had received the shogunate's vermilion seal certificate! Not only that, they had even penetrated into Hirado.
 
-　　平户这个地方，对郑芝龙来说不啻于是第二个故乡，这也是他起家的地方。
+Hirado was like a second hometown to Zheng Zhilong, and it was also where he had started his career.
 
-　　澳洲人跑到日本去，想干什么不问可知。
+It was obvious what the Australians wanted to do by going to Japan.
 
-　　简直是太岁头上动土！
+It was simply stirring up trouble on the tiger's head!
 
-　　此事不仅仅是面子问题，而是事关生死的关键。相比之下，刘老香的种种行为虽然会影响郑家的收入，却不是致命的。要是给澳洲人夺走了日本贸易这条航线，郑家的根子就给彻底的挖掉了。
+This matter was not just a matter of face, but a matter of life and death. In comparison, although Liu Laoxiang's various actions would affect the Zheng family's income, they were not fatal. If the Australians were to seize the Japan trade route, the Zheng family's roots would be completely dug out.
 
-　　为此，郑芝龙已经将首要的敌人改为澳洲人。
+For this reason, Zheng Zhilong had already changed his primary enemy to the Australians.
 
-　　尽管李丝雅已经不被信任，但是她毕竟是掌握澳洲人情况最多，还直接打过交道的人，所以至关紧要的情报搜集工作还是落到了她的头上：首当其冲的就是澳洲人到底有多少人船实力。
+Although Li Siya was no longer trusted, she was, after all, the person who knew the most about the Australians and had dealt with them directly, so the crucial intelligence gathering work still fell on her shoulders: the first and foremost was to find out how many men and ships the Australians had.
 
-　　这封信的第一条就是要她提供澳洲人的那艘最大的战舰——立春号的详细情报。
+The first item in this letter was to ask her to provide detailed intelligence on the Australians' largest warship—the *Lichun*.
 
-　　郑芝龙要和澳洲人开火对李丝雅来说并不意外：这是迟早的事情。但是要获取立春号和澳洲人的海军实力，对她来说却有些难了。
+It was not surprising to Li Siya that Zheng Zhilong wanted to open fire on the Australians: it was only a matter of time. But it was a bit difficult for her to obtain the naval strength of the *Lichun* and the Australians.
 
-　　不错，她的确根据许多零星的情报，大体拼凑出澳洲人的海军实力，也能够描绘出铁快船的外貌和一些性能，但毕竟是二手资料——即使是李华梅也没能上过任何一艘“喷黑烟”的澳洲船。
+True, she had indeed pieced together a general picture of the Australian navy's strength based on many scattered pieces of intelligence, and she could also describe the appearance and some performance of the iron clippers, but it was all second-hand information—even Li Huamei had never been on any of the "black smoke-spewing" Australian ships.
 
-　　不过郑芝龙绝非澳洲人的对手这点她却是十分有把握的。从这点来说，她也得尽心竭力的帮助郑芝龙挽回一些颓势，以免这海上变成了澳洲人的天下——那时候就没她什么事情了。
+However, she was very sure that Zheng Zhilong was by no means a match for the Australians. From this point of view, she also had to do her best to help Zheng Zhilong regain some of his decline, so as to prevent the sea from becoming the world of the Australians—at that time, there would be nothing for her to do.
 
-　　这件事只有拜托自己的乳妹了——也只有即将加入澳洲人团体的李华梅才可能知道这些船的真正的秘密。
+This matter could only be entrusted to her foster sister—only Li Huamei, who was about to join the Australian group, could possibly know the real secrets of these ships.
 
-　　现在是九月初，乳妹的杭州号正常情况下应该在八月底返回澳门——现在正是时候。
+It was now early September, and her foster sister's *Hangzhou* should have returned to Macau at the end of August under normal circumstances—now was the time.
