--- a/_posts/2013-4-15-6-00200.md
+++ b/_posts/2013-4-15-6-00200.md
@@ -1,109 +1,109 @@
 ---
 layout: post
-title: 第二节 女海盗
+title: "Section 2: The Female Pirate"
 category: 6
 path: 2013-4-15-6-00200.md
 tag: [normal]
 ---
 
-　　“……周三，即将进入保克海峡，晴，东北信风，距锡兰还有半天航程，补给充足，不停靠……”
+"...Wednesday, about to enter the Palk Strait, clear skies, northeast trade wind, half a day's journey from Ceylon, supplies are sufficient, no stops..."
 
-　　李华梅一边写着航海日志，一边胡思乱想。
+Li Huamei wrote in her nautical log, her thoughts wandering.
 
-　　自从她接受了李丝雅的指示打入澳洲人内部，她就直航临高，到博铺找到一位熟悉的海军元老，表达了自己愿意加入临高方面的意愿。
+Ever since she received Li Siya's instructions to infiltrate the Australians, she had sailed directly to Lingao, found a familiar naval elder in Bopu, and expressed her willingness to join the Lingao side.
 
-　　虽然自己在海军“少壮派”中人气很高，但是她还没荒缪到认为自己立刻就进入澳洲人的团体。李华梅很清楚，自己这种“海底”不清的人，是要有相当长时间的“盘底”——或者按照澳洲人的说法叫“审查”之后才能“入伙”。特别是澳洲人用人，最重“海底”。“人人起底，个个过关”是他们的一贯口号。
+Although she was very popular among the "young turks" of the navy, she was not so absurd as to think that she could immediately enter the Australian group. Li Huamei was very clear that someone like her, with an unclear "background," would have to undergo a considerable period of "background check"—or as the Australians called it, "review"—before she could "join the group." Especially since the Australians, when employing people, placed the greatest importance on "background." "Everyone is investigated, everyone is vetted" was their consistent slogan.
 
-　　关于自己的身世、经历，她和姐姐一起精心准备了一套说辞——好在自己和姐姐的关系，在澳门知道的人很少，真正掌握内情的人都是些忠心耿耿的仆人，他们是宁死也不会泄露李家姐妹的秘密的，更不用担心他们会主动泄密。
+Regarding her own background and experience, she and her sister had carefully prepared a set of stories. Fortunately, very few people in Macau knew about her relationship with her sister. The people who really knew the inside story were all loyal servants who would rather die than reveal the secrets of the Li sisters, let alone worry about them actively leaking secrets.
 
-　　不过，出乎意料的是，在博铺她没有受到太多的“盘底”，在写了一张纸的个人自述，再加填写申请书之后，她的申请就算是被接受了——不过对方表示，必须在三个月之后才能正式通知她申请是否能被通过。而在此之前，殖民和贸易部有一项前往果阿的紧急采购任务要请她去办。
+However, to her surprise, she was not subjected to too much "background check" in Bopu. After writing a one-page personal statement and filling out an application form, her application was considered accepted—but the other party stated that she would not be formally notified of whether her application was approved until three months later. And before that, the Colonial and Trade Department had an urgent procurement mission to Goa that they wanted her to handle.
 
-　　自从她和澳洲人牵上线之后，李华梅一直独占着果阿的贸易专利。为元老院运来各种印度和欧洲商品。1632年她依然按照惯例取得了这一贸易专利证。
+Ever since she had established contact with the Australians, Li Huamei had monopolized the trade patent for Goa, transporting various Indian and European goods for the Senate. In 1632, she still obtained this trade patent as usual.
 
-　　按照澳门的葡萄牙人一贯的果阿贸易航线，每年一二月，葡萄牙船只就会前往果阿，在果阿装上毛织品、衣料、印度花布、棉花和棉织品、水晶和玻璃器皿、时钟、葡萄酒等欧洲和印度商品，然后在四月返航。沿路途经马六甲、暹罗、帝汶、锡兰、缅甸等地区，一路做生意，用船上的货物在马六甲交换香料、檀香、沉香，在暹罗的鲨鱼皮和鹿皮等等。这样走走停停一路的买卖做下来，大概是六月到八月之间回到澳门。
+According to the usual Goa trade route of the Portuguese in Macau, Portuguese ships would go to Goa in January and February each year, load up on woolen fabrics, clothing materials, Indian calico, cotton and cotton textiles, crystal and glassware, clocks, wine, and other European and Indian goods, and then return in April. Along the way, they would pass through Malacca, Siam, Timor, Ceylon, Burma, and other regions, doing business all the way, exchanging the goods on board for spices, sandalwood, and agarwood in Malacca, and shark skin and deer skin in Siam, and so on. After doing business all the way, they would probably return to Macau between June and August.
 
-　　不过李华梅的果阿贸易是直来直去的——她并不沿路进行贸易，澳洲人对商品的需求是种类少，但是数量大。对每年的交货数字都有严格的规定。特别是对某些他们需要的商品，都要求每年至少运来多少数字，否则下一年她的贸易专利就会无效。所以李华梅沿途一般不在沿途各港口做交易。而是一路直航，以求能够在一年内多次往返，将尽量多的货物运到临高。。
+However, Li Huamei's Goa trade was a direct route—she did not trade along the way. The Australians' demand for goods was for a small variety but a large quantity. There were strict regulations on the annual delivery figures. In particular, for certain goods they needed, they required a minimum annual shipment, otherwise her trade patent would be invalid the following year. Therefore, Li Huamei generally did not trade in the ports along the way, but sailed directly in order to make multiple round trips within a year and transport as many goods as possible to Lingao.
 
-　　李华梅从临高出发前到博铺港殖民部办事处领取商品供销清单的时候，意外地见到了司凯德的女仆司蜜达。因为李华梅是元老院重要的商业伙伴，和殖民贸易部经常打交道，所以两人算是很熟。这次见司蜜达胖了很多。一脸幸福的笑容，穿着发式也变得邋里邋遢，已经明显鼓起的小腹明确的告诉众人她已经有了。
+When Li Huamei went to the Colonial Department office in Bopu Port to collect the list of goods for sale before departing from Lingao, she unexpectedly met Si Kaide's maid, Si Mida. Because Li Huamei was an important business partner of the Senate and often dealt with the Colonial and Trade Department, the two were quite familiar. This time, she saw that Si Mida had gained a lot of weight. With a happy smile on her face, her clothes and hairstyle had become sloppy, and her obviously bulging belly clearly told everyone that she was pregnant.
 
-　　怀孕的女仆自然不能跟着首长四处跑，就被司凯德安排到博铺的殖民部办事处做点文字工作，而且海边空气也好一点，海产品也更新鲜一些——多吃鱼对孕妇有很大的好处。
+A pregnant maid naturally could not follow the chief around, so Si Kaide arranged for her to do some clerical work at the Colonial Department office in Bopu. The air by the sea was also better, and the seafood was fresher—eating more fish was very good for pregnant women.
 
-　　接着司蜜达又叫来李千姬，三个女人一起吃饭聊天。李千姬是李海平的女仆。和司蜜达同期——女仆培训班第4期，她们的宿舍床号一个111，一个是113。原本关系就十分亲近。
+Then Si Mida called over Li Qianji, and the three women ate and chatted together. Li Qianji was Li Haiping's maid, and she was in the same period as Si Mida—the 4th class of the maid training class. Their dormitory bed numbers were 111 and 113, respectively. They were originally very close.
 
-　　由于元老们的恶趣味，在进行女仆登记的时候发现元老的女仆里有几十个李万机。于是办公厅明令禁止再使用这个名字。这些李万机之中有一个俊俏乖巧的最终就成了李海平的女仆。然后被改名为千姬——还有一些元老眼明手快改成了百姬、十姬和一姬的，其他人就只好和这个名字告别了。
+Due to the elders' wicked sense of humor, when registering the maids, they found that there were dozens of Li Wanjis among the elders' maids. So the General Office explicitly prohibited the use of this name. One of the beautiful and well-behaved Li Wanjis eventually became Li Haiping's maid and was renamed Qianji—some other elders were quick-witted and changed their maids' names to Baiji, Shiji, and Yiji. The others had to say goodbye to this name.
 
-　　李千姬跟去台湾后不久就发现怀了孕，于是也给打发回了临高。李海平是李华梅的首席粉丝，李千姬早就认识李华梅。作为一个受过严格后宫化训练的生活秘书，第一次见面干脆就直接把李华梅认作姐姐了。
+Not long after Li Qianji went to Taiwan, she found out she was pregnant, so she was also sent back to Lingao. Li Haiping was Li Huamei's number one fan, and Li Qianji had known Li Huamei for a long time. As a life secretary who had received strict harem-style training, she simply called Li Huamei her older sister at their first meeting.
 
-　　现在两个孕妇一起住在李海平在博铺的海军营地军官宿舍里——里面很空。院子里有食堂、洗衣房、卫生室，还有勤务员打扫，什么都不用操心，办公厅还特地向海军基地打了招呼，元老院的未来是压倒一切的政治任务……
+Now the two pregnant women were living together in Li Haiping's officer's quarters at the naval camp in Bopu—it was very empty inside. There was a canteen, a laundry room, and a clinic in the courtyard, and there were orderlies to clean, so there was nothing to worry about. The General Office had also specifically notified the naval base that the future of the Senate was an overriding political task...
 
-　　现在李华梅也记不得三个女人坐在一起说了什么，总之唯一留下的感觉就是深深的彻底不能摆脱的不爽，不论哪个时代，女人的嫉妒心基本上和自己男人的受欢迎程度成正比，和自己孩子的数量成反比。
+Now Li Huamei couldn't remember what the three women had talked about. In short, the only feeling that remained was a deep and completely inescapable sense of displeasure. In any era, a woman's jealousy is basically directly proportional to the popularity of her man and inversely proportional to the number of her children.
 
-　　三年前李华梅第一次和澳洲人接触的时候觉得男人只是一种动物，现在自己转眼已经26了——这在本时空是不折不扣的大龄剩女了。从镜子里看自己：脸蛋变圆润了，眼角已经有了细纹。当年被自己迷得团团转的澳洲蠢男人现在已经成了称霸中国海的大人物。
+Three years ago, when Li Huamei first came into contact with the Australians, she felt that men were just a kind of animal. Now she was 26 in a flash—in this time and space, she was an out-and-out old leftover woman. Looking at herself in the mirror: her face had become rounder, and there were fine lines at the corners of her eyes. The stupid Australian men who had been infatuated with her back then had now become big shots who dominated the China Sea.
 
-　　更糟糕的是，一帮比自己小将近十岁的小孩，居然要把孩子生在自己前面了。自己呢，比更糟糕还糟糕的是，自己的审美趣味不知不觉的也变成了细皮嫩肉，微胖，身材高大，满脸天真并且自信的笑容，头发不长……
+What was worse, a group of kids nearly ten years younger than her were actually going to have children before her. And as for herself, what was even worse than worse was that her aesthetic taste had unknowingly changed to fair skin, slightly plump, tall, with a naive and confident smile on her face, and not-so-long hair...
 
-　　这日子没法过了，妈的，好想有孩子啊……愤愤的合上日志本，收起蘸水笔和墨水，戴上草帽和蒙德送的墨镜，挎上弯刀，紧了紧腰带，走出船长室。
+This life was unbearable. Damn it, I really want to have a child... She angrily closed the logbook, put away the dip pen and ink, put on her straw hat and the sunglasses Monde had given her, slung her scimitar over her shoulder, tightened her belt, and walked out of the captain's cabin.
 
-　　“小姐，西北边那条船好像一直跟着我们。”
+"Miss, that ship to the northwest seems to have been following us."
 
-　　“多长时间了？”
+"For how long?"
 
-　　“昨天也看见过，晚上没看见灯光，今天又出现了。”
+"We saw it yesterday too. We didn't see any lights at night, but it appeared again today."
 
-　　“那条长船？”
+"That longship?"
 
-　　“对，今早上又离远了一点，正在靠近，如果各走各的，它应该早就超过我们了。”
+"Yes, it moved a little further away this morning and is now approaching. If we were going our separate ways, it should have passed us long ago."
 
-　　“嗯，右舵三，往远海走一走，如果跟上来就准备战斗，让大家赶快吃点东西，甭管熟没熟，然后把火熄了！”
+"Hmm, starboard three, let's head out to the open sea for a bit. If they follow, prepare for battle. Tell everyone to eat something quickly, whether it's cooked or not, and then put out the fire!"
 
-　　“是!”
+"Yes!"
 
-　　……
+...
 
-　　“小姐，那船跟上来了！”
+"Miss, that ship is following us!"
 
-　　“准备战斗！敲钟！左舵五，满帆！……阿邱，带你的人把锚链挂在船舷上！……卡洛斯，带你的人去打水撒沙子！……毛大，带你的人……”
+"Prepare for battle! Ring the bell! Port five, full sail! ... Ah Qiu, take your men and hang the anchor chains on the side of the ship! ... Carlos, take your men to fetch water and spread sand! ... Mao Da, take your men..."
 
-　　“奶奶的，哪个不开眼的居然打起老娘的主意了！”她咒骂了一声，……老……娘？……唉！
+"Damn it, which blind fool is actually trying to mess with me!" she cursed. ... Old... mother? ... Sigh!
 
-　　杭州号是一条150吨的小型双桅纵帆船，对方的船看起来有三四百吨的模样，三桅，船体修长，跟英国人船类似——应该是一种北欧式船型。这种船的速度比自己的船要快不少。现在还不知道是谁在驾驶，反正要抢劫是错不了的。
+The *Hangzhou* was a small 150-ton two-masted schooner. The other party's ship looked to be three or four hundred tons, with three masts and a slender hull, similar to an English ship—it should be a Northern European type of ship. This kind of ship was much faster than her own. It was not yet known who was driving it, but it was certain that they were going to rob them.
 
-　　海上开片这种事李华梅并不惧怕任何人——除了澳洲人那种会冒烟的大船，好在那些大冒烟船的船长都是自己的崇拜者，自己身上的行头有不少是这些人送的。
+Li Huamei was not afraid of anyone when it came to fighting at sea—except for the Australians' big ships that spewed smoke. Fortunately, the captains of those big smoke-spewing ships were all her admirers, and many of the things she wore were gifts from them.
 
-　　一边想着，李华梅一边摘下太阳镜收好，又把眼镜盒放进一个铁皮匣子里，不管怎么样，这样眼镜一定不能丢了，从铁皮匣子里拿出李海平送的两支德林格手枪装好子弹和火帽插在腰上。从墙上摘下殖民部司凯德送的巴顿剑多利，不知道为什么要叫“八盾”，据说日本人把他们的最厉害的武士叫平八郎，可是日本人不用这种直剑，多利又是怎么回事？司凯德说：送给李小姐的话就是“多利-八盾”了……
+While thinking, Li Huamei took off her sunglasses and put them away, then put the glasses case in a tin box. No matter what, these glasses must not be lost. She took out the two Deringer pistols that Li Haiping had given her from the tin box, loaded them with bullets and percussion caps, and stuck them in her belt. She took down the Patton sword that Si Kaide from the Colonial Department had given her from the wall. She didn't know why it was called "Eight Shields." It was said that the Japanese called their most powerful samurai Heihachiro, but the Japanese didn't use this kind of straight sword. And what was the deal with "Dori"? Si Kaide said, "If it's a gift for Miss Li, it's 'Dori-Eight Shields'..."
 
-　　回到尾楼上，敌船已经只有四五链了。
+Back on the quarterdeck, the enemy ship was only four or five chains away.
 
-　　“大炮装铁球弹，小炮装链弹，听我口令，准备转舵，准备敲战鼓……”
+"Load the cannons with iron balls, the small cannons with chain shot. On my command, prepare to turn the rudder, prepare to beat the war drums..."
 
-　　“哎……小的们！你们给我仔细的瞭望是哪家蠢货来送死的！第一个看清旗号的有赏！”李华梅头一脚踩在栏杆上鼓舞士气，一手拿着剑，曲线毕露，英姿飒爽，红色头巾就像一团火焰随风飘扬，这也是船员最巴不得看到的景色。
+"Hey... lads! Keep a close watch for me and see which fool is coming to die! The first one to see the flag clearly gets a reward!" Li Huamei put one foot on the railing to boost morale, holding a sword in one hand, her curves revealed, her heroic posture飒爽, her red headscarf fluttering in the wind like a flame. This was also the sight the crew most wanted to see.
 
-　　“赏什么？”
+"What's the reward?"
 
-　　“是啊，赏什么？”
+"Yeah, what's the reward?"
 
-　　“小姐亲一下！”
+"A kiss from the miss!"
 
-　　“亲我那玩意一下！”
+"A kiss on my thing!"
 
-　　“砰”的一声，说话的水手双腿之间的甲板上已经被打出了一个洞来。
+A "bang" sound, and a hole had been shot in the deck between the legs of the sailor who had spoken.
 
-　　“要亲可以，”李华梅吹了下枪口，“晚上切了下酒……”
+"A kiss is fine," Li Huamei blew on the muzzle of her gun. "Tonight, we'll cut it off and have it with wine..."
 
-　　人群中爆发出一阵哄笑……
+A burst of laughter erupted from the crowd...
 
-　　其实老船员也都有点纳闷，杭州号上悬挂着葡萄牙和澳宋两面旗，西班牙人和葡萄牙人自然不会攻击本国船，英国人正常来说也不会攻击打北极星旗的船，荷兰人过去说不好，但是现在他们肯定不会这么干，除非他们的东印度公司不想要香港的贸易了——这生意现在赚钱赚到葡萄牙人眼红的地步了。
+In fact, the old sailors were also a little puzzled. The *Hangzhou* was flying both the Portuguese and the Australian Song flags. The Spanish and Portuguese would naturally not attack their own ships. The English would normally not attack a ship flying the North Star flag. It was hard to say about the Dutch in the past, but now they certainly wouldn't do so, unless their East India Company didn't want the trade in Hong Kong anymore—this business was now so profitable that the Portuguese were green with envy.
 
-　　“小姐，看，敌舰升旗了。”
+"Miss, look, the enemy ship is raising its flag."
 
-　　“这什么旗?”
+"What flag is that?"
 
-　　“好像是丹麦，他们的东印度公司离这好像也就是100多里格。”
+"It looks like Denmark. Their East India Company is only about 100 leagues from here."
 
-　　“好像丹麦和陛下议和了吧？”
+"Didn't Denmark make peace with His Majesty?"
 
-　　“红毛子叫他们什么精海盗，说是自古就是海盗民族。”
+"The red-haired ones call them something like 'elite pirates,' saying they have been a pirate nation since ancient times."
 
-　　“自古以来就好使的话，还要大炮干什么！管它是白骨精还是狐狸精，送上门来就是咱的肥羊。”
+"If 'since ancient times' was so useful, what would we need cannons for! I don't care if it's a white-boned demon or a fox spirit, if it comes to our door, it's our fat sheep."
 
-　　“管他娘的蛋！准备开干！”
+"To hell with them! Get ready to fight!"
