--- a/_posts/2013-4-16-6-00300.md
+++ b/_posts/2013-4-16-6-00300.md
@@ -1,71 +1,71 @@
 ---
 layout: post
-title: 第三节 加勒堡
+title: "Section 3: Galle Fort"
 category: 6
 path: 2013-4-16-6-00300.md
 tag: [normal]
 ---
 
-　　在众多西方殖民者建立的东印度公司之中，有一个绝大多数人都会忽略的丹麦东印度公司，它建立与1616年，时间相当早，甚至比葡萄牙东印度公司还要早十几年，而且早在1620年就在印度次大陆东海岸的塔兰迦姆巴迪建立了一个小型殖民地，这时候葡萄牙人和英国人在印度的据点还都在次大陆西海岸。
+Among the many East India Companies established by Western colonists, there was a Danish East India Company that most people would overlook. It was established in 1616, quite early, even a dozen years earlier than the Portuguese East India Company. As early as 1620, it had established a small colony in Tharangambadi on the east coast of the Indian subcontinent. At that time, the Portuguese and British strongholds in India were still on the west coast of the subcontinent.
 
-　　不过此后的一百年里丹麦东印度公司的成就也就限于此了，由于不久前和不久后两次参与三十年战争都遭到惨败，之后又被崛起的瑞典持续殴打了近半个世纪，夺走了全部斯堪的纳维亚领土，国力日渐衰败。
+However, in the following hundred years, the achievements of the Danish East India Company were limited to this. Due to its disastrous defeats in the Thirty Years' War shortly before and after, and then being continuously beaten by the rising Sweden for nearly half a century, losing all its Scandinavian territories, its national strength gradually declined.
 
-　　不过眼下，丹麦血管里的维京基因还经常发飙，两次参与三十年战争并且和瑞典人结下梁子就是这种不理智行为的后果。现在维京病发作的是一艘特许商船“格里芬号”的船长特勒尔丁·维斯赫伊。昨天他在考虑是否应该挂起正和神圣罗马帝国交战的瑞典旗帜，不过又觉得传出去于自己名声不好，干脆一直跟踪到看不见陆地再发起进攻，这个考虑的潜台词是对不留活口有完全的信心。
+However, at this moment, the Viking genes in the Danish blood still often flared up. The two participations in the Thirty Years' War and the feud with the Swedes were the consequences of this irrational behavior. Now, the Viking disease was afflicting the captain of a chartered merchant ship, the *Griffin*, Trelleborg Visby. Yesterday, he was considering whether he should fly the Swedish flag, which was at war with the Holy Roman Empire, but he felt that it would be bad for his reputation if it got out. So he simply followed until he could no longer see land before launching an attack. The subtext of this consideration was that he had complete confidence in not leaving any survivors.
 
-　　不管怎么样，维斯赫伊知道自己的船要比对手大的多，而且西北欧国家的船型细长，拥有更快的速度和更多的甲板炮，就算路上闹了一场莫名其妙的流行病，丢下了几十具尸体喂鲨鱼，他现在能跳帮战斗的水手也远远多过对手。不过他并不知道自己的对手是一个女人，不但比自己年轻很多。而且对胜利怀有更充分的信心。而且那个女人有一伙维斯赫伊做梦没想象过的雇主。
+In any case, Visby knew that his ship was much larger than his opponent's, and the slender hull of the ships from northwestern Europe had faster speed and more deck guns. Even though there was a strange epidemic on the way, and dozens of bodies were thrown to the sharks, he now had far more sailors who could board and fight than his opponent. However, he did not know that his opponent was a woman, much younger than him, and had more confidence in victory. And that woman had a group of employers that Visby had never dreamed of.
 
-　　在经过多年的贸易交往之后，这个女人从那些商业伙伴手里弄到了一些本来不该出现在本时空的武器。杭州号有8门12磅长炮身加农炮：2门在船首炮甲板，2门在底舱甲板后部。4门在尾楼炮甲板，这些炮都是临高自己淘汰的熟铁炮，高价卖给友善中立的的商业伙伴。
+After many years of trade, this woman had obtained some weapons from those business partners that should not have appeared in this time and space. The *Hangzhou* had 8 12-pounder long-barreled cannons: 2 on the forecastle gun deck, 2 in the rear of the hold deck, and 4 on the quarterdeck gun deck. These cannons were all wrought iron cannons that Lingao had phased out and sold at a high price to friendly and neutral business partners.
 
-　　要不是李华梅在海军中拥有一票粉丝，加上她为临高运来了大量急需的货物。在对外情报局成立之后，还提供了大量果阿等地欧洲殖民者和当地土王的经济政治情报，被列为相当有用的合作者才获得企划院的批准的。
+If it weren't for the fact that Li Huamei had a group of fans in the navy, and that she had transported a large amount of urgently needed goods for Lingao, and after the establishment of the Foreign Intelligence Bureau, she had also provided a large amount of economic and political intelligence on European colonists and local chieftains in Goa and other places, and was listed as a very useful collaborator, she would not have obtained the approval of the Planning Institute.
 
-　　海风呼啸，船帆猎猎。维斯赫伊船长的格里芬号正在全速前进，李梅华已经清楚的看到船头的狮鹫雕像了，凭着多年的海盗经验。接下来的整个动态作战态势图已经清晰的显现在了她脑子里。
+The sea wind howled, and the sails flapped. Captain Visby's *Griffin* was advancing at full speed. Li Huamei could already clearly see the griffin statue on the bow. With her years of experience as a pirate, the entire dynamic combat situation map had already clearly appeared in her mind.
 
-　　“弟兄们，点燃火绳！”她拔出佩剑，“升起红旗！”
+"Brothers, light the fuses!" she drew her sword. "Raise the red flag!"
 
-　　战斗短促而激烈，但是不出李华梅的预料。在她的火力优势之下。格里芬号的速度优势没有给特勒尔丁·维斯赫伊船长带来太多的好处，接二连三的炮弹就摧毁了格里芬号的炮火和帆缆系统，杀伤了甲板上大多数水手。
+The battle was short and fierce, but it was not beyond Li Huamei's expectations. Under her firepower advantage, the *Griffin*'s speed advantage did not bring Captain Trelleborg Visby much benefit. One after another, cannonballs destroyed the *Griffin*'s artillery and rigging systems, and killed most of the sailors on deck.
 
-　　当李华梅带着人冲杀上格里芬号的甲板，如同秋风扫落叶，砍瓜切菜一般的屠杀丹麦人的时候，维斯赫伊船长才发觉自己选择了一个多么不合适的目标，当明晃晃的巴顿剑逼过来的瞬间，维斯赫伊船长立刻做出了一个最合适的选择：
+When Li Huamei led her men to charge onto the deck of the *Griffin*, like an autumn wind sweeping away fallen leaves, slaughtering the Danes like cutting melons and vegetables, Captain Visby realized what an inappropriate target he had chosen. The moment the gleaming Patton sword approached, Captain Visby immediately made the most appropriate choice:
 
-　　他把佩剑丢到了甲板上。举起了双手：“我投降！”他用德语喊着——这年头在海上，德语算是一种半通用的语言。
+He threw his sword onto the deck and raised his hands. "I surrender!" he shouted in German—at that time, German was a semi-universal language at sea.
 
-　　巴顿剑的剑尖及时的收住了——距离维斯赫伊船长的喉咙还有0.001公分的距离。
+The tip of the Patton sword stopped in time—it was 0.001 centimeters away from Captain Visby's throat.
 
-　　“好吧。我接受你的投降。”这个女人傲慢的说道，“现在您和您的船和货物都是我的了……”
+"Alright. I accept your surrender," the woman said arrogantly. "Now you, your ship, and your cargo are all mine..."
 
-　　“愿为您效劳……”维斯赫伊垂头丧气的说着，有些“黑色幽默”地说道。这年头，在海上打劫失败的下场是悲惨的：水手还能改换门庭，自己则很有可能马上就会在桅杆上荡秋千。
+"At your service..." Visby said dejectedly, with a bit of "black humor." In those days, the fate of a failed robbery at sea was tragic: the sailors could still change their allegiance, but he himself was very likely to be swinging from the mast soon.
 
-　　按照李华梅过去的脾气，维斯赫伊这样敢于主动打劫她的船只的货色，抓到之后要么走跳板要么荡秋千，最起码也得拖龙骨，总之都是不得好死。不过这会不知怎么的她的心肠开始变软了。
+According to Li Huamei's past temper, a character like Visby who dared to actively rob her ship would either walk the plank or swing from the mast after being caught. At the very least, he would be keel-hauled. In short, he would not have a good end. But for some reason, her heart began to soften.
 
-　　李家姐妹作为一个只有两条船不到三百人的小海盗团伙，能在南海和印度洋生存这么久，已经充分说明了她们的实力，更何况现在李华梅个人背后还有穿越集团一点点善意。
+As a small pirate group with only two ships and less than three hundred people, the Li sisters had survived in the South China Sea and the Indian Ocean for so long, which fully demonstrated their strength. What's more, now Li Huamei personally had a little bit of goodwill from the transmigrator group behind her.
 
-　　别看这点小小的善意，这几年来李华梅愈发发觉这点善意表现出来的强悍实力——她已经愈来愈离不开元老院了。
+Don't underestimate this little bit of goodwill. In the past few years, Li Huamei had increasingly discovered the powerful strength that this goodwill represented—she was becoming more and more inseparable from the Senate.
 
-　　“要不是为了小姐和姐姐，真不如跟澳洲人混了。”李华梅暗想着，想到自己其实还是去当卧底，不由得十分气馁。
+"If it weren't for my sister and me, I might as well have joined the Australians," Li Huamei thought to herself. Thinking that she was actually going to be an undercover agent, she couldn't help but feel very discouraged.
 
-　　她拎着弯刀，一脚踢开船长室的门，开始搜索战利品，任何一条船上最值钱的东西总是放在船长室，除非装了成吨金银的西班牙运金船。
+She carried her scimitar, kicked open the door of the captain's cabin, and began to search for spoils. The most valuable things on any ship were always in the captain's cabin, unless it was a Spanish treasure ship loaded with tons of gold and silver.
 
-　　很快搜索完成，船长室里搜出一口袋金币和一些金首饰，算不上很多，弹药库里锁着二个小酒桶，撬开之后里面装得都是银币，大概有三四千银塔勒——本时空欧洲船到东方都是空着去满着回，一般都要携带大量现金。另外从俘虏身上也搜出不少零散的金银币。
+The search was quickly completed. A bag of gold coins and some gold jewelry were found in the captain's cabin, which was not much. Two small barrels were locked in the ammunition depot. After prying them open, they were found to be filled with silver coins, about three or four thousand silver thalers—in this time and space, European ships went to the East empty and returned full, so they generally had to carry a large amount of cash. In addition, a lot of scattered gold and silver coins were also found on the prisoners.
 
-　　船上的货物有一些皮货和武器。皮货在印度没啥市场，主要是转口的，武器大概是给塔兰迦姆巴迪殖民地自用，或者卖给当地土著。除此以外最大一批战利品居然是——人。
+The cargo on the ship included some furs and weapons. Furs had no market in India and were mainly for re-export. The weapons were probably for the use of the Tharangambadi colony or sold to the local natives. In addition, the largest batch of spoils was actually—people.
 
-　　首先从底舱里押出一个欧洲男人和几个黄毛女人，他自我介绍叫弗雷德里克·威尔斯里·卡尔森，是一个路德教牧师，那几个女人有一个是他老婆，其它是他的教会收留的战争寡妇遗孤和之前在德意志打仗时候“解放”的旧教修女，本来有十几个，路上死了一半，现在还剩6个。由于新教没有修女这个职业，而这些旧教修女和寡妇遗孤也没有别的生活能力，早晚会沦为妓女，卡尔森牧师所在的哥本哈根教会就决定让他去殖民地传教，顺便把这些女人带去殖民地讨生活——所谓讨生活就是嫁给当地单身的欧洲殖民者。
+First, a European man and several blond women were brought out from the hold. He introduced himself as Frederick Wellesley Carlson, a Lutheran pastor. One of the women was his wife, and the others were war widows and orphans taken in by his church, as well as some Catholic nuns who had been "liberated" during the war in Germany. There were originally more than a dozen, but half of them died on the way, and now there were only 6 left. Since Protestantism did not have the profession of a nun, and these Catholic nuns and widows and orphans had no other means of livelihood and would sooner or later become prostitutes, the Copenhagen church where Pastor Carlson belonged decided to let him go to the colony to preach and take these women to the colony to make a living—the so-called making a living was to marry the single European colonists there.
 
-　　根据船上其它俘虏招供，特勒尔丁·维斯赫伊船长愿意带上这些女人是想到殖民地卖掉大赚一笔，至于是给总督当仆人还是给哪个王公当小妾那就不是他的事了，反正到了印度一个牧师也没处讲理去。既然是商品，这些女人一路上被锁在底舱里，居然没有受到任何侵犯。
+According to the confessions of other prisoners on the ship, Captain Trelleborg Visby was willing to take these women because he wanted to sell them in the colony for a large profit. As for whether they would become servants to the governor or concubines to some prince, that was not his business. Anyway, a pastor had no place to reason in India. Since they were commodities, these women were locked in the hold all the way and were not violated in any way.
 
-　　接下来押上来的是维斯赫伊从阿曼抢劫的阿拉伯船掠到的一批奴隶，也关在底舱里，男女黑白都有，足足有二十几个。那些女人基本上被糟蹋的爬都爬不动了，男人也好不到哪去。李华梅知道澳洲人对白种女人有特殊的兴趣，大概可以卖一笔好价钱，那些阿拉伯人的奴隶大概还有三四个能活着带回临高去，剩下的只能去锡兰卖掉，另外自己的船和掠来的船也需要修理。
+Next to be brought up were a group of slaves that Visby had plundered from an Arab ship he had robbed in Oman. They were also locked in the hold, men and women, black and white, a full twenty or so. The women were basically so abused that they could barely crawl, and the men were not much better. Li Huamei knew that the Australians had a special interest in white women, and they could probably be sold for a good price. About three or four of the Arab slaves could probably be brought back to Lingao alive. The rest could only be sold in Ceylon. In addition, her own ship and the captured ship also needed repairs.
 
-　　经过彻底解除武装和简单处理之后，两条船缓缓的向锡兰岛南部的加勒港方向驶去。
+After being completely disarmed and briefly dealt with, the two ships slowly sailed towards the port of Galle in the south of Ceylon.
 
-　　受伤的格里芬号速度慢了很多，一直到第二天黎明才到达加勒附近，海面上点缀着星星点点的渔船，海鸥啾啾叫着在渔帆间穿梭，一大群回巢的狐蝠悄无声息的飞过杭州号和格里芬号。
+The injured *Griffin* was much slower, and it was not until dawn the next day that it reached the vicinity of Galle. The sea was dotted with fishing boats, and seagulls chirped as they flew between the fishing sails. A large flock of fruit bats returning to their nests flew silently over the *Hangzhou* and the *Griffin*.
 
-　　加勒是葡萄牙人在锡兰岛西南部控制下的贸易殖民地，距离旧时空的科伦坡南部大约100公里处，正好处于印度洋的海滨上。加勒老城及其城堡建筑在岩石半岛上，这个半岛是个天然的港口，由于大量珊瑚礁的出现，港口的入口处变得极其错综复杂。
+Galle was a trading colony controlled by the Portuguese in the southwest of Ceylon, about 100 kilometers south of Colombo in the old time and space, right on the coast of the Indian Ocean. The old city of Galle and its fortress were built on a rocky peninsula, which was a natural harbor. Due to the presence of a large number of coral reefs, the entrance to the harbor was extremely complex.
 
-　　14世纪的时候加勒已经是锡兰岛上最为活跃的港口之一。1505年，葡萄牙人开始定居于该岛，1507年，他们在加勒建立起交易站，并建造了圣克罗伊的小型城堡。
+In the 14th century, Galle was already one of the most active ports on the island of Ceylon. In 1505, the Portuguese began to settle on the island. In 1507, they established a trading post in Galle and built the small fort of Santa Cruz.
 
-　　李华梅和李思雅都去过无数次，不过因为去年和当地人发生了一些争斗，本来这次是想避开的，现在看是不可能避开了。
+Li Huamei and Li Siya had both been there countless times, but because of some disputes with the locals last year, they had originally wanted to avoid it this time. Now it seemed impossible to avoid it.
 
-　　上次的事没出人命，无非是花点钱肯定能摆平，修船也要钱。自己除了掠到的金银，抓的俘虏里有些有身份的人，可以卖给加勒总督——总督大人是很乐意向塔兰迦姆巴迪的丹麦同行勒索赎金的，无非是需要花点时间。
+No one was killed in the last incident, so it was nothing more than spending some money to settle it. Repairing the ship also cost money. In addition to the gold and silver she had plundered, some of the prisoners she had captured had status and could be sold to the governor of Galle—His Excellency the Governor would be very happy to extort a ransom from his Danish counterparts in Tharangambadi. It would just take some time.
 
-　　这位总督在这个小小的殖民地里几乎什么也不干：葡萄牙人善于圈占殖民地，却不善于经营。天气炎热固然是一个问题，不过伊比利亚半岛的居民似乎天性懒散也是一个原因。锡兰岛在荷兰人和英国人手中完成了全岛征服和开发，葡萄牙人却没留下什么痕迹。后来成为联合国文化遗产的加勒古堡是后来荷兰人夺取锡兰之后修建的，建筑面积达35万平方米。眼下的加勒堡垒只是在半岛北侧靠近地峡的地方建立的一道城墙和1625年受到荷兰人威胁之后增建的三座堡垒。
+This governor did almost nothing in this small colony: the Portuguese were good at enclosing colonies, but not good at managing them. The hot weather was certainly a problem, but the seemingly innate laziness of the inhabitants of the Iberian Peninsula was also a reason. The conquest and development of the entire island of Ceylon was completed by the Dutch and the British, but the Portuguese left little trace. The Galle Fort, which later became a UNESCO World Heritage Site, was built by the Dutch after they captured Ceylon, with a building area of 350,000 square meters. The current Galle Fort was just a wall built on the north side of the peninsula near the isthmus and three forts added in 1625 after being threatened by the Dutch.
 
-　　不过这三座堡垒只能对付当时技术水平下的海上攻击。即便在杭州号的火力面前也撑不了太久，实在看不出来葡萄牙人已经在此经营了120多年。
+However, these three forts could only deal with sea attacks at the technological level of the time. Even in the face of the firepower of the *Hangzhou*, they would not last long. It was really hard to see that the Portuguese had been operating here for more than 120 years.
